fix：（GitHub demo）多语言文件更新

--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "silný";
 "AA0030" = "Hesla jsou nekonzistentní";
 "AA0031" = "Načíst heslo";
-"AA0032" = "Prosím, zadejte reoqoo ID";
+"AA0032" = "Prosím, zadejte ID";
 "AA0033" = "Účet neexistuje";
 "AA0034" = "Zadejte ověřovací kód";
 "AA0035" = "Ověřovací kód byl zaslán na adresu";
@@ -62,16 +62,16 @@
 "AA0062" = "Skenovat tělo zařízení QR kód a přidat zařízení";
 "AA0063" = "baterka";
 "AA0064" = "Fotoalbum";
-"AA0065" = "reoqoo chce použít váš fotoaparát";
+"AA0065" = "APP chce použít váš fotoaparát";
 "AA0066" = "Je potřeba naskenovat QR kód pro připojení a vázat zařízení. Je povoleno otevřít fotoaparát?";
 "AA0067" = "Odmítnout";
 "AA0068" = "Žádné oprávnění fotoaparátu, povolte to prosím v Nastavení y, povolte v nastavení";
-"AA0069" = "reoqoo chce použít informace o vaší poloze";
+"AA0069" = "APP chce použít informace o vaší poloze";
 "AA0070" = "Chcete-li úspěšně přidán zařízení, je třeba umožnit využívání služby určování polohy pro získávání informací o Wi-Fi.Prosím, zapněte služby určování polohy.";
 "AA0071" = "Žádné oprávnění k umístění, povolte to prosím v nastavení";
-"AA0072" = "Umožňujete reoqoo používat informace o vašem albu?";
+"AA0072" = "Umožňujete APP používat informace o vašem albu?";
 "AA0073" = "Potřebujete prohlížet a odesílat obrázky. Je povoleno otevřít album?";
-"AA0074" = "Umožňujete reoqoo používat vaše Bluetooth informace?";
+"AA0074" = "Umožňujete APP používat vaše Bluetooth informace?";
 "AA0075" = "Pro pomoc chytrým zařízením připojení k Wi-Fi během procesu přidávání je vyžadováno oprávnění Bluetooth.";
 "AA0076" = "Žádné oprávnění Bluetooth, povolte to prosím v nastavení";
 "AA0077" = "Řídili jste se výše uvedenými pokyny pro obsluhu zařízení?";
@@ -146,7 +146,7 @@
 "AA0146" = "Maximální možný počet návštěvníků je X, pokud chcete pokračovat ve sdílení s dalšími, odstraňte některé stávající návštěvníky.";
 "AA0147" = "Správa sdílení";
 "AA0148" = "Zadejte účet reoqoo, se kterým chcete zařízení sdílet";
-"AA0149" = "Prosím zadejte účet reoqoo";
+"AA0149" = "Prosím, zadejte ID";
 "AA0150" = "Nedávno sdílené";
 "AA0151" = "Sdílení tváří v tvář";
 "AA0152" = "Sdílet";
@@ -155,7 +155,7 @@
 "AA0155" = "Byl sdílen s tímto přítelem";
 "AA0156" = "Sdílení proběhlo úspěšně";
 "AA0157" = "Datum platnosti";
-"AA0158" = "Pomocí aplikace reoqoo skenujte výše uvedený QR kód a sdílejte zařízení";
+"AA0158" = "Pomocí aplikace APP skenujte výše uvedený QR kód a sdílejte zařízení";
 "AA0159" = "Přátelé již sdíleli";
 "AA0160" = "Získání QR kódu selhalo, klikněte na obnovit";
 "AA0161" = "%@ s vámi sdílí zařízení";
@@ -224,7 +224,7 @@
 "AA0224" = "O reoqoo";
 "AA0225" = "Centrum oznámení";
 "AA0226" = "Operace byla úspěšná";
-"AA0227" = "Zapněte oprávnění k oznámení aplikace Youkanto, abyste mohli včas dostávat nejnovější zprávy";
+"AA0227" = "Zapněte oprávnění k oznámení aplikace %@, abyste mohli včas dostávat nejnovější zprávy";
 "AA0228" = "Žádné další zprávy";
 "AA0229" = "Žádné screenshot nebo video";
 "AA0230" = "Vybrat";
@@ -545,13 +545,13 @@
 "AA0546" = "fotoaparát";
 "AA0547" = "foto";
 "AA0548" = "Video";
-"AA0549" = "reoqoo vyžaduje vaše souhlas s udělením přístupu k albu pro použití funkce skenování QR kódů";
-"AA0550" = "reoqoo vyžaduje vaše svolení k autorizaci použití alba za účelem uložení QR kódu zařízení do systémového alba";
-"AA0551" = "reoqoo vyžaduje vaše svolení k autorizaci použití kamery pro použití funkce skenování QR kódu";
-"AA0552" = "reoqoo vyžaduje vaše svolení k autorizaci oprávnění k použití Bluetooth pro přístup k zařízením Bluetooth";
-"AA0553" = "reoqoo vyžaduje vaše svolení k použití mikrofonu pro použití funkce interkomu";
-"AA0554" = "reoqoo vyžaduje vaše oprávnění k autorizaci přístupu k lokální síti pro připojení zařízení";
-"AA0555" = "reoqoo vyžaduje vaše svolení k autorizaci funkce push pro přijímání push oznámení zařízení";
+"AA0549" = "APP vyžaduje vaše souhlas s udělením přístupu k albu pro použití funkce skenování QR kódů";
+"AA0550" = "APP vyžaduje vaše svolení k autorizaci použití alba za účelem uložení QR kódu zařízení do systémového alba";
+"AA0551" = "APP vyžaduje vaše svolení k autorizaci použití kamery pro použití funkce skenování QR kódu";
+"AA0552" = "APP vyžaduje vaše svolení k autorizaci oprávnění k použití Bluetooth pro přístup k zařízením Bluetooth";
+"AA0553" = "APP vyžaduje vaše svolení k použití mikrofonu pro použití funkce interkomu";
+"AA0554" = "APP vyžaduje vaše oprávnění k autorizaci přístupu k lokální síti pro připojení zařízení";
+"AA0555" = "APP vyžaduje vaše svolení k autorizaci funkce push pro přijímání push oznámení zařízení";
 "AA0556" = "ID zařízení:";
 "AA0557" = "Žádné oprávnění k přístupu k lokálním zařízením LAN, povolte to prosím v nastavení";
 "AA0558" = "Nepodařilo se vytvořit QR kód zařízení";
@@ -606,13 +606,13 @@
 "AA0607" = "Snadno přesně lokalizovat problémy";
 "AA0608" = "Aspoň deset slov";
 "AA0609" = "Navštivte více";
-"AA0610" = "reoqoo má přístup pouze k některým fotografiím v albu. Doporučujeme povolit přístup k \"všem fotografiím\". Klikněte pro nastavení";
-"AA0611" = "reoqoo nemá přístup k albu, klikněte pro nastavení";
+"AA0610" = "APP má přístup pouze k některým fotografiím v albu. Doporučujeme povolit přístup k \"všem fotografiím\". Klikněte pro nastavení";
+"AA0611" = "APP nemá přístup k albu, klikněte pro nastavení";
 "AA0612" = "Uveďte prosím podrobný popis svých návrhů nebo problémů";
 "AA0613" = "Nastavení odesílání zpráv";
 "AA0614" = "Nastavení systémových oprávnění";
 "AA0615" = "Oznámení push zprávy";
-"AA0616" = "Po aktivaci můžete okamžitě dostávat nejnovější aktualizace aplikace reoqoo";
+"AA0616" = "Po aktivaci můžete okamžitě dostávat nejnovější aktualizace aplikace APP";
 "AA0617" = "Přejít autorizovat";
 "AA0618" = "Otevřeno";
 "AA0619" = "poloha";
@@ -629,7 +629,7 @@
 "AA0630" = "Po aktivaci lze použít funkci přehrávání malého okna monitorovacího videa a zavěšený monitorovací zvonek";
 "AA0631" = "Vyskakující rozhraní na pozadí";
 "AA0632" = "Po aktivaci můžete obdržet včasná oznámení od zvonu pečovatele";
-"AA0633" = "Abychom vám mohli poskytnout lepší uživatelské zkušenosti, reoqoo od vás požádá o následující oprávnění mobilního systému v konkrétních scénářích";
+"AA0633" = "Abychom vám mohli poskytnout lepší uživatelské zkušenosti, APP od vás požádá o následující oprávnění mobilního systému v konkrétních scénářích";
 "AA0634" = "Povolené";
 "AA0635" = "Neoprávněné";
 "AA0636" = "Místní síť";
@@ -660,5 +660,29 @@
 "AA0663" = "Stáhněte si aplikaci \"Xiaotun Cloud\", abyste mohli dále používat";
 "AA0664" = "Nepřipomínat Znovu";
 "AA0665" = "O";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Zadejte účet";
+"AA0670" = "Uživatelská smlouva a Zásady ochrany osobních údajů";
+"AA0671" = "Vítejte v Xiaotun! Xiaotun je vyvíjen a provozován společností reoqoo IoT Technology Co., Ltd. (dále jen \"my\"). Můžete použít Xiaotun ke správě a používání chytrých kamer.";
+"AA0672" = "Před použitím Xiaotun si prosím přečtěte a plně pochopte \"%@\" a \"%@\", abyste pochopili naše služby a jak shromažďujeme a zpracováváme vaše osobní údaje během poskytování služby.";
+"AA0673" = "Pokud souhlasíte s výše uvedenou smlouvou, klikněte na \"Souhlasím\", abyste mohli začít používat Xiaotun.";
+"AA0674" = "Nezletilí musí přečíst text výše uvedené smlouvy v doprovodu zákonného zástupce a používat Xiaotun s jeho souhlasem a za jeho přítomnosti.";
+"AA0675" = "Své osobní údaje můžete spravovat na stránce 'Já'. Budeme chránit vaše osobní údaje v souladu s průmyslovými standardy bezpečnostní technologie.";
+"AA0676" = "Během používání můžeme také požádat o následující oprávnění: Bluetooth, Poloha, Kamera, Fotoknihovna, Úložiště, Mikrofon, Informace o zařízení, Lokální síť, Kalendář, Oznámení. Nastavení oprávnění můžete kdykoli upravit v správě oprávnění.";
+"AA0677" = "Vážený uživateli, abychom lépe chránili vaše osobní práva, aktualizovali jsme %@ v souladu s nejnovějšími zákony a předpisy a našimi obchodními praktikami. Proto vám zasíláme toto oznámení.\nPřed použitím si jej prosím pečlivě přečtěte. Kliknutím na tlačítko Souhlasíte vyjadřujete, že jste si přečetli a pochopili aktualizované podmínky a souhlasíte s aktualizovanou politikou. Budeme zpracovávat vaše osobní údaje a poskytovat vám služby na základě vašeho pověření a souhlasu.\n\nPokud máte nějaké dotazy, kontaktujte nás:\nE-mail: %@";
+"AA0678" = "Vítejte v reoqoo! reoqoo je vyvíjeno a provozováno společností reoqoo IoT Technology Co., Ltd. (dále jen „my“). Můžete používat a spravovat chytré kamery prostřednictvím reoqoo.";
+"AA0679" = "Před použitím reoqoo si prosím přečtěte a plně pochopte 《%@》 a 《%@》, abyste pochopili naše služby a jak shromažďujeme a zpracováváme vaše osobní údaje během služby.";
+"AA0680" = "Pokud souhlasíte s výše uvedenou smlouvou, klikněte na \"Souhlasím\", abyste mohli začít používat reoqoo.";
+"AA0681" = "Nezletilí musí přečíst výše uvedený text smlouvy v doprovodu zákonného zástupce a používat reoqoo se souhlasem a v doprovodu zákonného zástupce.";
+"AA0682" = "Nesouhlasit a ukončit aplikaci";
+"AA0683" = "Připomenutí Aktualizace Smlouvy";
+"AA0684" = "Uživatelská smlouva kamery";
+"AA0685" = "Vítejte při používání %@! %@ je vyvíjeno a provozováno společností %@ (dále jen \"my\"). Můžete používat a spravovat inteligentní kamery prostřednictvím %@. \nPřed použitím %@ si prosím pečlivě přečtěte a plně pochopte %@%@, abyste pochopili naše služby, jakož i shromažďování a zpracování vašich osobních údajů během poskytování služeb. \nPokud souhlasíte s výše uvedeným textem smlouvy, klikněte na \"Souhlasím\", abyste začali používat %@. \nNezletilí musí přečíst výše uvedený text smlouvy v doprovodu zákonného zástupce a používat %@ se souhlasem a v doprovodu zákonného zástupce. Vaše osobní údaje budeme chránit v souladu s průmyslovými standardy technologické bezpečnosti.";
+"AA0686" = "Zadejte telefonní číslo nebo e-mailovou adresu";
+"AA0687" = "Zadejte telefonní číslo nebo e-mailovou adresu";
+"AA0688" = "Zadejte účet %@, se kterým chcete zařízení sdílet";
+"AA0689" = "Zkuste následující operace a zkuste to znovu:\n1. Stiskněte a podržte tlačítko reset, abyste zařízení resetovali;\n2. Zkontrolujte, zda je zařízení připojeno k napájení;\n3. Zkontrolujte, zda je anténa zařízení uvolněná;\n4. Ujistěte se, že aktuální komunikace 4G signálu je normální.";
+"AA0690" = "Fotoaparát je příliš nízká, upgrade ve stavu elektřiny ~";
+"AA0691" = "Při použití sítě bez WLAN budou přehrávání účtovány dopravní poplatky";
+"AA0692" = "Viz%@";
+"AA0693" = "Aplikace chce použít vaše úložiště";
