--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/de.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/de.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Stark";
 "AA0030" = "Die beiden Eingaben stimmen nicht überein";
 "AA0031" = "Passtwort finden";
-"AA0032" = "Bitte geben Sie reoqoo ID";
+"AA0032" = "Bitte geben Sie ID";
 "AA0033" = "Konto existiert nicht";
 "AA0034" = "Geben Sie bitte den Bestätigungscode ein";
 "AA0035" = "Der Verifizierungscode wurde gesendet an";
@@ -61,16 +61,16 @@
 "AA0062" = "QR-Code am Gerät scannen um hinzuzufügen";
 "AA0063" = "Taschenlampe";
 "AA0064" = "Fotoalbum";
-"AA0065" = "reoqoo will deine Kamera benutzen";
+"AA0065" = "APP will deine Kamera benutzen";
 "AA0066" = "Sie müssen den QR-Code scannen, um das Gerät anzuschließen und zu verbinden. Ist es erlaubt, die Kamera zu öffnen?";
 "AA0067" = "Ablehnen";
 "AA0068" = "Keine Kameraerlaubnis, bitte in den Einstellungen aktivieren";
-"AA0069" = "reoqoo möchte Ihre Standortinformationen verwenden";
+"AA0069" = "APP möchte Ihre Standortinformationen verwenden";
 "AA0070" = "Um erfolgreich hinzugefügt Ausrüstung, müssen Sie die Nutzung der Ortungsdienste ermöglichen bekommen Wi-Fi Informationen. Bitte schalten Sie Location Services.";
 "AA0071" = "Keine Standortberechtigung, bitte in den Einstellungen aktivieren";
-"AA0072" = "Möchte reoqoo auf Ihre Fotoalben zugreifen?";
+"AA0072" = "Möchte APP auf Ihre Fotoalben zugreifen?";
 "AA0073" = "Sie benötigen um das Bild anzuzeigen und zu senden. Ist es erlaubt, das Album zu öffnen?";
-"AA0074" = "Möchte reoqoo Ihre Bluetooth-Informationen verwenden?";
+"AA0074" = "Möchte APP Ihre Bluetooth-Informationen verwenden?";
 "AA0075" = "Bluetooth-Berechtigungen erforderlich, um intelligenten Geräten bei der Verbindung mit WLAN während des Hinzufügens zu helfen. Erlauben?";
 "AA0076" = "Keine Bluetooth-Berechtigung, bitte in den Einstellungen aktivieren";
 "AA0077" = "Haben Sie das Gerät gemäß den Anweisungen eingerichtet?";
@@ -145,7 +145,7 @@
 "AA0146" = "Sie können höchstens X Besucher addieren, wenn Sie mit weiteren Personen teilen möchten, sollten Sie zuerst einige Besucher löschen!";
 "AA0147" = "Teilungsmanagement";
 "AA0148" = "Geben Sie das reoqoo-Konto zur Gerätenutzung ein";
-"AA0149" = "Bitte geben Sie das reoqoo-Konto ein";
+"AA0149" = "Bitte geben Sie ID";
 "AA0150" = "Zuletzt geteilt";
 "AA0151" = "Face-to-Face teilen";
 "AA0152" = "Teilen";
@@ -154,7 +154,7 @@
 "AA0155" = "Bereits mit diesem Freund geteilt";
 "AA0156" = "Erfolgreich geteilt";
 "AA0157" = "Gültig bis";
-"AA0158" = "Scannen Sie den oben genannten QR-Code mit der reoqoo APP, um das Gerät zu teilen";
+"AA0158" = "Scannen Sie den oben genannten QR-Code mit der APP, um das Gerät zu teilen";
 "AA0159" = "Gemeinschafts-Freunde";
 "AA0160" = "QR-Code konnte nicht abgerufen werden, klicken Sie, um zu aktualisieren";
 "AA0161" = "%@ hat ein Gerät für Sie eingeteilt";
@@ -223,7 +223,7 @@
 "AA0224" = "Über reoqoo";
 "AA0225" = "Nachrichtenzentrum";
 "AA0226" = "Erfolgreich eingegeben";
-"AA0227" = "Berechtigung zum Erhalt der neusten Nachrichten  über die App reoqoo aktivieren";
+"AA0227" = "Berechtigung zum Erhalt der neusten Nachrichten  über die App %@ aktivieren";
 "AA0228" = "Keine weiteren Nachrichten";
 "AA0229" = "Kein Screenshot oder Video";
 "AA0230" = "wählen";
@@ -539,17 +539,17 @@
 "AA0542" = "Download fehlgeschlagen, bitte Netzwerkverbindung des Geräts prüfen und erneut versuchen";
 "AA0543" = "Aktualisierung fehlgeschlagen, bitte Gerät neu starten und erneut versuchen";
 "AA0544" = "Wird aktualisiert...";
-"AA0545" = "Ich habe die reoqoo-Nutzungsvereinbarung und die Datenschutzerklärung gelesen und stimme ihnen zu";
+"AA0545" = "Ich habe die Nutzungsvereinbarung und die Datenschutzerklärung gelesen und stimme ihnen zu";
 "AA0546" = "Eine kamera";
 "AA0547" = "Foto.";
 "AA0548" = "Na video.";
-"AA0549" = "Reoqoo benötigt Ihre Erlaubnis für den Zugriff auf das Fotoalbum, um die QR-Code-Scan-Funktion verwenden zu können";
-"AA0550" = "reoqoo benötigt Ihre Erlaubnis für den Zugriff auf Fotos, um den Geräte-QR-Code im Systemalbum zu speichern.";
-"AA0551" = "reoqoo benötigt Ihre Erlaubnis, um die Kamera für die QR-Code-Scan-Funktion zu verwenden.";
-"AA0552" = "reoqoo benötigt Ihre Erlaubnis, um Bluetooth-Geräte zuzugreifen.";
-"AA0553" = "reoqoo benötigt Ihre Erlaubnis zum Mikrofonzugriff für die Gegensprechfunktion.";
-"AA0554" = "reoqoo benötigt Ihre Erlaubnis für den Zugriff auf das lokale Netzwerk zur Geräteverbindung.";
-"AA0555" = "reoqoo benötigt Ihre Erlaubnis für den Push-Dienst, um Benachrichtigungen zu erhalten.";
+"AA0549" = "APP benötigt Ihre Erlaubnis für den Zugriff auf das Fotoalbum, um die QR-Code-Scan-Funktion verwenden zu können";
+"AA0550" = "APP benötigt Ihre Erlaubnis für den Zugriff auf Fotos, um den Geräte-QR-Code im Systemalbum zu speichern.";
+"AA0551" = "APP benötigt Ihre Erlaubnis, um die Kamera für die QR-Code-Scan-Funktion zu verwenden.";
+"AA0552" = "APP benötigt Ihre Erlaubnis, um Bluetooth-Geräte zuzugreifen.";
+"AA0553" = "APP benötigt Ihre Erlaubnis zum Mikrofonzugriff für die Gegensprechfunktion.";
+"AA0554" = "APP benötigt Ihre Erlaubnis für den Zugriff auf das lokale Netzwerk zur Geräteverbindung.";
+"AA0555" = "APP benötigt Ihre Erlaubnis für den Push-Dienst, um Benachrichtigungen zu erhalten.";
 "AA0556" = "Geräte-ID:";
 "AA0557" = "Keinen Zugriff auf das lokale Netzwerk. Bitte aktivieren Sie diese Einstellung.";
 "AA0558" = "QR-Code-Erstellung fehlgeschlagen.";
@@ -604,13 +604,13 @@
 "AA0607" = "Zur genauen Lokalisierung des Problems";
 "AA0608" = "Min. 10 Wörter";
 "AA0609" = "Mehr anzeigen";
-"AA0610" = "Reoqoo kann nur auf einige Fotos zugreifen. Es wird empfohlen, den Zugriff auf 'Alle Fotos' zuzulassen. Tippen Sie zum Einstellen.";
-"AA0611" = "reoqoo hat keinen Zugriff auf das Album, tippen Sie, um es einzustellen";
+"AA0610" = "APP kann nur auf einige Fotos zugreifen. Es wird empfohlen, den Zugriff auf 'Alle Fotos' zuzulassen. Tippen Sie zum Einstellen.";
+"AA0611" = "APP hat keinen Zugriff auf das Album, tippen Sie, um es einzustellen";
 "AA0612" = "Bitte beschreiben Sie Ihre Vorschläge oder Probleme im Detail";
 "AA0613" = "Einstellungen für Push-Benachrichtigungen";
 "AA0614" = "Einstellungen der Systemberechtigungen";
 "AA0615" = "Benachrichtigung über Push-Mitteilungen";
-"AA0616" = "Wenn aktiviert, erhalten Sie rechtzeitig die neuesten Nachrichten der reoqoo APP";
+"AA0616" = "Wenn aktiviert, erhalten Sie rechtzeitig die neuesten Nachrichten der APP";
 "AA0617" = "Autorisieren";
 "AA0618" = "Bereits angefangen";
 "AA0619" = "Standort";
@@ -627,7 +627,7 @@
 "AA0630" = "Nach Aktivierung kann die Video-Überwachungs-Popup-Funktion und Klingelüberwachung genutzt werden";
 "AA0631" = "Hintergrund-Popup-Oberfläche";
 "AA0632" = "Nach Aktivierung können Sie Benachrichtigungen für die Pflegeklingel erhalten";
-"AA0633" = "Um Ihnen ein besseres Benutzererlebnis zu bieten, beantragt reoqoo in bestimmten Situationen die folgenden Systemberechtigungen.";
+"AA0633" = "Um Ihnen ein besseres Benutzererlebnis zu bieten, beantragt APP in bestimmten Situationen die folgenden Systemberechtigungen.";
 "AA0634" = "Genehmigt";
 "AA0635" = "Nicht genehmigt";
 "AA0636" = "Lokales Netzwerk";
@@ -658,5 +658,29 @@
 "AA0663" = "Bitte laden Sie die \"Xiaotun Cloud\"-App herunter, um weiterhin zu verwenden";
 "AA0664" = "Nicht erneut erinnern";
 "AA0665" = "Über";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Bitte geben Sie Konto ein";
+"AA0670" = "Nutzungsvereinbarung und Datenschutzrichtlinie";
+"AA0671" = "Willkommen bei Xiaotun! Xiaotun wird von reoqoo IoT Technology Co., Ltd. (im Folgenden als \"uns\" bezeichnet) entwickelt und betrieben. Mit Xiaotun können Sie intelligente Kameras nutzen und verwalten.";
+"AA0672" = "Bevor Sie Xiaotun verwenden, lesen Sie bitte die \"%@\" und \"%@\" sorgfältig durch und verstehen Sie diese vollständig, um unsere Dienstleistungen zu verstehen und wie wir Ihre persönlichen Informationen während des Dienstes sammeln und verarbeiten.";
+"AA0673" = "Wenn Sie mit dem oben genannten Vertrag einverstanden sind, klicken Sie bitte auf \"Zustimmen\", um Xiaotun zu verwenden.";
+"AA0674" = "Minderjährige müssen den oben genannten Vertragstext in Begleitung eines Erziehungsberechtigten lesen und Xiaotun mit dessen Zustimmung und Anwesenheit verwenden.";
+"AA0675" = "Sie können Ihre persönlichen Informationen auf der 'Ich' Seite verwalten. Wir werden Ihre persönlichen Informationen gemäß den Sicherheitstechnologiestandards der Branche schützen.";
+"AA0676" = "Während Ihrer Nutzung können wir auch die folgenden Berechtigungen anfordern: Bluetooth, Standort, Kamera, Fotobibliothek, Speicher, Mikrofon, Geräteinformationen, lokales Netzwerk, Kalender, Benachrichtigungen. Sie können jederzeit zur Berechtigungsverwaltung gehen, um die Berechtigungseinstellungen anzupassen.";
+"AA0677" = "Sehr geehrter Benutzer, um Ihre persönlichen Rechte besser zu schützen, haben wir %@ gemäß den neuesten Gesetzen und Vorschriften sowie unseren Geschäftspraktiken aktualisiert. Wir senden Ihnen hiermit diesen Hinweis.\nBitte lesen Sie ihn vor der Verwendung sorgfältig durch. Durch Klicken auf die Schaltfläche „Zustimmen“ erklären Sie, dass Sie die aktualisierten Bedingungen vollständig gelesen und verstanden haben und mit den aktualisierten Richtlinien einverstanden sind. Wir werden Ihre persönlichen Daten verarbeiten und Ihnen Dienstleistungen auf der Grundlage Ihrer Autorisierung und Zustimmung bereitstellen.\n\nWenn Sie Fragen haben, kontaktieren Sie uns bitte:\nE-Mail: %@";
+"AA0678" = "Willkommen bei reoqoo! reoqoo wird von der reoqoo IoT Technology Co., Ltd. (im Folgenden als \"wir\" bezeichnet) entwickelt und betrieben. Sie können intelligente Kameras über reoqoo verwenden und verwalten.";
+"AA0679" = "Bevor Sie reoqoo verwenden, lesen Sie bitte die 《%@》 und 《%@》 sorgfältig durch und verstehen Sie sie vollständig, damit Sie unsere Dienstleistungen verstehen und wie wir Ihre persönlichen Daten während des Dienstes sammeln und verarbeiten.";
+"AA0680" = "Wenn Sie mit dem oben genannten Vertrag einverstanden sind, klicken Sie bitte auf \"Zustimmen\", um reoqoo zu verwenden.";
+"AA0681" = "Minderjährige müssen den oben genannten Vertragstext in Begleitung eines Erziehungsberechtigten lesen und reoqoo mit dessen Zustimmung und Begleitung verwenden.";
+"AA0682" = "Nicht zustimmen und App beenden";
+"AA0683" = "Erinnerung an die Vereinbarungsaktualisierung";
+"AA0684" = "Kamera-Nutzungsvereinbarung";
+"AA0685" = "Willkommen zur Nutzung von %@! %@ wird von %@ (im Folgenden als \"wir\" bezeichnet) entwickelt und betrieben. Sie können intelligente Kameras über %@ nutzen und verwalten.\nBevor Sie %@ verwenden, lesen Sie bitte sorgfältig und verstehen Sie %@%@, damit Sie unsere Dienstleistungen sowie die Erfassung und Verarbeitung Ihrer persönlichen Daten während des Dienstes verstehen.\nWenn Sie dem oben genannten Vereinbarungstext zustimmen, klicken Sie bitte auf \"Zustimmen\", um %@ zu verwenden.\nMinderjährige müssen den oben genannten Vereinbarungstext in Begleitung eines Erziehungsberechtigten lesen und %@ mit dessen Zustimmung und Begleitung verwenden. Wir schützen Ihre persönlichen Daten gemäß den Sicherheitsstandards der Branche.";
+"AA0686" = "Geben Sie bitte Ihre Handynummer oder E-Mail ein";
+"AA0687" = "Geben Sie bitte Ihre Handynummer oder E-Mail ein";
+"AA0688" = "Geben Sie das %@ zur Gerätenutzung ein";
+"AA0689" = "Bitte versuchen Sie die folgenden Schritte und versuchen Sie es erneut:\n1. Drücken und halten Sie die Reset-Taste, um das Gerät zurückzusetzen;\n2. Bitte prüfen Sie, ob das Gerät an die Stromversorgung angeschlossen ist;\n3. Bitte prüfen Sie, ob die Antenne des Geräts lose ist;\n4. Bitte stellen Sie sicher, dass die aktuelle 4G-Signal-Kommunikation normal ist.";
+"AA0690" = "Die Kamera ist zu niedrig, bitte ein Upgrade in einem Zustand von Elektrizität ~";
+"AA0691" = "Verwendung eines Nicht-WLAN-Netzwerks, das Abspielen kann Datengebühren verursachen";
+"AA0692" = "Gesehen %@";
+"AA0693" = "APP möchte auf Ihren Speicher zugreifen";
