--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/el.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/el.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Δυνατός";
 "AA0030" = "Οι κωδικοί πρόσβασης είναι ασυνεπείς";
 "AA0031" = "Ανάκτηση κωδικού";
-"AA0032" = "Εισαγάγετε το αναγνωριστικό reoqoo";
+"AA0032" = "Εισαγάγετε το αναγνωριστικό";
 "AA0033" = "Ο λογαριασμός δεν υπάρχει";
 "AA0034" = "βάλτε κωδικό επιβεβαίωσης";
 "AA0035" = "Ο κωδικός επαλήθευσης έχει αποσταλεί στην";
@@ -68,9 +68,9 @@
 "AA0069" = "«Αξίζει να δείτε» θέλουν να χρησιμοποιήσουν τις πληροφορίες τοποθεσίας σας";
 "AA0070" = "Για να προσθέσετε με επιτυχία τον εξοπλισμό, πρέπει να επιτρέψετε τη χρήση των Υπηρεσιών τοποθεσίας για τη λήψη πληροφοριών Wi-Fi. Ενεργοποιήστε τις Υπηρεσίες τοποθεσίας.";
 "AA0071" = "Δεν υπάρχει άδεια τοποθεσίας, ενεργοποιήστε τη στις ρυθμίσεις";
-"AA0072" = "το reoqoo θέλει να έχει πρόσβαση στις πληροφορίες του άλμπουμ σας";
+"AA0072" = "το APP θέλει να έχει πρόσβαση στις πληροφορίες του άλμπουμ σας";
 "AA0073" = "Πρέπει να δείτε και να στείλετε την εικόνα, επιτρέπεται να ανοίξει το άλμπουμ;";
-"AA0074" = "το reoqoo θέλει να χρησιμοποιήσει τις πληροφορίες Bluetooth σας";
+"AA0074" = "το APP θέλει να χρησιμοποιήσει τις πληροφορίες Bluetooth σας";
 "AA0075" = "Απαιτείται άδεια Bluetooth για να βοηθήσει τις έξυπνες συσκευές να συνδεθούν στο Wi-Fi κατά την προσθήκη. Επιτρέπετε;";
 "AA0076" = "Δεν υπάρχει άδεια Bluetooth, ενεργοποιήστε τη στις ρυθμίσεις";
 "AA0077" = "Έχετε ρυθμίσει τη συσκευή σύμφωνα με τις παραπάνω οδηγίες;";
@@ -145,7 +145,7 @@
 "AA0146" = "Μπορούν να προστεθούν X επισκέπτες το πολύ, διαγράψτε μερικούς αν θέλετε να συνεχίσετε να μοιράζεστε περιεχόμενο με άλλους.";
 "AA0147" = "Κοινή χρήση διαχείρισης";
 "AA0148" = "Εισάγετε τον λογαριασμό reoqoo για κοινή χρήση της συσκευής";
-"AA0149" = "Παρακαλώ εισάγετε τον λογαριασμό reoqoo";
+"AA0149" = "Εισαγάγετε το αναγνωριστικό";
 "AA0150" = "Πρόσφατα μοιρασμένα";
 "AA0151" = "Κοινή χρήση πρόσωπο με πρόσωπο";
 "AA0152" = "Μερίδιο";
@@ -154,7 +154,7 @@
 "AA0155" = "Ήδη μοιράστηκε με τον φίλο αυτό";
 "AA0156" = "Η κοινή χρήση πέτυχε";
 "AA0157" = "Ισχύει μέχρι";
-"AA0158" = "Σαρώστε τον παραπάνω κωδικό QR με την εφαρμογή reoqoo για να μοιραστείτε τη συσκευή";
+"AA0158" = "Σαρώστε τον παραπάνω κωδικό QR με την εφαρμογή APP για να μοιραστείτε τη συσκευή";
 "AA0159" = "Ήδη μοιρασμένοι φίλοι";
 "AA0160" = "Αποτυχία λήψης QR κωδικού, κάντε κλικ για ανανέωση";
 "AA0161" = "Το %@ μοιράστηκε μια συσκευή μαζί σας";
@@ -223,7 +223,7 @@
 "AA0224" = "Σχετικά με reoqoo";
 "AA0225" = "Κέντρο ειδοποιήσεων";
 "AA0226" = "Η λειτουργία πέτυχε";
-"AA0227" = "Ενεργοποιήστε την άδεια ειδοποίησης του Youkanto APP για να λαμβάνετε έγκαιρα τα τελευταία νέα";
+"AA0227" = "Ενεργοποιήστε την άδεια ειδοποίησης του %@ APP για να λαμβάνετε έγκαιρα τα τελευταία νέα";
 "AA0228" = "Όχι άλλα μηνύματα";
 "AA0229" = "Χωρίς στιγμιότυπο οθόνης ή βίντεο";
 "AA0230" = "Επιλέγω";
@@ -538,17 +538,17 @@
 "AA0542" = "Η λήψη απέτυχε, παρακαλώ ελέγξτε τη σύνδεση δικτύου της συσκευής και δοκιμάστε ξανά";
 "AA0543" = "Η αναβάθμιση απέτυχε, παρακαλώ επανεκκινήστε τη συσκευή και δοκιμάστε ξανά";
 "AA0544" = "Γίνεται αναβάθμιση...";
-"AA0545" = "Έχω διαβάσει και συμφωνώ με τη Συμφωνία Χρήστη και την Πολιτική Απορρήτου της Reoqoo";
+"AA0545" = "Έχω διαβάσει και συμφωνώ με τη Συμφωνία Χρήστη και την Πολιτική Απορρήτου της";
 "AA0546" = "φωτογραφική μηχανή";
 "AA0547" = "φωτογραφία";
 "AA0548" = "Βίντεο";
-"AA0549" = "Η Reoqoo χρειάζεται την άδειά σας για πρόσβαση στο άλμπουμ, ώστε να μπορεί να χρησιμοποιήσει τη λειτουργία σάρωσης κωδικού QR";
-"AA0550" = "Η reoqoo χρειάζεται την άδειά σας για πρόσβαση στο άλμπουμ ώστε να αποθηκεύσετε τον κωδικό QR της συσκευής στο άλμπουμ του συστήματος.";
-"AA0551" = "Η reoqoo χρειάζεται την άδειά σας για να χρησιμοποιήσει την κάμερα για τη λειτουργία σάρωσης κωδικών QR.";
-"AA0552" = "Η reoqoo χρειάζεται την άδειά σας για να αποκτήσει πρόσβαση στις συσκευές Bluetooth.";
-"AA0553" = "Η reoqoo χρειάζεται την άδειά σας για να χρησιμοποιήσει το μικρόφωνο στη λειτουργία ενδοεπικοινωνίας.";
-"AA0554" = "Η reoqoo χρειάζεται την άδειά σας για πρόσβαση στο τοπικό δίκτυο προκειμένου να συνδέσετε τη συσκευή.";
-"AA0555" = "Η reoqoo χρειάζεται την άδειά σας για τη λειτουργία ώθησης ώστε να λάβετε ειδοποιήσεις από τη συσκευή.";
+"AA0549" = "Η APP χρειάζεται την άδειά σας για πρόσβαση στο άλμπουμ, ώστε να μπορεί να χρησιμοποιήσει τη λειτουργία σάρωσης κωδικού QR";
+"AA0550" = "Η APP χρειάζεται την άδειά σας για πρόσβαση στο άλμπουμ ώστε να αποθηκεύσετε τον κωδικό QR της συσκευής στο άλμπουμ του συστήματος.";
+"AA0551" = "Η APP χρειάζεται την άδειά σας για να χρησιμοποιήσει την κάμερα για τη λειτουργία σάρωσης κωδικών QR.";
+"AA0552" = "Η APP χρειάζεται την άδειά σας για να αποκτήσει πρόσβαση στις συσκευές Bluetooth.";
+"AA0553" = "Η APP χρειάζεται την άδειά σας για να χρησιμοποιήσει το μικρόφωνο στη λειτουργία ενδοεπικοινωνίας.";
+"AA0554" = "Η APP χρειάζεται την άδειά σας για πρόσβαση στο τοπικό δίκτυο προκειμένου να συνδέσετε τη συσκευή.";
+"AA0555" = "Η APP χρειάζεται την άδειά σας για τη λειτουργία ώθησης ώστε να λάβετε ειδοποιήσεις από τη συσκευή.";
 "AA0556" = "ID συσκευής:";
 "AA0557" = "Δεν υπάρχει πρόσβαση στο τοπικό δίκτυο. Παρακαλώ ενεργοποιήστε το στις ρυθμίσεις.";
 "AA0558" = "Αποτυχία δημιουργίας κωδικού QR.";
@@ -603,13 +603,13 @@
 "AA0607" = "Για ακριβή εντοπισμό προβλημάτων";
 "AA0608" = "Τουλάχιστον 10 χαρακτήρες";
 "AA0609" = "Δείτε περισσότερα";
-"AA0610" = "Το Reoqoo έχει πρόσβαση μόνο σε ορισμένες φωτογραφίες. Συνιστάται να επιτρέψετε την πρόσβαση σε 'όλες τις φωτογραφίες'. Κάντε κλικ για να ρυθμίσετε.";
-"AA0611" = "το reoqoo δεν έχει πρόσβαση στο άλμπουμ, πατήστε για ρύθμιση";
+"AA0610" = "Το APP έχει πρόσβαση μόνο σε ορισμένες φωτογραφίες. Συνιστάται να επιτρέψετε την πρόσβαση σε 'όλες τις φωτογραφίες'. Κάντε κλικ για να ρυθμίσετε.";
+"AA0611" = "το APP δεν έχει πρόσβαση στο άλμπουμ, πατήστε για ρύθμιση";
 "AA0612" = "Παρακαλώ περιγράψτε λεπτομερώς τις προτάσεις ή τα προβλήματα που αντιμετωπίσατε";
 "AA0613" = "Ρυθμίσεις ειδοποιήσεων ώθησης";
 "AA0614" = "Ρυθμίσεις αδειών του συστήματος";
 "AA0615" = "Ειδοποίηση μηνύματος ώθησης";
-"AA0616" = "Μόλις ενεργοποιηθεί, μπορείτε να λαμβάνετε έγκαιρα τα τελευταία νέα της εφαρμογής reoqoo";
+"AA0616" = "Μόλις ενεργοποιηθεί, μπορείτε να λαμβάνετε έγκαιρα τα τελευταία νέα της εφαρμογής APP";
 "AA0617" = "Αδειοδοτώ";
 "AA0618" = "Ενεργοποιημένο";
 "AA0619" = "Τοποθεσία";
@@ -626,7 +626,7 @@
 "AA0630" = "Με την ενεργοποίηση, μπορεί να χρησιμοποιηθεί η αναπαραγωγή βίντεο σε μικρό παράθυρο και οι ειδοποιήσεις κουδουνιού επιτήρησης";
 "AA0631" = "Περιβάλλον εργασίας αναδυόμενου παραθύρου στο παρασκήνιο";
 "AA0632" = "Με την ενεργοποίηση, θα λαμβάνετε ειδοποιήσεις για το κουδούνι επιτήρησης";
-"AA0633" = "Για να σας προσφέρουμε καλύτερη εμπειρία χρήστη, το reoqoo θα ζητήσει τις παρακάτω άδειες συστήματος σε συγκεκριμένες περιπτώσεις.";
+"AA0633" = "Για να σας προσφέρουμε καλύτερη εμπειρία χρήστη, το APP θα ζητήσει τις παρακάτω άδειες συστήματος σε συγκεκριμένες περιπτώσεις.";
 "AA0634" = "Εγκεκριμένο";
 "AA0635" = "Μη εγκεκριμένο";
 "AA0636" = "Τοπικό δίκτυο";
@@ -657,5 +657,29 @@
 "AA0663" = "Κατεβάστε την εφαρμογή \"Xiaotun Cloud\" για να συνεχίσετε τη χρήση";
 "AA0664" = "Μην Ειδοποιείς Ξανά";
 "AA0665" = "Σχετικά με";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Εισαγάγετε λογαριασμό";
+"AA0670" = "Συμφωνία Χρήσης και Πολιτική Απορρήτου";
+"AA0671" = "Καλώς ήλθατε στο Xiaotun! Το Xiaotun αναπτύσσεται και λειτουργεί από την reoqoo IoT Technology Co., Ltd. (εφεξής \"εμάς\"). Μπορείτε να χρησιμοποιήσετε το Xiaotun για τη διαχείριση και τη χρήση έξυπνων κάμερων.";
+"AA0672" = "Πριν χρησιμοποιήσετε το Xiaotun, διαβάστε και κατανοήστε πλήρως τα \"%@\" και \"%@\" για να κατανοήσετε τις υπηρεσίες μας και πώς συλλέγουμε και επεξεργαζόμαστε τα προσωπικά σας δεδομένα κατά τη διάρκεια της υπηρεσίας.";
+"AA0673" = "Εάν συμφωνείτε με την προαναφερθείσα συμφωνία, κάντε κλικ στο \"Συμφωνώ\" για να ξεκινήσετε τη χρήση του Xiaotun.";
+"AA0674" = "Ανήλικοι πρέπει να διαβάσουν το κείμενο της συμφωνίας που αναφέρεται παραπάνω συνοδευόμενοι από κηδεμόνα και να χρησιμοποιήσουν Xiaotun με τη συγκατάθεση και παρουσία του κηδεμόνα.";
+"AA0675" = "Μπορείτε να διαχειριστείτε τα προσωπικά σας δεδομένα στη σελίδα 'Εγώ'. Θα προστατεύσουμε τα προσωπικά σας δεδομένα σύμφωνα με τα πρότυπα ασφάλειας τεχνολογίας της βιομηχανίας.";
+"AA0676" = "Κατά τη διάρκεια της χρήσης, ενδέχεται να ζητήσουμε τις ακόλουθες άδειες: Bluetooth, Τοποθεσία, Κάμερα, Φωτογραφική βιβλιοθήκη, Αποθήκευση, Μικρόφωνο, Πληροφορίες συσκευής, Τοπικό δίκτυο, Ημερολόγιο, Ειδοποιήσεις. Μπορείτε πάντα να μεταβείτε στη διαχείριση αδειών για να προσαρμόσετε τις ρυθμίσεις αδειών.";
+"AA0677" = "Αγαπητέ χρήστη, για να προστατεύσουμε καλύτερα τα προσωπικά σας δικαιώματα, έχουμε ενημερώσει το %@ σύμφωνα με τους πιο πρόσφατους νόμους και κανονισμούς και τις επιχειρηματικές μας πρακτικές. Σας στέλνουμε λοιπόν αυτήν την ειδοποίηση.\nΠαρακαλώ διαβάστε το προσεκτικά πριν τη χρήση. Πατώντας το κουμπί αποδοχής, δηλώνετε ότι έχετε διαβάσει και κατανοήσει τους ενημερωμένους όρους και συμφωνείτε να δεσμεύεστε από την ενημερωμένη πολιτική. Θα επεξεργαστούμε τα προσωπικά σας δεδομένα και θα σας παρέχουμε υπηρεσίες βάσει της άδειας και της συγκατάθεσής σας.\n\nΑν έχετε απορίες, επικοινωνήστε μαζί μας:\nΗλεκτρονικό ταχυδρομείο: %@";
+"AA0678" = "Καλώς ήρθατε στο reoqoo! Το reoqoo αναπτύσσεται και λειτουργεί από την reoqoo IoT Technology Co., Ltd. (εφεξής «εμείς»). Μπορείτε να χρησιμοποιήσετε και να διαχειριστείτε έξυπνες κάμερες μέσω του reoqoo.";
+"AA0679" = "Πριν χρησιμοποιήσετε το reoqoo, διαβάστε και κατανοήστε πλήρως το 《%@》 και το 《%@》 ώστε να κατανοήσετε τις υπηρεσίες μας και πώς συλλέγουμε και επεξεργαζόμαστε τα προσωπικά σας δεδομένα κατά τη διάρκεια της υπηρεσίας.";
+"AA0680" = "Εάν συμφωνείτε με την προαναφερθείσα συμφωνία, κάντε κλικ στο \"Συμφωνώ\" για να ξεκινήσετε τη χρήση του reoqoo.";
+"AA0681" = "Οι ανήλικοι πρέπει να διαβάσουν το προαναφερθέν κείμενο συμφωνίας συνοδευόμενοι από κηδεμόνα και να χρησιμοποιήσουν το reoqoo με τη συγκατάθεση και τη συνοδεία κηδεμόνα.";
+"AA0682" = "Δεν συμφωνώ και Έξοδος από την εφαρμογή";
+"AA0683" = "Υπενθύμιση Ενημέρωσης Συμφωνίας";
+"AA0684" = "Συμφωνία Χρήστη Κάμερας";
+"AA0685" = "Καλώς ήρθατε στη χρήση του %@! Το %@ αναπτύσσεται και λειτουργεί από την %@ (εφεξής αναφερόμενη ως \"εμείς\"). Μπορείτε να χρησιμοποιήσετε και να διαχειριστείτε έξυπνες κάμερες μέσω του %@. \nΠριν χρησιμοποιήσετε το %@, διαβάστε και κατανοήστε πλήρως το %@%@, ώστε να κατανοήσετε τις υπηρεσίες μας, καθώς και τη συλλογή και επεξεργασία των προσωπικών σας δεδομένων κατά τη διάρκεια της υπηρεσίας. \nΕάν συμφωνείτε με το παραπάνω κείμενο συμφωνίας, κάντε κλικ στο \"Συμφωνώ\" για να αρχίσετε να χρησιμοποιείτε το %@. \nΑνήλικοι πρέπει να διαβάσουν το παραπάνω κείμενο συμφωνίας συνοδευόμενοι από κηδεμόνα και να χρησιμοποιήσουν το %@ με τη συγκατάθεση και τη συνοδεία του κηδεμόνα. Θα προστατεύουμε τα προσωπικά σας δεδομένα σύμφωνα με τα βιομηχανικά πρότυπα τεχνολογικής ασφάλειας.";
+"AA0686" = "Εισαγάγετε έναν αριθμό τηλεφώνου ή μια διεύθυνση email";
+"AA0687" = "Εισαγάγετε έναν αριθμό τηλεφώνου ή μια διεύθυνση email";
+"AA0688" = "Εισάγετε τον λογαριασμό %@ για κοινή χρήση της συσκευής";
+"AA0689" = "Προσπαθήστε τις παρακάτω ενέργειες και ξαναπροσπαθήστε:\n1. Πατήστε και κρατήστε πατημένο το κουμπί επαναφοράς για να επαναφέρετε τη συσκευή;\n2. Ελέγξτε αν η συσκευή είναι συνδεδεμένη στην τροφοδοσία;\n3. Ελέγξτε αν η κεραία της συσκευής είναι χαλαρή;\n4. Βεβαιωθείτε ότι η τρέχουσα επικοινωνία σήματος 4G είναι κανονική.";
+"AA0690" = "Η κάμερα είναι πολύ χαμηλή, παρακαλώ αναβαθμίστε σε μια κατάσταση ηλεκτρικής ενέργειας ~";
+"AA0691" = "Χρήση δικτύου μη WLAN, η αναπαραγωγή μπορεί να επιφέρει κόστη δεδομένων";
+"AA0692" = "είδε %@";
+"AA0693" = "Η εφαρμογή θέλει να χρησιμοποιήσει την αποθήκευσή σας";
