--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/en.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/en.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Strong";
 "AA0030" = "Passwords are inconsistent";
 "AA0031" = "Reset password";
-"AA0032" = "Please enter reoqoo account";
+"AA0032" = "Please enter account";
 "AA0033" = "Account does not exist";
 "AA0034" = "Please enter the verification code";
 "AA0035" = "The verification code has been sent to";
@@ -62,16 +62,16 @@
 "AA0062" = "Scan the QR code on the device";
 "AA0063" = "Flashlight";
 "AA0064" = "Album";
-"AA0065" = "Allow \"reoqoo\" to use your Camera?";
+"AA0065" = "Allow \"APP\" to use your Camera?";
 "AA0066" = "Requires scanning a QR code to connect and bind the device. Allow access to the camera?";
 "AA0067" = "Reject";
 "AA0068" = "No camera permissions, please enable it in settings";
 "AA0069" = "Allow APP to use your location information?";
 "AA0070" = "Location permission is required to obtain Wi-Fi information for adding devices; please enable system location";
 "AA0071" = "The positioning permission is disabled. Please enable it in Settings";
-"AA0072" = "Allow \"reoqoo\" to use your album information？";
+"AA0072" = "Need permission to access your album";
 "AA0073" = "Requires viewing and sending pictures. Allow access to the photo album?";
-"AA0074" = "Allow \"reoqoo\" to use your Bluetooth information？";
+"AA0074" = "Allow \"APP\" to use your Bluetooth information？";
 "AA0075" = "Bluetooth permission is required to help the smart device connect to Wi-Fi during the adding process. Do you agree to enable it?";
 "AA0076" = "The Bluetooth permission is disabled. Please enable it in Settings";
 "AA0077" = "Have you operated the device according to the above guidelines?";
@@ -130,7 +130,7 @@
 "AA0130" = "Make sure to complete the adding process by returning to APP after connecting to the Wi-Fi that starts with \"XT-\".";
 "AA0131" = "I get it";
 "AA0132" = "Scanning";
-"AA0133" = "Confirm the device is waiting to connect,put your cellphone close to the camera";
+"AA0133" = "Confirm the device is waiting to connect, put your cellphone close to the camera";
 "AA0134" = "Connect";
 "AA0135" = "No device has been found";
 "AA0136" = "1. Make ensure that the camera is connected to power supply";
@@ -146,7 +146,7 @@
 "AA0146" = "%@ visitors can be added at most,please delete some if you want to continue sharing with others.";
 "AA0147" = "Sharing";
 "AA0148" = "Enter the account that needs to be shared";
-"AA0149" = "Please enter reoqoo account";
+"AA0149" = "Please enter account";
 "AA0150" = "Recent share";
 "AA0151" = "Face-to-face sharing";
 "AA0152" = "Share";
@@ -175,12 +175,12 @@
 "AA0175" = "Failed to delete the device. Please try again later";
 "AA0176" = "Scan the QR code on the device or the QR code shared by others";
 "AA0177" = "No shared device";
-"AA0178" = "Shared device";
-"AA0179" = "From the shared device";
+"AA0178" = "Shared by Me";
+"AA0179" = "Shared with Me";
 "AA0180" = "My share";
 "AA0181" = "From sharing";
 "AA0182" = "Remove";
-"AA0183" = "Device removal";
+"AA0183" = "Remove device";
 "AA0184" = "Stop sharing";
 "AA0185" = "Are you sure to delete this shared friend?";
 "AA0186" = "Remove successfully";
@@ -216,17 +216,17 @@
 "AA0216" = "Refreshing";
 "AA0217" = "Cloud service";
 "AA0218" = "Album";
-"AA0219" = "Firmware upgrade";
+"AA0219" = "Firmware Upgrade";
 "AA0220" = "Do not disturb setting";
 "AA0221" = "Language";
 "AA0222" = "Feedback";
-"AA0223" = "reoqoo Support";
+"AA0223" = "Support";
 "AA0224" = "About reoqoo";
 "AA0225" = "Messages";
 "AA0226" = "Operation successful";
-"AA0227" = "Enable notifications from reoqoo, to get the latest news";
+"AA0227" = "Enable notifications from %@, to get the latest news";
 "AA0228" = "No more messages";
-"AA0229" = "No screenshot or video~";
+"AA0229" = "No screenshots or videos~";
 "AA0230" = "Select";
 "AA0231" = "All devices";
 "AA0232" = "Share";
@@ -338,7 +338,7 @@
 "AA0338" = "Device deleting by Long press the device card. Device sorting by dragging the device card";
 "AA0339" = "Click to edit the card";
 "AA0340" = "The new version is testing...";
-"AA0341" = "Updates avaiable";
+"AA0341" = "Check Update";
 "AA0342" = "All devices are in the latest version";
 "AA0343" = "New version";
 "AA0344" = "New version instruction";
@@ -477,7 +477,7 @@
 "AA0478" = "Unsupported QR code";
 "AA0479" = "The device supports 5GHz Wi-Fi";
 "AA0480" = "1.The camera may not support quick network connection (hotspot connection). Please follow the device's voice prompts to select the connection method. \n2.The distance between the phone and the device is too far. A distance within 30 centimeters is more appropriate.";
-"AA0481" = "Email";
+"AA0481" = "Enter the email address you can use for registering a reoqoo account";
 "AA0482" = "The device name cannot be empty";
 "AA0483" = "(Error code: %@)";
 "AA0484" = "The device name scene is empty";
@@ -601,7 +601,7 @@
 "AA0602" = "Expire by";
 "AA0603" = "End~";
 "AA0604" = "System notification";
-"AA0605" = "reoqoo Support";
+"AA0605" = "Support";
 "AA0606" = "Share App/Device Logs";
 "AA0607" = "Helps accurately locate the problem";
 "AA0608" = "At least 10 characters";
@@ -660,5 +660,32 @@
 "AA0663" = "Please download the \"WoWCam\" APP to continue using the device";
 "AA0664" = "Don't remind me again";
 "AA0665" = "About";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Please enter account";
+"AA0670" = "User Agreement and Privacy Policy";
+"AA0671" = "Welcome to Xiaotun! Xiaotun is developed and operated by reoqoo IoT Technology Co., Ltd. (hereinafter referred to as \"us\"). You can use Xiaotun to manage and use smart cameras.";
+"AA0672" = "Before using Xiaotun, please read and fully understand the \"%@\" and \"%@\" to understand our services and how we collect and process your personal information during the service.";
+"AA0673" = "If you agree to the aforementioned agreement, please click \"Agree\" to start using Xiaotun.";
+"AA0674" = "Minors must read the aforementioned agreement text accompanied by a guardian and use Xiaotun with the guardian's consent and presence.";
+"AA0675" = "You can manage your personal information on the 'Me' page. We will protect your personal information according to industry security technology standards.";
+"AA0676" = "During your use, we may also request the following permissions: Bluetooth, Location, Camera, Photo Library, Storage, Microphone, Device Information, Local Network, Calendar, Notifications. You can always go to the permission management to adjust the permission settings.";
+"AA0677" = "Dear user, to better protect your personal rights, we have updated the %@ in accordance with the latest laws and regulations and our business practices. We hereby send you this notice.\nPlease read it carefully before use. By clicking the agree button, you indicate that you have fully read and understood the updated terms and agree to be bound by the updated policy. We will process your personal information and provide you with services based on your authorization and consent.\n\nIf you have any questions, please contact us:\nEmail: %@";
+"AA0678" = "Welcome to use reoqoo! reoqoo is developed and operated by reoqoo IoT Technology Co., Ltd. (hereinafter referred to as \"us\"). You can use and manage smart cameras through reoqoo.";
+"AA0679" = "Before using reoqoo, please read and fully understand the 《%@》 and 《%@》 so that you can understand our services and how we collect and process your personal information during the service.";
+"AA0680" = "If you agree to the aforementioned agreement, please click \"Agree\" to start using reoqoo.";
+"AA0681" = "Minors must read the aforementioned agreement text accompanied by a guardian, and use reoqoo with the consent and accompaniment of a guardian.";
+"AA0682" = "Disagree and Exit App";
+"AA0683" = "Agreement Update Reminder";
+"AA0684" = "Camera User Agreement";
+"AA0685" = "Welcome to use %@! %@ is developed and operated by %@ (hereinafter referred to as \"we\"). You can use and manage smart cameras through %@.\nBefore using %@, please read and fully understand %@%@, so that you can understand our services, as well as the collection and processing of your personal information during the service.\nIf you agree to the aforementioned agreement text, please click \"Agree\" to start using %@.\nMinors need to read the aforementioned agreement text accompanied by a guardian, and use %@ with the consent and accompaniment of the guardian. We will protect your personal information according to industry security technology standards.";
+"AA0686" = "Enter the email address or phone you can use for registering a %@ account";
+"AA0687" = "Enter the email address you can use for registering a %@ account";
+"AA0688" = "Enter the account that needs to be shared";
+"AA0689" = "Please try the following steps before retrying: \n1. Press and hold the reset button to reset the device;\n2. Please check if the device is connected to the power supply;\n3. Please check if the device antenna is loose;\n4. Please ensure that the current 4G signal communication is normal.";
+"AA0690" = "The camera battery is low, please upgrade it when the battery is sufficient.";
+"AA0691" = "You are not using WLAN. Data costs will be incurred when playing";
+"AA0692" = "%@ are detected";
+"AA0693" = "Need permission to access phone storage";
+"AA0694" = "Other login methods";
+"AA0695" = "One-Click Login";
+"AA0696" = "Other account login/registration";
