--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/es.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/es.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Fuerte";
 "AA0030" = "Contraseñas inconsistentes";
 "AA0031" = "Conseguir contraseña";
-"AA0032" = "Por favor, introduzca reoqoo ID";
+"AA0032" = "Por favor, introduzca ID";
 "AA0033" = "La cuenta no existe";
 "AA0034" = "Introduzca código de verificación";
 "AA0035" = "Se ha enviado el código de verificación a";
@@ -61,16 +61,16 @@
 "AA0062" = "Escanear código QR en el dispositivo para añadir";
 "AA0063" = "Linterna";
 "AA0064" = "Álbum de Fotos";
-"AA0065" = "reoqoo quiere usar su cámara";
+"AA0065" = "APP quiere usar su cámara";
 "AA0066" = "Es necesario para escanear el código QR para conectar y enlazar el dispositivo. ¿Se permite abrir la cámara?";
 "AA0067" = "Rechazar";
 "AA0068" = "Sin permiso de cámara, habilítelo en la Configuración";
-"AA0069" = "reoqoo quiere usar la información de su ubicación";
+"AA0069" = "APP quiere usar la información de su ubicación";
 "AA0070" = "Para el equipo agregado con éxito, es necesario permitir el uso de los servicios de localización para obtener información de conexión Wi-Fi.Por favor activar Servicios de ubicación.";
 "AA0071" = "Sin permiso de ubicación, actívelo en los ajustes";
-"AA0072" = "reoqoo quiere acceder a tu información de álbum";
+"AA0072" = "APP quiere acceder a tu información de álbum";
 "AA0073" = "Necesitas ver y enviar la foto. ¿Se permite abrir el álbum?";
-"AA0074" = "reoqoo quiere utilizar tu información de Bluetooth";
+"AA0074" = "APP quiere utilizar tu información de Bluetooth";
 "AA0075" = "Se requiere permiso Bluetooth para ayudar a los dispositivos inteligentes a conectarse a Wi-Fi durante la adición. ¿Permitir?";
 "AA0076" = "Sin permiso de Bluetooth, actívelo en los ajustes";
 "AA0077" = "¿Ha configurado el dispositivo según las instrucciones anteriores?";
@@ -145,7 +145,7 @@
 "AA0146" = "Sólo añadir hasta X visitantes, si desea continuar a compartir con otros, elimine algunos visitantes!";
 "AA0147" = "Gestión de compartir";
 "AA0148" = "Introduce la cuenta reoqoo para compartir el dispositivo";
-"AA0149" = "Por favor, introduce la cuenta reoqoo";
+"AA0149" = "Por favor, introduzca ID";
 "AA0150" = "Compartido recientemente";
 "AA0151" = "Compartir cara a cara";
 "AA0152" = "Compartir";
@@ -154,7 +154,7 @@
 "AA0155" = "Ya compartido con este amigo";
 "AA0156" = "Se compartió correctamente";
 "AA0157" = "Válido hasta";
-"AA0158" = "Escanee el código QR de arriba con la APP reoqoo para compartir el dispositivo";
+"AA0158" = "Escanee el código QR de arriba con la APP APP para compartir el dispositivo";
 "AA0159" = "Amigos ya compartidos";
 "AA0160" = "No se pudo obtener el código QR, haga click para actualizar";
 "AA0161" = "%@ le ha compartido un dispositivo";
@@ -223,7 +223,7 @@
 "AA0224" = "Acerca de reoqoo";
 "AA0225" = "Centro de noticia";
 "AA0226" = "Operación correcta";
-"AA0227" = "Habilitar el acceso a notificaciones de la aplicación reoqoo para recibir las últimas noticias";
+"AA0227" = "Habilitar el acceso a notificaciones de la aplicación %@ para recibir las últimas noticias";
 "AA0228" = "No hay más mensajes";
 "AA0229" = "Sin pantalla o vídeo";
 "AA0230" = "Seleccionar";
@@ -271,7 +271,7 @@
 "AA0272" = "Seguir idioma del sistema";
 "AA0273" = "Guardar";
 "AA0274" = "Actualización de versión";
-"AA0275" = "Información de cuenta";
+"AA0275" = "Información de la cuenta";
 "AA0276" = "Avatar";
 "AA0277" = "Cambiar apodo";
 "AA0278" = "Modificar la llave";
@@ -336,7 +336,7 @@
 "AA0338" = "Mantenga presionada la tarjeta del dispositivo para eliminar, arrastre para ordenar";
 "AA0339" = "Haga clic aquí para editar minitarjetas";
 "AA0340" = "Buscando nueva versión...";
-"AA0341" = "Comprobar actualizaciones";
+"AA0341" = "Actualizaciones disponibles";
 "AA0342" = "Todos los dispositivos están actualizados";
 "AA0343" = "Nueva versión";
 "AA0344" = "Notas de la nueva versión";
@@ -368,7 +368,7 @@
 "AA0370" = "Número de teléfono / correo electrónico";
 "AA0371" = "El servicio en la nube está en construcción en esta zona, por favor espere con paciencia~";
 "AA0372" = "La cuenta no existe";
-"AA0373" = "Contraseñas inconsistentes";
+"AA0373" = "Las dos entradas no coinciden";
 "AA0374" = "Teléfono Móvil";
 "AA0375" = "Introduzca contraseña de Wi-Fi";
 "AA0376" = "Red actual no disponible, compruebe la configuración de su red";
@@ -422,7 +422,7 @@
 "AA0425" = "Si no responde, mantén pulsado el botón de reinicio de la cámara para reiniciarla.";
 "AA0426" = "Conecte la cámara al puerto LAN del router con un cable de red, y conecte el móvil a Wi-Fi del mismo router.";
 "AA0427" = "Tutorial para principiantes";
-"AA0428" = "Fallido de cargar";
+"AA0428" = "No se ha podido cargar";
 "AA0429" = "seleccione el dispositivo";
 "AA0430" = "Describa el comentario o el problema en detalle, gracias por su apoyo";
 "AA0431" = "Comparta la información de los registros de las aplicaciones y los dispositivos para localizar los problemas";
@@ -439,7 +439,7 @@
 "AA0442" = "No se puede obtener la lista de Wi-Fi sin GPS habilitado, configúrelo ahora.";
 "AA0443" = "Usted elige Wi-Fi 5G, confirme si el dispositivo admite la banda de frecuencia 5G. Si no es compatible, la adición fallará. ¿Continuar agregando?";
 "AA0444" = "Continuar agregando";
-"AA0445" = "Volver";
+"AA0445" = "Atrás.";
 "AA0446" = "Supresión anómala";
 "AA0447" = "reoqoo";
 "AA0448" = "Hecho(%@/%@)";
@@ -538,17 +538,17 @@
 "AA0542" = "Descarga fallida, verifique la conexión de red del dispositivo e intente de nuevo";
 "AA0543" = "Actualización fallida, reinicie el dispositivo e inténtelo de nuevo";
 "AA0544" = "Actualizando...";
-"AA0545" = "He leído y acepto el Acuerdo de Usuario y la Política de Privacidad de Reoqoo";
+"AA0545" = "He leído y acepto el Acuerdo de Usuario y la Política de Privacidad de";
 "AA0546" = "La cámara";
 "AA0547" = "Fotos.";
 "AA0548" = "vídeo";
-"AA0549" = "Reoqoo necesita su permiso para acceder al álbum de fotos para utilizar la función de escaneo de código QR";
-"AA0550" = "reoqoo necesita su permiso para acceder al álbum con el fin de guardar el código QR del dispositivo en el álbum del sistema.";
-"AA0551" = "reoqoo necesita su permiso para usar la cámara para la función de escaneo de códigos QR.";
-"AA0552" = "reoqoo necesita su permiso para acceder a los dispositivos Bluetooth.";
-"AA0553" = "reoqoo necesita su permiso para utilizar el micrófono en la función de intercomunicación.";
-"AA0554" = "reoqoo necesita su permiso para acceder a la red local para conectar el dispositivo.";
-"AA0555" = "reoqoo necesita su permiso para la función de notificación push para recibir notificaciones del dispositivo.";
+"AA0549" = "APP necesita su permiso para acceder al álbum de fotos para utilizar la función de escaneo de código QR";
+"AA0550" = "APP necesita su permiso para acceder al álbum con el fin de guardar el código QR del dispositivo en el álbum del sistema.";
+"AA0551" = "APP necesita su permiso para usar la cámara para la función de escaneo de códigos QR.";
+"AA0552" = "APP necesita su permiso para acceder a los dispositivos Bluetooth.";
+"AA0553" = "APP necesita su permiso para utilizar el micrófono en la función de intercomunicación.";
+"AA0554" = "APP necesita su permiso para acceder a la red local para conectar el dispositivo.";
+"AA0555" = "APP necesita su permiso para la función de notificación push para recibir notificaciones del dispositivo.";
 "AA0556" = "ID del dispositivo:";
 "AA0557" = "Sin acceso a la red local. Por favor, actívelo en la configuración.";
 "AA0558" = "Error al crear el código QR.";
@@ -603,13 +603,13 @@
 "AA0607" = "Para localizar problemas con precisión";
 "AA0608" = "Mínimo 10 caracteres";
 "AA0609" = "Acceder a más";
-"AA0610" = "Reoqoo solo puede acceder a algunas fotos del álbum. Se recomienda permitir el acceso a 'todas las fotos'. Haga clic para configurar.";
-"AA0611" = "reoqoo no tiene acceso al álbum, toque para configurar";
+"AA0610" = "APP solo puede acceder a algunas fotos del álbum. Se recomienda permitir el acceso a 'todas las fotos'. Haga clic para configurar.";
+"AA0611" = "APP no tiene acceso al álbum, toque para configurar";
 "AA0612" = "Por favor, describa detalladamente sus sugerencias o problemas encontrados";
 "AA0613" = "Configuración de notificaciones push";
 "AA0614" = "Configuración de permisos del sistema";
 "AA0615" = "Notificación de mensajes push";
-"AA0616" = "Al activarlo, podrá obtener oportunamente las últimas noticias de la aplicación reoqoo";
+"AA0616" = "Al activarlo, podrá obtener oportunamente las últimas noticias de la aplicación APP";
 "AA0617" = "Autorizar";
 "AA0618" = "Activado";
 "AA0619" = "Ubicación";
@@ -626,7 +626,7 @@
 "AA0630" = "Una vez activado, permite el uso de la reproducción de vídeo en ventana pequeña y las notificaciones de timbre de supervisión";
 "AA0631" = "Interfaz de ventana emergente en segundo plano";
 "AA0632" = "Una vez activado, puede recibir notificaciones del timbre de vigilancia";
-"AA0633" = "Para ofrecerle una mejor experiencia de usuario, reoqoo solicitará las siguientes autorizaciones del sistema en ciertas situaciones.";
+"AA0633" = "Para ofrecerle una mejor experiencia de usuario, APP solicitará las siguientes autorizaciones del sistema en ciertas situaciones.";
 "AA0634" = "Autorizado";
 "AA0635" = "No autorizado";
 "AA0636" = "Red local";
@@ -657,5 +657,29 @@
 "AA0663" = "Por favor, descarga la aplicación \"Xiaotun Cloud\" para seguir usando";
 "AA0664" = "No Recordar de Nuevo";
 "AA0665" = "Acerca de";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Introduzca la cuenta";
+"AA0670" = "Acuerdo de Usuario y Política de Privacidad";
+"AA0671" = "¡Bienvenido a Xiaotun! Xiaotun es desarrollado y operado por reoqoo IoT Technology Co., Ltd. (en adelante, \"nosotros\"). Puedes usar Xiaotun para gestionar y usar cámaras inteligentes.";
+"AA0672" = "Antes de usar Xiaotun, lea y comprenda plenamente los \"%@\" y \"%@\" para comprender nuestros servicios y cómo recopilamos y procesamos su información personal durante el servicio.";
+"AA0673" = "Si está de acuerdo con el acuerdo mencionado anteriormente, haga clic en \"Aceptar\" para comenzar a usar Xiaotun.";
+"AA0674" = "Los menores de edad deben leer el texto del acuerdo mencionado anteriormente acompañados de un tutor y usar Xiaotun con el consentimiento y en presencia del tutor.";
+"AA0675" = "Puede gestionar su información personal en la página 'Yo'. Protegeremos su información personal según los estándares de tecnología de seguridad de la industria.";
+"AA0676" = "Durante el uso, también podemos solicitar los siguientes permisos: Bluetooth, Ubicación, Cámara, Biblioteca de fotos, Almacenamiento, Micrófono, Información del dispositivo, Red local, Calendario, Notificaciones. Siempre puedes acceder a la gestión de permisos para ajustar la configuración de permisos.";
+"AA0677" = "Estimado usuario, para proteger mejor sus derechos personales, hemos actualizado el %@ de acuerdo con las últimas leyes y regulaciones y nuestras prácticas comerciales. Por lo tanto, le enviamos este aviso.\nPor favor, léalo atentamente antes de usarlo. Al hacer clic en el botón de aceptar, usted indica que ha leído y entendido los términos actualizados y acepta estar sujeto a la política actualizada. Procesaremos su información personal y le proporcionaremos servicios basados en su autorización y consentimiento.\n\nSi tiene alguna pregunta, contáctenos:\nCorreo electrónico: %@";
+"AA0678" = "¡Bienvenido a usar reoqoo! reoqoo es desarrollado y operado por reoqoo IoT Technology Co., Ltd. (en adelante, \"nosotros\"). Puede usar y administrar cámaras inteligentes a través de reoqoo.";
+"AA0679" = "Antes de usar reoqoo, lea y comprenda plenamente los 《%@》 y 《%@》 para que pueda comprender nuestros servicios y cómo recopilamos y procesamos su información personal durante el servicio.";
+"AA0680" = "Si está de acuerdo con el acuerdo mencionado anteriormente, haga clic en \"Aceptar\" para comenzar a usar reoqoo.";
+"AA0681" = "Los menores deben leer el texto del acuerdo mencionado anteriormente acompañados de un tutor, y usar reoqoo con el consentimiento y acompañamiento de un tutor.";
+"AA0682" = "No aceptar y salir de la aplicación";
+"AA0683" = "Recordatorio de Actualización del Acuerdo";
+"AA0684" = "Acuerdo de Usuario de la Cámara";
+"AA0685" = "¡Bienvenido al uso de %@! %@ es desarrollado y operado por %@ (en adelante denominado \"nosotros\"). Puede usar y gestionar cámaras inteligentes a través de %@. \nAntes de usar %@, lea y comprenda completamente %@%@, para que pueda comprender nuestros servicios, así como la recopilación y el procesamiento de su información personal durante el servicio. \nSi acepta el texto del acuerdo mencionado anteriormente, haga clic en \"Aceptar\" para comenzar a usar %@. \nLos menores de edad deben leer el texto del acuerdo mencionado anteriormente acompañados de un tutor, y usar %@ con el consentimiento y acompañamiento del tutor. Protegeremos su información personal de acuerdo con los estándares de seguridad tecnológica de la industria.";
+"AA0686" = "Introduzca número de celular o email";
+"AA0687" = "Introduzca número de celular o email";
+"AA0688" = "Introduce la cuenta %@ para compartir el dispositivo";
+"AA0689" = "Intente las siguientes operaciones y vuelva a intentarlo:\n1. Presione y mantenga presionado el botón de reinicio para reiniciar el dispositivo;\n2. Por favor, compruebe si el dispositivo está conectado a la fuente de alimentación;\n3. Por favor, compruebe si la antena del dispositivo está suelta;\n4. Por favor, asegúrese de que la comunicación de la señal 4G actual sea normal.";
+"AA0690" = "La cámara es demasiado baja, actualícela en un estado de electricidad ~";
+"AA0691" = "Usando una red no-WLAN, la reproducción puede incurrir en costos de datos";
+"AA0692" = "Visto %@";
+"AA0693" = "La aplicación quiere usar tu almacenamiento";
