--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fa.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fa.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "قوی";
 "AA0030" = "عدم تطابق موارد وارد شده توسط شما";
 "AA0031" = "بازیابی گذرواژه";
-"AA0032" = "لطفا reoqoo ID را وارد کنید";
+"AA0032" = "لطفا ID را وارد کنید";
 "AA0033" = "چنین حسابی پیدا نشد";
 "AA0034" = "لطفا کد تایید را وارد نمایید";
 "AA0035" = "کد تصمیم فرستاده شده است";
@@ -62,16 +62,16 @@
 "AA0062" = "Scan device body QR code and add device";
 "AA0063" = "نور چراغ";
 "AA0064" = "آلبوم عکس ها";
-"AA0065" = "reoqoo می خواهد از دوربین شما استفاده کند";
+"AA0065" = "APP می خواهد از دوربین شما استفاده کند";
 "AA0066" = "شما نیاز به اسکن کد QR برای اتصال و اتصال دستگاه دارید. مجاز است دوربین را باز کند؟";
 "AA0067" = "رد کردن";
 "AA0068" = "هیچ اجازه دوربین نیست، لطفاً فعالش کنید در Settings";
-"AA0069" = "reoqoo می خواهد از اطلاعات مکان شما استفاده کند";
+"AA0069" = "APP می خواهد از اطلاعات مکان شما استفاده کند";
 "AA0070" = "برای موفقیت در تجهیزات اضافه، شما نیاز اجازه استفاده از خدمات محل سکونت برای گرفتن اطلاعات فای.لطفا سرویسهای محل سکونت.";
 "AA0071" = "هیچ اجازه محل وجود ندارد، لطفا در تنظیمات فعالش کنید";
 "AA0072" = "اجازه میدی که ریوکوئو از اطلاعات آلبوم استفاده کنه؟";
 "AA0073" = "نیاز به مشاهده و ارسال تصویر. آیا اجازه دارد آلبوم را باز کند؟";
-"AA0074" = "Do you allow reoqoo to use your Bluetooth information?";
+"AA0074" = "Do you allow APP to use your Bluetooth information?";
 "AA0075" = "اجازه‌ی بلوتوت برای کمک به دستگاه‌های هوشمند در طول فرایند اضافه به Wi Fi نیاز دارد. اجازه دارد؟";
 "AA0076" = "اجازه‌ی بلوتوت نیست، لطفا در تنظیمات فعالش کنید";
 "AA0077" = "آيا از هدايت بالا پيروى كرده‌ايد تا وسيله‌ها را فعال كنيد؟";
@@ -146,7 +146,7 @@
 "AA0146" = "شما تنها می توانید X بازدید کننده را بیافزایید، اگر می خواهید بازدید کننده‌های دیگری بیافزایید، لطفاً ابتدا بعضی از بازدید کننده‌ها را حذف کنید!";
 "AA0147" = "مدیریت اشتراک گذاری";
 "AA0148" = "وارد حساب reoqoo برای شریک دستگاه با";
-"AA0149" = "لطفاً حساب reoqoo account";
+"AA0149" = "لطفا ID را وارد کنید";
 "AA0150" = "اخیراً مشترک";
 "AA0151" = "اشتراک گذاری چهره به چهره";
 "AA0152" = "اشتراک گذاری";
@@ -155,7 +155,7 @@
 "AA0155" = "Has been shared with this friend";
 "AA0156" = "اشتراک موفقیت آمیز بود";
 "AA0157" = "تاریخ پایان";
-"AA0158" = "استفاده از کاربرد reoqoo برای اسکن کد QR بالا و شریک دستگاه";
+"AA0158" = "استفاده از کاربرد APP برای اسکن کد QR بالا و شریک دستگاه";
 "AA0159" = "دوستان قبلا";
 "AA0160" = "دریافت کد QR شکست خورد ، فشار تازگی را فشار دهید";
 "AA0161" = "%@ دستگاهی را با شما به اشتراک گذاشت";
@@ -224,7 +224,7 @@
 "AA0224" = "درباره ریوکوئو";
 "AA0225" = "مرکز پیام";
 "AA0226" = "عملیات موفق";
-"AA0227" = "برای دریافت به موقع آخرین اخبار، مجوز اعلان برنامه Youkanto را روشن کنید";
+"AA0227" = "برای دریافت به موقع آخرین اخبار، مجوز اعلان برنامه %@ را روشن کنید";
 "AA0228" = "هیچ پیغام دیگری نیست";
 "AA0229" = "بدون تصویر یا ویدیو";
 "AA0230" = "انتخاب";
@@ -545,13 +545,13 @@
 "AA0546" = "دوربین";
 "AA0547" = "عکس";
 "AA0548" = "ویدئو";
-"AA0549" = "reoqoo requires your permission to grant access to the album in order to use the QR code scanning function";
-"AA0550" = "reoqoo نیاز به اجازه شما برای اجازه استفاده از آلبوم برای ذخیره کردن کد دستگاه QR به آلبوم سیستم است";
-"AA0551" = "reoqoo نیاز به اجازه شما برای اجازه استفاده از دوربین برای استفاده از فعالیت اسکن کد QR";
-"AA0552" = "reoqoo requires your permission to authorize Bluetooth usage permissions in order to access Bluetooth devices";
-"AA0553" = "reoqoo requires your permission to authorize the use of the microphone in order to use the intercom function";
-"AA0554" = "reoqoo requires your permission to authorize local network access for device connections";
-"AA0555" = "reoqoo requires you to grant permission for push notifications in order to receive device push notifications.";
+"AA0549" = "APP requires your permission to grant access to the album in order to use the QR code scanning function";
+"AA0550" = "APP نیاز به اجازه شما برای اجازه استفاده از آلبوم برای ذخیره کردن کد دستگاه QR به آلبوم سیستم است";
+"AA0551" = "APP نیاز به اجازه شما برای اجازه استفاده از دوربین برای استفاده از فعالیت اسکن کد QR";
+"AA0552" = "APP requires your permission to authorize Bluetooth usage permissions in order to access Bluetooth devices";
+"AA0553" = "APP requires your permission to authorize the use of the microphone in order to use the intercom function";
+"AA0554" = "APP requires your permission to authorize local network access for device connections";
+"AA0555" = "APP requires you to grant permission for push notifications in order to receive device push notifications.";
 "AA0556" = "Device ID:";
 "AA0557" = "اجازه دسترسی دسترسی دستگاه LAN محلی وجود ندارد، لطفا در تنظیمات فعالش کنید";
 "AA0558" = "خرابی در ایجاد کد QR دستگاه";
@@ -606,13 +606,13 @@
 "AA0607" = "آسان است که مشکلات را دقیقا پیدا کنیم";
 "AA0608" = "حداقل ده کلمه";
 "AA0609" = "ملاقات بیشتری";
-"AA0610" = "reoqoo فقط می‌تواند به چند عکس در آلبوم دسترسی دهد. این پیشنهاد می‌شود که اجازه‌دهنده دسترسی به 'همه عکس' باشد. برای تنظیم آن را فشار دهید.";
-"AA0611" = "reoqoo دسترسی به آلبوم ندارد، برای تنظیمش فشار دهید";
+"AA0610" = "APP فقط می‌تواند به چند عکس در آلبوم دسترسی دهد. این پیشنهاد می‌شود که اجازه‌دهنده دسترسی به 'همه عکس' باشد. برای تنظیم آن را فشار دهید.";
+"AA0611" = "APP دسترسی به آلبوم ندارد، برای تنظیمش فشار دهید";
 "AA0612" = "لطفا توضیح جزئیات از پیشنهاد یا مشکلات شما را پیشنهاد کنید";
 "AA0613" = "تنظیمات فشار پیام";
 "AA0614" = "تنظیمات اجازه سیستم";
 "AA0615" = "هشدار فشار پیام";
-"AA0616" = "بعد از فعالیت، شما می توانید فوراً اخیراً جدیدی از کاربرد reoqoo را دریافت کنید";
+"AA0616" = "بعد از فعالیت، شما می توانید فوراً اخیراً جدیدی از کاربرد APP را دریافت کنید";
 "AA0617" = "برو اجازه بده";
 "AA0618" = "باز شده";
 "AA0619" = "موقعیت";
@@ -660,5 +660,29 @@
 "AA0663" = "لطفاً برنامه \"Xiaotun Cloud\" را دانلود کنید تا به استفاده ادامه دهید";
 "AA0664" = "دیگر یادآوری نکن";
 "AA0665" = "درباره";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "لطفا حساب را وارد کنید";
+"AA0670" = "توافقنامه کاربر و سیاست حفظ حریم خصوصی";
+"AA0671" = "به Xiaotun خوش آمدید! Xiaotun توسط reoqoo IoT Technology Co., Ltd. (از این پس به عنوان \"ما\" نامیده می‌شود) توسعه و اداره می‌شود. شما می‌توانید از Xiaotun برای مدیریت و استفاده از دوربین‌های هوشمند استفاده کنید.";
+"AA0672" = "قبل از استفاده از Xiaotun، لطفاً \"%@\" و \"%@\" را به دقت بخوانید و به طور کامل درک کنید تا خدمات ما و نحوه جمع‌آوری و پردازش اطلاعات شخصی شما در طول خدمت را درک کنید.";
+"AA0673" = "اگر با توافق نامه فوق موافق هستید، برای شروع استفاده از Xiaotun روی \"موافقم\" کلیک کنید.";
+"AA0674" = "افراد زیر سن قانونی باید متن قرارداد ذکر شده در بالا را همراه با قیم خود بخوانند و از Xiaotun با رضایت و حضور قیم استفاده کنند.";
+"AA0675" = "شما می‌توانید اطلاعات شخصی خود را در صفحه 'من' مدیریت کنید. ما اطلاعات شخصی شما را طبق استانداردهای فناوری امنیتی صنعت محافظت خواهیم کرد.";
+"AA0676" = "در طول استفاده، ممکن است مجوزهای زیر را نیز درخواست کنیم: بلوتوث، مکان، دوربین، کتابخانه عکس، ذخیره‌سازی، میکروفون، اطلاعات دستگاه، شبکه محلی، تقویم، اعلان‌ها. شما همیشه می‌توانید به مدیریت مجوزها مراجعه کنید تا تنظیمات مجوز را تنظیم کنید.";
+"AA0677" = "کاربر گرامی، برای محافظت بهتر از حقوق شخصی شما، ما %@ را مطابق با آخرین قوانین و مقررات و شیوه‌های تجاری خود به‌روز کرده‌ایم. بنابراین، این اخطار را برای شما ارسال می‌کنیم.\nلطفاً قبل از استفاده به‌دقت مطالعه کنید. با کلیک بر روی دکمه موافقت، بیان می‌کنید که شرایط به‌روز شده را خوانده و درک کرده‌اید و با سیاست به‌روز شده موافقت دارید. ما اطلاعات شخصی شما را بر اساس مجوز و رضایت شما پردازش خواهیم کرد و خدمات ارائه خواهیم داد.\n\nاگر سؤالی دارید، با ما تماس بگیرید:\nایمیل: %@";
+"AA0678" = "به reoqoo خوش آمدید! reoqoo توسط reoqoo IoT Technology Co., Ltd (از این پس به عنوان «ما» نامیده می‌شود) توسعه و مدیریت می‌شود. شما می‌توانید دوربین‌های هوشمند را از طریق reoqoo استفاده و مدیریت کنید.";
+"AA0679" = "قبل از استفاده از reoqoo، لطفاً 《%@》 و 《%@》 را به دقت بخوانید و به طور کامل درک کنید تا بتوانید خدمات ما و نحوه جمع‌آوری و پردازش اطلاعات شخصی شما در طول خدمات را درک کنید.";
+"AA0680" = "اگر با توافق نامه فوق موافق هستید، برای شروع استفاده از reoqoo روی \"موافقم\" کلیک کنید.";
+"AA0681" = "افراد زیر سن قانونی باید متن توافق نامه فوق را با همراهی سرپرست بخوانند و با رضایت و همراهی سرپرست از reoqoo استفاده کنند.";
+"AA0682" = "مخالفت کنید و از برنامه خارج شوید";
+"AA0683" = "یادآوری به‌روزرسانی توافقنامه";
+"AA0684" = "توافقنامه کاربر دوربین";
+"AA0685" = "به استفاده از %@ خوش آمدید! %@ توسط %@ (که از این پس به عنوان \"ما\" نامیده می‌شود) توسعه و مدیریت می‌شود. شما می‌توانید از طریق %@ از دوربین‌های هوشمند استفاده و مدیریت کنید.\nقبل از استفاده از %@، لطفاً %@%@ را با دقت بخوانید و به طور کامل درک کنید، تا بتوانید خدمات ما و همچنین جمع‌آوری و پردازش اطلاعات شخصی شما در طول ارائه خدمات را درک کنید.\nاگر با متن توافقنامه ذکر شده در بالا موافق هستید، لطفاً روی \"موافقم\" کلیک کنید تا استفاده از %@ را شروع کنید.\nافراد زیر سن قانونی باید متن توافقنامه ذکر شده در بالا را در حضور سرپرست خود بخوانند و با موافقت و همراهی سرپرست از %@ استفاده کنند. ما اطلاعات شخصی شما را مطابق با استانداردهای فناوری امنیتی صنعت محافظت خواهیم کرد.";
+"AA0686" = "لطفا شماره تلفن یا آدرس ایمیل خود را وارد نمایید";
+"AA0687" = "لطفا شماره تلفن یا آدرس ایمیل خود را وارد نمایید";
+"AA0688" = "وارد حساب %@ برای شریک دستگاه با";
+"AA0689" = "لطفاً عملیات زیر را امتحان کنید و دوباره امتحان کنید:\n1. دکمه بازنشانی را فشار دهید و نگه دارید تا دستگاه بازنشانی شود;\n2. لطفاً بررسی کنید که آیا دستگاه به منبع تغذیه متصل است یا خیر;\n3. لطفاً بررسی کنید که آیا آنتن دستگاه شل شده است یا خیر;\n4. لطفاً اطمینان حاصل کنید که ارتباط سیگنال 4G فعلی طبیعی است.";
+"AA0690" = "دوربین خیلی کم است، لطفا در وضعیت برق ارتقا دهید ~";
+"AA0691" = "استفاده از شبکه غیر WLAN، بازی کردن بارهای ترافیک";
+"AA0692" = "دیدن %@";
+"AA0693" = "برنامه می‌خواهد از اطلاعات ذخیره‌سازی شما استفاده کند";
