--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fr.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fr.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Fort";
 "AA0030" = "Discordance pour deux mots de passe";
 "AA0031" = "Retrouver le mot de passe";
-"AA0032" = "S'il vous plaît entrer reoqoo ID";
+"AA0032" = "S'il vous plaît entrer ID";
 "AA0033" = "Compte n'existe pas";
 "AA0034" = "Entrez le code de vérification";
 "AA0035" = "Le code de vérification a été envoyé à";
@@ -61,16 +61,16 @@
 "AA0062" = "Scanner le QR code sur l'appareil pour ajouter";
 "AA0063" = "Lampe de poche";
 "AA0064" = "Enregistrements manuels";
-"AA0065" = "reoqoo veut utiliser votre appareil photo";
+"AA0065" = "APP veut utiliser votre appareil photo";
 "AA0066" = "Vous devez scanner le code QR pour connecter et lier le périphérique. Est-il permis d'ouvrir la caméra?";
 "AA0067" = "Refuser";
 "AA0068" = "Aucune autorisation de caméra, veuillez activer dans les Paramètres";
-"AA0069" = "reoqoo souhaite utiliser vos informations de localisation";
+"AA0069" = "APP souhaite utiliser vos informations de localisation";
 "AA0070" = "Pour l'équipement ajouté avec succès, vous aurez besoin d'autoriser l'utilisation des services de localisation pour obtenir des informations de connexion Wi-Fi.S'il vous plaît activer les services.";
 "AA0071" = "Pas de permission de localisation, veuillez l'activer dans les paramètres";
-"AA0072" = "reoqoo souhaite accéder à vos albums photo";
+"AA0072" = "APP souhaite accéder à vos albums photo";
 "AA0073" = "Besoin d'afficher et d'envoyer la photo. Est-il permis d'ouvrir l'album?";
-"AA0074" = "reoqoo souhaite utiliser vos informations Bluetooth";
+"AA0074" = "APP souhaite utiliser vos informations Bluetooth";
 "AA0075" = "Autorisation Bluetooth nécessaire pour aider les appareils intelligents à se connecter au Wi-Fi lors de l'ajout. Permettre?";
 "AA0076" = "Pas d'autorisation Bluetooth, veuillez activer dans les paramètres";
 "AA0077" = "Avez-vous configuré l'appareil selon les instructions ci-dessus?";
@@ -78,7 +78,7 @@
 "AA0079" = "Analyse de l'appareil en cours...";
 "AA0080" = "Connexion de l'appareil en cours...";
 "AA0081" = "Enregistrement de l'appareil...";
-"AA0082" = "Assurez-vous que le portable est proche de l'appareil photo";
+"AA0082" = "Assurez-vous que le portable est proche de la caméra";
 "AA0083" = "Erreur de connexion (Code d'erreur : %@)";
 "AA0084" = "Veuillez réessayer après avoir effectué les opérations suivantes :";
 "AA0085" = "1. Appuyez longuement sur la touche de réinitialisation pour réinitialiser l'appareil";
@@ -101,15 +101,15 @@
 "AA0102" = "Changer le nom de l'appareil";
 "AA0103" = "Configuration";
 "AA0104" = "Configurer le Wi-Fi";
-"AA0105" = "L'appareil prend en charge le Wi-Fi 2,4 GHz";
-"AA0106" = "L'appareil prend en charge le Wi-Fi 2,4 GHz et 5 GHz";
+"AA0105" = "L'appareil supporte le Wi-Fi 2,4 GHz";
+"AA0106" = "L'appareil supporte le Wi-Fi 2,4 GHz et 5 GHz";
 "AA0107" = "Configuration réseau";
 "AA0108" = "Veuillez choisir le Wi-Fi connecté";
 "AA0109" = "Mot de passe Wi-Fi";
 "AA0110" = "Mémoriser le mot de passe";
 "AA0111" = "Mot de passe incorrect";
-"AA0112" = "L'appareil ne prend en charge que le Wi-Fi 2,4GHz";
-"AA0113" = "L'appareil ne prend en charge que le Wi-Fi 2,4GHz, le Wi-Fi actuel pourrait être 5GHz. Continuer ?";
+"AA0112" = "L'appareil ne supporte que le Wi-Fi 2,4GHz";
+"AA0113" = "L'appareil ne supporte que le Wi-Fi 2,4GHz, le Wi-Fi actuel pourrait être 5GHz. Continuer ?";
 "AA0114" = "1. Veuillez vérifier si le mot de passe Wi-Fi est correct";
 "AA0115" = "2. Maintenez enfoncé le bouton de réinitialisation pour réinitialiser l'appareil";
 "AA0116" = "3. Vérifiez si le routeur a activé des restrictions d'accès";
@@ -129,15 +129,15 @@
 "AA0130" = "Après vous être connecté au Wi-Fi commençant par 'XT-', retournez à l'application pour terminer le processus d'ajout~";
 "AA0131" = "OK";
 "AA0132" = "Analyse en cours";
-"AA0133" = "Assurez-vous que la caméra est en attente de connexion,rapprochez votre portable de l'appareil photo";
+"AA0133" = "Vérifiez que la caméra est prête à se connecter, placez votre téléphone portable près de la caméra.";
 "AA0134" = "Connecter";
 "AA0135" = "Aucun appareil trouvé";
-"AA0136" = "1. Assurez-vous que la caméra est alimentée";
+"AA0136" = "1. Vérifiez que la caméra est bien connectée à l'alimentation électrique.";
 "AA0137" = "2. Assurez-vous que le Bluetooth est activé sur votre téléphone";
 "AA0138" = "3. Assurez-vous que votre téléphone est proche de la caméra";
 "AA0139" = "4. Réinitialisez la caméra et réessayez";
 "AA0140" = "Appareil non trouvé ?";
-"AA0141" = "1. Assurez-vous que le portable est proche de l'appareil photo";
+"AA0141" = "1. Assurez-vous que le portable est proche de la caméra";
 "AA0142" = "2. Réinitialiser la caméra et puis réessayer";
 "AA0143" = "Rescanner";
 "AA0144" = "Échec de l'ouverture de l'album";
@@ -145,7 +145,7 @@
 "AA0146" = "Le maximum de X visiteurs peut être ajouté. Supprimez des visiteurs pour ajouter des nouveaux.";
 "AA0147" = "Configuration de partage";
 "AA0148" = "Entrez le compte reoqoo pour partager l'appareil";
-"AA0149" = "Veuillez entrer le compte reoqoo";
+"AA0149" = "S'il vous plaît entrer ID";
 "AA0150" = "Partagé récemment";
 "AA0151" = "Partager face à face";
 "AA0152" = "Partager";
@@ -154,7 +154,7 @@
 "AA0155" = "Déjà partagé avec cet ami";
 "AA0156" = "Partagé avec succès";
 "AA0157" = "Valable jusqu'à";
-"AA0158" = "Scannez le code QR ci-dessus avec l'APP reoqoo pour partager l'appareil";
+"AA0158" = "Scannez le code QR ci-dessus avec l'APP pour partager l'appareil";
 "AA0159" = "Vos partages";
 "AA0160" = "Impossible de récupérer le code QR, cliquez pour rafraîchir";
 "AA0161" = "%@ a partagé un appareil avec vous";
@@ -215,7 +215,7 @@
 "AA0216" = "Rafraichissement";
 "AA0217" = "Service en ligne";
 "AA0218" = "Enregistrements manuels";
-"AA0219" = "Mise à jour du firmware";
+"AA0219" = "Mise à jour du micrologiciel";
 "AA0220" = "Ne pas déranger le réglage";
 "AA0221" = "Langue";
 "AA0222" = "Poser une question";
@@ -223,7 +223,7 @@
 "AA0224" = "À propos de reoqoo";
 "AA0225" = "Centre de notifications";
 "AA0226" = "Opération réussie";
-"AA0227" = "Activez l'autorisation de notification d'APP reoqoo, pour obtenir immédiatement les dernières nouvelles";
+"AA0227" = "Activez l'autorisation de notification d'APP %@, pour obtenir immédiatement les dernières nouvelles";
 "AA0228" = "Aucun message!";
 "AA0229" = "Aucune capture d'écran ou vidéo";
 "AA0230" = "Sélectionner";
@@ -428,7 +428,7 @@
 "AA0431" = "Partagez les informations du journal des applications et des appareils pour identifier les problèmes";
 "AA0432" = "Sélection d'une date";
 "AA0433" = "S'il vous plaît saisir votre adresse e-mail de contact.";
-"AA0434" = "Retour";
+"AA0434" = "Commentaires des utilisateurs";
 "AA0435" = "Heure";
 "AA0436" = "Minute";
 "AA0437" = "Annuler la diffusion en direct";
@@ -466,8 +466,8 @@
 "AA0469" = "Cet utilisateur est déjà un visiteur de cet appareil";
 "AA0470" = "Vidéo d'opération";
 "AA0471" = "ou";
-"AA0472" = "Ajouter des instructions";
-"AA0473" = "Veuillez réessayer après les étapes suivantes :\n1. Vérifiez que la caméra est sous tension ;\n2. Assurez-vous que le Bluetooth est activé sur votre téléphone ;\n3. Assurez-vous que le téléphone est proche de la caméra ;\n4. Réinitialisez la caméra et réessayez.";
+"AA0472" = "Guide pour ajouter";
+"AA0473" = "Veuillez réessayer après les étapes suivantes :\n1. Vérifiez que la caméra est bien connectée à l'alimentation électrique. ;\n2. Assurez-vous que le Bluetooth est activé sur votre téléphone ;\n3. Assurez-vous que le téléphone est proche de la caméra ;\n4. Réinitialisez la caméra et réessayez.";
 "AA0474" = "Session expirée";
 "AA0475" = "Erreur inconnue";
 "AA0476" = "Appareil en cours de liaison";
@@ -538,17 +538,17 @@
 "AA0542" = "Échec du téléchargement, veuillez vérifier la connexion réseau de l'appareil et réessayer";
 "AA0543" = "Échec de la mise à jour, veuillez redémarrer l'appareil et réessayer";
 "AA0544" = "Mise à jour en cours...";
-"AA0545" = "J'ai lu et j'accepte les Conditions d'utilisation et la Politique de confidentialité de Reoqoo";
+"AA0545" = "J'ai lu et j'accepte les Conditions d'utilisation et la Politique de confidentialité de";
 "AA0546" = "La caméra";
 "AA0547" = "photo";
 "AA0548" = "La vidéo";
-"AA0549" = "Reoqoo a besoin de votre autorisation pour accéder à l'album photo afin d'utiliser la fonction de scan QR code";
-"AA0550" = "reoqoo nécessite votre autorisation pour accéder aux albums afin d'enregistrer le code QR de l'appareil dans l'album système.";
-"AA0551" = "reoqoo nécessite votre autorisation pour utiliser la caméra pour la fonction de scan de code QR.";
-"AA0552" = "reoqoo nécessite votre autorisation pour accéder aux appareils Bluetooth.";
-"AA0553" = "reoqoo nécessite votre autorisation pour accéder au micro afin d'utiliser la fonction d'interphone.";
-"AA0554" = "reoqoo nécessite votre autorisation pour accéder au réseau local afin de connecter les appareils.";
-"AA0555" = "reoqoo nécessite votre autorisation pour la fonction de notification push afin de recevoir des notifications de l'appareil.";
+"AA0549" = "APP a besoin de votre autorisation pour accéder à l'album photo afin d'utiliser la fonction de scan QR code";
+"AA0550" = "APP nécessite votre autorisation pour accéder aux albums afin d'enregistrer le code QR de l'appareil dans l'album système.";
+"AA0551" = "APP nécessite votre autorisation pour utiliser la caméra pour la fonction de scan de code QR.";
+"AA0552" = "APP nécessite votre autorisation pour accéder aux appareils Bluetooth.";
+"AA0553" = "APP nécessite votre autorisation pour accéder au micro afin d'utiliser la fonction d'interphone.";
+"AA0554" = "APP nécessite votre autorisation pour accéder au réseau local afin de connecter les appareils.";
+"AA0555" = "APP nécessite votre autorisation pour la fonction de notification push afin de recevoir des notifications de l'appareil.";
 "AA0556" = "ID de l'appareil :";
 "AA0557" = "Aucun accès au réseau local. Veuillez activer dans les paramètres.";
 "AA0558" = "Échec de la création du code QR.";
@@ -603,13 +603,13 @@
 "AA0607" = "Pour un diagnostic précis";
 "AA0608" = "Au moins 10 caractères";
 "AA0609" = "Voir plus";
-"AA0610" = "Reoqoo ne peut accéder qu'à certaines photos de l'album. Il est conseillé de permettre l'accès à 'toutes les photos'. Cliquez pour régler.";
-"AA0611" = "reoqoo n'a pas accès à l'album, appuyez pour régler";
+"AA0610" = "APP ne peut accéder qu'à certaines photos de l'album. Il est conseillé de permettre l'accès à 'toutes les photos'. Cliquez pour régler.";
+"AA0611" = "APP n'a pas accès à l'album, appuyez pour régler";
 "AA0612" = "Décrivez en détail vos suggestions ou problèmes rencontrés";
 "AA0613" = "Paramètres de notifications push";
 "AA0614" = "Paramètres des autorisations système";
 "AA0615" = "Notification de message push";
-"AA0616" = "Une fois activé, vous recevrez les dernières nouvelles de l'application reoqoo en temps opportun";
+"AA0616" = "Une fois activé, vous recevrez les dernières nouvelles de l'application APP en temps opportun";
 "AA0617" = "Autoriser";
 "AA0618" = "Activé";
 "AA0619" = "Localisation";
@@ -626,7 +626,7 @@
 "AA0630" = "Une fois activé, permet d'utiliser la lecture vidéo en petite fenêtre et les notifications de cloche de surveillance";
 "AA0631" = "Interface de popup en arrière-plan";
 "AA0632" = "Une fois activé, vous pouvez recevoir des notifications de la sonnette de surveillance";
-"AA0633" = "Pour vous offrir une meilleure expérience utilisateur, reoqoo peut demander les autorisations système suivantes dans certaines situations.";
+"AA0633" = "Pour vous offrir une meilleure expérience utilisateur, APP peut demander les autorisations système suivantes dans certaines situations.";
 "AA0634" = "Autorisé";
 "AA0635" = "Non autorisé";
 "AA0636" = "Réseau local";
@@ -657,5 +657,29 @@
 "AA0663" = "Veuillez télécharger l'application \"Xiaotun Cloud\" pour continuer à utiliser";
 "AA0664" = "Ne plus rappeler";
 "AA0665" = "À propos de";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Veuillez entrer le compte";
+"AA0670" = "Accord d'Utilisation et Politique de Confidentialité";
+"AA0671" = "Bienvenue sur Xiaotun! Xiaotun est développé et exploité par reoqoo IoT Technology Co., Ltd. (ci-après dénommé \"nous\"). Vous pouvez utiliser Xiaotun pour gérer et utiliser des caméras intelligentes.";
+"AA0672" = "Avant d'utiliser Xiaotun, veuillez lire et bien comprendre les \"%@\" et \"%@\" pour comprendre nos services et comment nous collectons et traitons vos informations personnelles pendant le service.";
+"AA0673" = "Si vous acceptez l'accord mentionné ci-dessus, veuillez cliquer sur \"Accepter\" pour commencer à utiliser Xiaotun.";
+"AA0674" = "Les mineurs doivent lire le texte de l'accord mentionné ci-dessus accompagnés d'un tuteur et utiliser Xiaotun avec le consentement et en présence du tuteur.";
+"AA0675" = "Vous pouvez gérer vos informations personnelles sur la page 'Moi'. Nous protégerons vos informations personnelles conformément aux normes de technologie de sécurité de l'industrie.";
+"AA0676" = "Au cours de votre utilisation, nous pouvons également demander les autorisations suivantes : Bluetooth, Localisation, Appareil photo, Bibliothèque de photos, Stockage, Microphone, Informations sur l'appareil, Réseau local, Calendrier, Notifications. Vous pouvez toujours accéder à la gestion des autorisations pour ajuster les paramètres des autorisations.";
+"AA0677" = "Cher utilisateur, afin de mieux protéger vos droits personnels, nous avons mis à jour %@ conformément aux dernières lois et réglementations ainsi qu'à nos pratiques commerciales. Nous vous envoyons donc cet avis.\nVeuillez le lire attentivement avant utilisation. En cliquant sur le bouton d'accord, vous indiquez que vous avez lu et compris les termes mis à jour et acceptez d'être lié par la politique mise à jour. Nous traiterons vos informations personnelles et vous fournirons des services sur la base de votre autorisation et consentement.\n\nSi vous avez des questions, veuillez nous contacter:\nE-mail: %@";
+"AA0678" = "Bienvenue sur reoqoo ! reoqoo est développé et exploité par reoqoo IoT Technology Co., Ltd. (ci-après dénommé \"nous\"). Vous pouvez utiliser et gérer des caméras intelligentes via reoqoo.";
+"AA0679" = "Avant d'utiliser reoqoo, veuillez lire et bien comprendre les 《%@》 et 《%@》 afin que vous puissiez comprendre nos services et comment nous collectons et traitons vos informations personnelles pendant le service.";
+"AA0680" = "Si vous acceptez l'accord mentionné ci-dessus, veuillez cliquer sur \"Accepter\" pour commencer à utiliser reoqoo.";
+"AA0681" = "Les mineurs doivent lire le texte de l'accord mentionné ci-dessus accompagné d'un tuteur, et utiliser reoqoo avec le consentement et l'accompagnement d'un tuteur.";
+"AA0682" = "Ne pas accepter et quitter l'application";
+"AA0683" = "Rappel de mise à jour de l'accord";
+"AA0684" = "Accord d'utilisateur de caméra";
+"AA0685" = "Bienvenue à l'utilisation de %@! %@ est développé et exploité par %@ (ci-après dénommé \"nous\"). Vous pouvez utiliser et gérer des caméras intelligentes via %@. \nAvant d'utiliser %@, veuillez lire et bien comprendre %@%@, afin que vous puissiez comprendre nos services, ainsi que la collecte et le traitement de vos informations personnelles pendant le service. \nSi vous acceptez le texte de l'accord mentionné ci-dessus, veuillez cliquer sur \"Accepter\" pour commencer à utiliser %@. \nLes mineurs doivent lire le texte de l'accord mentionné ci-dessus accompagnés d'un tuteur, et utiliser %@ avec le consentement et l'accompagnement du tuteur. Nous protégerons vos informations personnelles conformément aux normes de sécurité technologique de l'industrie.";
+"AA0686" = "Entrez le numéro de portable ou l'adresse e-mail";
+"AA0687" = "Entrez le numéro de portable ou l'adresse e-mail";
+"AA0688" = "Entrez le compte %@ pour partager l'appareil";
+"AA0689" = "Veuillez essayer les opérations suivantes et réessayer:\n1. Appuyez et maintenez le bouton de réinitialisation pour réinitialiser l'appareil;\n2. Veuillez vérifier si l'appareil est connecté à l'alimentation électrique;\n3. Veuillez vérifier si l'antenne de l'appareil est desserrée;\n4. Veuillez vous assurer que la communication du signal 4G actuel est normale.";
+"AA0690" = "La caméra est trop basse, veuillez mettre à niveau dans un état d'électricité ~";
+"AA0691" = "Utilisation d'un réseau non-WLAN, la lecture peut entraîner des frais de données";
+"AA0692" = "Vu %@";
+"AA0693" = "L'application veut utiliser votre stockage";
