--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/id.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/id.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Kuat";
 "AA0030" = "Dua kali Anda memasukkan tidak konsisten";
 "AA0031" = "Mengembalikan kata sandi";
-"AA0032" = "Silakan masukkan akun reoqoo";
+"AA0032" = "Silakan masukkan akun";
 "AA0033" = "Akun tersebut tidak ditemukan";
 "AA0034" = "Kode verifikasi";
 "AA0035" = "Kode verifikasi telah dikirim ke";
@@ -62,16 +62,16 @@
 "AA0062" = "Pindai kode QR untuk menambahkan perangkat";
 "AA0063" = "Senter";
 "AA0064" = "Album";
-"AA0065" = "reoqoo ingin menggunakan kamera Anda";
+"AA0065" = "APP ingin menggunakan kamera Anda";
 "AA0066" = "Anda perlu memindai kode QR untuk menghubungkan dan mengikat perangkat. Apakah diizinkan membuka kamera?";
 "AA0067" = "Ditolak";
 "AA0068" = "Tidak ada izin kamera, harap aktifkan di Pengaturan";
-"AA0069" = "reoqoo ingin menggunakan informasi lokasi Anda";
+"AA0069" = "APP ingin menggunakan informasi lokasi Anda";
 "AA0070" = "Untuk berhasil ditambahkan peralatan, Anda perlu mengizinkan penggunaan Layanan Lokasi untuk mendapatkan informasi Wi-Fi.Harap aktifkan Layanan Lokasi";
 "AA0071" = "Tidak ada izin pemosisian. Silakan aktifkan di Pengaturan";
-"AA0072" = "Izinkan \"reoqoo\" menggunakan informasi album";
+"AA0072" = "Izinkan \"APP\" menggunakan informasi album";
 "AA0073" = "Perlu melihat dan mengirim gambar. Apakah boleh membuka album?";
-"AA0074" = "Izinkan \"reoqoo\" menggunakan informasi Bluetooth";
+"AA0074" = "Izinkan \"APP\" menggunakan informasi Bluetooth";
 "AA0075" = "Akses Bluetooth diperlukan untuk membantu perangkat pintar terhubung ke Wi-Fi selama proses penambahan. Izinkan?";
 "AA0076" = "Tidak ada izin akses Bluetooth. Silakan aktifkan di Pengaturan";
 "AA0077" = "Sudahkah Anda mengoperasikan perangkat sesuai dengan panduan di atas?";
@@ -146,7 +146,7 @@
 "AA0146" = "Anda hanya dapat menambah pengunjung hingga X, bila anda masih ingin berbagi dengan teman lain, silakan menghapus sebagian pengunjung!";
 "AA0147" = "Pengelolaan berbagi";
 "AA0148" = "Masukkan akun reoqoo yang ingin dibagikan";
-"AA0149" = "Silakan masukkan akun reoqoo";
+"AA0149" = "Silakan masukkan akun";
 "AA0150" = "Baru-baru ini dibagikan";
 "AA0151" = "Berbagi dengan tatap muka";
 "AA0152" = "Berbagi";
@@ -155,7 +155,7 @@
 "AA0155" = "Sudah berbagi perangkat dengan teman";
 "AA0156" = "Berhasil berbagi";
 "AA0157" = "Berlaku hingga";
-"AA0158" = "Pindai kode QR di atas dengan Aplikasi reoqoo untuk berbagi perangkat";
+"AA0158" = "Pindai kode QR di atas dengan Aplikasi APP untuk berbagi perangkat";
 "AA0159" = "Teman yang telah dibagikan";
 "AA0160" = "Gagal mendapatkan kode QR. Klik untuk memuat ulang.";
 "AA0161" = "%@ berbagi perangkat dengan Anda";
@@ -224,7 +224,7 @@
 "AA0224" = "Tentang reoqoo";
 "AA0225" = "Pusat Pesan";
 "AA0226" = "Operasi berhasil";
-"AA0227" = "Buka izin pemberitahuan  App reoqoo untuk mendapatkan berita terbaru secara cepat";
+"AA0227" = "Buka izin pemberitahuan  App %@ untuk mendapatkan berita terbaru secara cepat";
 "AA0228" = "tidak ada pesan lagi";
 "AA0229" = "Tidak ada tangkapan layar atau video";
 "AA0230" = "Pilih";
@@ -545,13 +545,13 @@
 "AA0546" = "Kamera";
 "AA0547" = "Foto-foto ini.";
 "AA0548" = "Video";
-"AA0549" = "reoqoo perlu izin Anda untuk mengotorisasi akses album agar dapat menggunakan fungsi pemindaian kode QR";
-"AA0550" = "reoqoo perlu izin Anda untuk mengotorisasi penggunaan album untuk menyimpan kode QR perangkat ke album sistem";
-"AA0551" = "reoqoo perlu izin Anda untuk mengotorisasi penggunaan kamera agar dapat menggunakan fungsi pemindaian kode QR";
-"AA0552" = "reoqoo perlu izin Anda untuk mengotorisasi penggunaan Bluetooth untuk mengakses perangkat Bluetooth";
-"AA0553" = "reoqoo perlu izin Anda untuk mengotorisasi penggunaan mik agar dapat menggunakan fungsi interkom";
-"AA0554" = "reoqoo perlu izin Anda untuk mengotorisasi akses jaringan lokal untuk menghubungkan perangkat Anda";
-"AA0555" = "reoqoo perlu izin Anda untuk mengotorisasi fungsi push agar dapat menerima pemberitahuan push perangkat";
+"AA0549" = "APP perlu izin Anda untuk mengotorisasi akses album agar dapat menggunakan fungsi pemindaian kode QR";
+"AA0550" = "APP perlu izin Anda untuk mengotorisasi penggunaan album untuk menyimpan kode QR perangkat ke album sistem";
+"AA0551" = "APP perlu izin Anda untuk mengotorisasi penggunaan kamera agar dapat menggunakan fungsi pemindaian kode QR";
+"AA0552" = "APP perlu izin Anda untuk mengotorisasi penggunaan Bluetooth untuk mengakses perangkat Bluetooth";
+"AA0553" = "APP perlu izin Anda untuk mengotorisasi penggunaan mik agar dapat menggunakan fungsi interkom";
+"AA0554" = "APP perlu izin Anda untuk mengotorisasi akses jaringan lokal untuk menghubungkan perangkat Anda";
+"AA0555" = "APP perlu izin Anda untuk mengotorisasi fungsi push agar dapat menerima pemberitahuan push perangkat";
 "AA0556" = "ID Perangkat:";
 "AA0557" = "Tidak ada izin akses perangkat LAN lokal, silakan aktifkan di Pengaturan";
 "AA0558" = "Gagal membuat kode QR perangkat";
@@ -606,13 +606,13 @@
 "AA0607" = "Memfasilitasi lokasi masalah yang akurat";
 "AA0608" = "Minimal 10 kata";
 "AA0609" = "Kunjungi lebih banyak";
-"AA0610" = "reoqoo hanya dapat mengakses beberapa foto di album, disarankan untuk mengizinkan akses ke `semua foto`,klik untuk atur";
-"AA0611" = "reoqoo tidak memiliki izin akses album, klik untuk mengaturnya";
+"AA0610" = "APP hanya dapat mengakses beberapa foto di album, disarankan untuk mengizinkan akses ke `semua foto`,klik untuk atur";
+"AA0611" = "APP tidak memiliki izin akses album, klik untuk mengaturnya";
 "AA0612" = "Harap jelaskan saran atau masalah yang Anda hadapi secara rinci";
 "AA0613" = "Pengaturan pesan push";
 "AA0614" = "Pengaturan akses sistem";
 "AA0615" = "Notifikasi pesan push";
-"AA0616" = "Setelah diaktifkan, dapat segera menerima pesan terbaru reoqoo APP";
+"AA0616" = "Setelah diaktifkan, dapat segera menerima pesan terbaru APP";
 "AA0617" = "Pergi izinkan";
 "AA0618" = "Diaktifkan";
 "AA0619" = "Posisi";
@@ -629,7 +629,7 @@
 "AA0630" = "Setelah dibuka, dapat menggunakan fitur putar balik jendela kecil dari kamera pengawas dan bel pengawas melayang";
 "AA0631" = "Antarmuka pop up latar belakang";
 "AA0632" = "Setelah diaktifkan, dapat segera menerima notifikasi bel pengawas";
-"AA0633" = "Untuk menyediakan pengalaman pengguna yang lebih baik untuk Anda, reoqoo akan mengajukan izin sistem ponsel berikut ini pada adegan tertentu";
+"AA0633" = "Untuk menyediakan pengalaman pengguna yang lebih baik untuk Anda, APP akan mengajukan izin sistem ponsel berikut ini pada adegan tertentu";
 "AA0634" = "Telah izinkan";
 "AA0635" = "Belum izinkan";
 "AA0636" = "Jaringan lokal";
@@ -659,6 +659,30 @@
 "AA0662" = "Perangkat berikut tidak tersedia di aplikasi saat ini";
 "AA0663" = "Silakan unduh aplikasi \"Xiaotun Cloud\" untuk terus menggunakan";
 "AA0664" = "Jangan Ingatkan Lagi";
-"AA0665" = "reoqoo";
-"AA0666" = "reoqoo";
+"AA0665" = "APP";
+"AA0666" = "XiaoTun";
 "AA0669" = "Silakan masukkan akun";
+"AA0670" = "Perjanjian Pengguna dan Kebijakan Privasi";
+"AA0671" = "Selamat datang di Xiaotun! Xiaotun dikembangkan dan dioperasikan oleh reoqoo IoT Technology Co., Ltd. (selanjutnya disebut \"kami\"). Anda dapat menggunakan Xiaotun untuk mengelola dan menggunakan kamera pintar.";
+"AA0672" = "Sebelum menggunakan Xiaotun, silakan baca dan pahami sepenuhnya \"%@\" dan \"%@\" untuk memahami layanan kami dan bagaimana kami mengumpulkan dan memproses informasi pribadi Anda selama layanan.";
+"AA0673" = "Jika Anda setuju dengan perjanjian yang disebutkan di atas, silakan klik \"Setuju\" untuk mulai menggunakan Xiaotun.";
+"AA0674" = "Anak di bawah umur harus membaca teks perjanjian yang disebutkan di atas didampingi oleh wali dan menggunakan Xiaotun dengan persetujuan dan kehadiran wali.";
+"AA0675" = "Anda dapat mengelola informasi pribadi Anda di halaman 'Saya'. Kami akan melindungi informasi pribadi Anda sesuai dengan standar teknologi keamanan industri.";
+"AA0676" = "Selama penggunaan, kami juga dapat meminta izin berikut: Bluetooth, Lokasi, Kamera, Perpustakaan Foto, Penyimpanan, Mikrofon, Informasi Perangkat, Jaringan Lokal, Kalender, Notifikasi. Anda selalu dapat mengakses manajemen izin untuk menyesuaikan pengaturan izin.";
+"AA0677" = "Pengguna yang terhormat, untuk melindungi hak pribadi Anda dengan lebih baik, kami telah memperbarui %@ sesuai dengan undang-undang dan peraturan terbaru serta praktik bisnis kami. Oleh karena itu, kami mengirimkan pemberitahuan ini kepada Anda.\nHarap baca dengan seksama sebelum menggunakan. Dengan mengklik tombol setuju, Anda menunjukkan bahwa Anda telah membaca dan memahami ketentuan yang diperbarui dan setuju untuk terikat dengan kebijakan yang diperbarui. Kami akan memproses informasi pribadi Anda dan memberikan layanan berdasarkan otorisasi dan persetujuan Anda.\n\nJika Anda memiliki pertanyaan, hubungi kami:\nEmail: %@";
+"AA0678" = "Selamat datang di reoqoo! reoqoo dikembangkan dan dioperasikan oleh reoqoo IoT Technology Co., Ltd. (selanjutnya disebut \"kami\"). Anda dapat menggunakan dan mengelola kamera pintar melalui reoqoo.";
+"AA0679" = "Sebelum menggunakan reoqoo, harap baca dan pahami sepenuhnya 《%@》 dan 《%@》 agar Anda dapat memahami layanan kami dan bagaimana kami mengumpulkan dan memproses informasi pribadi Anda selama layanan.";
+"AA0680" = "Jika Anda setuju dengan perjanjian yang disebutkan di atas, silakan klik \"Setuju\" untuk mulai menggunakan reoqoo.";
+"AA0681" = "Anak di bawah umur harus membaca teks perjanjian yang disebutkan di atas didampingi oleh wali, dan menggunakan reoqoo dengan persetujuan dan didampingi oleh wali.";
+"AA0682" = "Tidak Setuju dan Keluar dari Aplikasi";
+"AA0683" = "Pengingat Pembaruan Perjanjian";
+"AA0684" = "Perjanjian Pengguna Kamera";
+"AA0685" = "Selamat datang menggunakan %@! %@ dikembangkan dan dioperasikan oleh %@ (selanjutnya disebut \"kami\"). Anda dapat menggunakan dan mengelola kamera pintar melalui %@. \nSebelum menggunakan %@, harap baca dan pahami sepenuhnya %@%@, sehingga Anda dapat memahami layanan kami, serta pengumpulan dan pengolahan informasi pribadi Anda selama layanan. \nJika Anda setuju dengan teks perjanjian yang disebutkan di atas, silakan klik \"Setuju\" untuk mulai menggunakan %@. \nAnak di bawah umur perlu membaca teks perjanjian yang disebutkan di atas didampingi oleh wali, dan menggunakan %@ dengan persetujuan dan pendampingan wali. Kami akan melindungi informasi pribadi Anda sesuai dengan standar teknologi keamanan industri.";
+"AA0686" = "Masukkan nomor telepon atau alamat email anda";
+"AA0687" = "Masukkan nomor telepon atau alamat email anda";
+"AA0688" = "Masukkan akun %@ yang ingin dibagikan";
+"AA0689" = "Silakan coba operasi berikut dan coba lagi:\n1. Tekan dan tahan tombol reset untuk mereset perangkat;\n2. Silakan periksa apakah perangkat terhubung ke catu daya;\n3. Silakan periksa apakah antena perangkat longgar;\n4. Pastikan komunikasi sinyal 4G saat ini normal.";
+"AA0690" = "Kamera terlalu rendah, silakan upgrade dalam keadaan listrik ~";
+"AA0691" = "Tidak menggunakan jaringan WLAN, pemutaran akan dikenakan biaya data";
+"AA0692" = "Melihat %@";
+"AA0693" = "Aplikasi ingin menggunakan penyimpanan Anda";
