--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/it.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/it.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Forte";
 "AA0030" = "Le due password non coincidono";
 "AA0031" = "Recupera la Password";
-"AA0032" = "Si prega di inserire reoqoo ID";
+"AA0032" = "Si prega di inserire ID";
 "AA0033" = "L’account non esiste";
 "AA0034" = "Si prega di inserire il codice di verifica";
 "AA0035" = "Il codice di verifica è stato inviato a";
@@ -61,16 +61,16 @@
 "AA0062" = "Scansiona il QR sull'apparecchio per aggiungere";
 "AA0063" = "Torcia";
 "AA0064" = "Album fotografico";
-"AA0065" = "reoqoo vuole usare la tua fotocamera";
+"AA0065" = "APP vuole usare la tua fotocamera";
 "AA0066" = "È necessario eseguire la scansione del codice QR per la connessione e associare il dispositivo. È permesso aprire la videocamera?";
 "AA0067" = "Rifiuta";
 "AA0068" = "Nessuna autorizzazione per la fotocamera, si prega di abilitare nelle Impostazioni";
-"AA0069" = "reoqoo desidera utilizzare le informazioni sulla tua posizione";
+"AA0069" = "APP desidera utilizzare le informazioni sulla tua posizione";
 "AA0070" = "attrezzature Aggiunto di successo, è necessario consentire l'utilizzo dei Servizi di localizzazione per ottenere informazioni Wi-Fi.Si prega di attivare i servizi di localizzazione";
 "AA0071" = "Nessuna autorizzazione alla posizione, si prega di attivarla nelle impostazioni";
-"AA0072" = "reoqoo desidera accedere alle informazioni del tuo album";
+"AA0072" = "APP desidera accedere alle informazioni del tuo album";
 "AA0073" = "È necessario visualizzare e inviare l'immagine. È permesso aprire l'album?";
-"AA0074" = "reoqoo desidera utilizzare le tue informazioni Bluetooth";
+"AA0074" = "APP desidera utilizzare le tue informazioni Bluetooth";
 "AA0075" = "Autorizzazione Bluetooth necessaria per aiutare i dispositivi intelligenti nella connessione al Wi-Fi durante l'aggiunta. Consentire?";
 "AA0076" = "Nessuna autorizzazione Bluetooth, si prega di attivarla nelle impostazioni";
 "AA0077" = "Hai configurato il dispositivo secondo le istruzioni sopra?";
@@ -145,7 +145,7 @@
 "AA0146" = "Al massimo possono essere aggiunti X visitatori, se si vuole continuare a condividere con altre persone , prego di cancellare tutti i visitatori!";
 "AA0147" = "Gestione della condivisione";
 "AA0148" = "Inserisci l'account reoqoo per condividere il dispositivo";
-"AA0149" = "Inserisci l'account reoqoo";
+"AA0149" = "Si prega di inserire ID";
 "AA0150" = "Condivisi di recente";
 "AA0151" = "Condivide faccia a faccia";
 "AA0152" = "Condividere con gli amici";
@@ -154,7 +154,7 @@
 "AA0155" = "Già condiviso con questo amico";
 "AA0156" = "Condiviso con successo";
 "AA0157" = "Valido fino a";
-"AA0158" = "Scansiona il codice QR sopra con l'APP reoqoo per condividere il dispositivo";
+"AA0158" = "Scansiona il codice QR sopra con l'APP  per condividere il dispositivo";
 "AA0159" = "Amici già condivisi";
 "AA0160" = "Impossibile recuperare il codice QR, fare clic per aggiornare";
 "AA0161" = "%@ ha condiviso un dispositivo con te";
@@ -223,7 +223,7 @@
 "AA0224" = "Informazioni su reoqoo";
 "AA0225" = "Centro di messaggio";
 "AA0226" = "Processo terminato con successo";
-"AA0227" = "Attiva l'autorizzazione di notifica dell'APP reoqoo per ricevere le ultime notizie in tempo";
+"AA0227" = "Attiva l'autorizzazione di notifica dell'APP %@ per ricevere le ultime notizie in tempo";
 "AA0228" = "Non ci sono altre notifiche";
 "AA0229" = "Nessuno screenshot o video";
 "AA0230" = "Seleziona";
@@ -538,17 +538,17 @@
 "AA0542" = "Download fallito, controlla la connessione di rete del dispositivo e riprova";
 "AA0543" = "Aggiornamento fallito, riavvia il dispositivo e riprova";
 "AA0544" = "Aggiornamento in corso...";
-"AA0545" = "Ho letto e accetto l'Accordo con l'utente Reoqoo e l'Informativa sulla privacy";
+"AA0545" = "Ho letto e accetto l'Accordo con l'utente e l'Informativa sulla privacy";
 "AA0546" = "Macchina fotografica";
 "AA0547" = "fotografie";
 "AA0548" = "video";
-"AA0549" = "Reoqoo necessita del tuo permesso per accedere all’album fotografico per utilizzare la funzione di scansione del codice QR";
-"AA0550" = "reoqoo necessita della tua autorizzazione per accedere all'album per salvare il codice QR del dispositivo nell'album di sistema.";
-"AA0551" = "reoqoo necessita della tua autorizzazione per utilizzare la fotocamera per la funzione di scansione del codice QR.";
-"AA0552" = "reoqoo necessita della tua autorizzazione per accedere ai dispositivi Bluetooth.";
-"AA0553" = "reoqoo necessita della tua autorizzazione per utilizzare il microfono per la funzione interfono.";
-"AA0554" = "reoqoo necessita della tua autorizzazione per accedere alla rete locale per la connessione del dispositivo.";
-"AA0555" = "reoqoo necessita della tua autorizzazione per la funzione di notifica push per ricevere notifiche dal dispositivo.";
+"AA0549" = "APP necessita del tuo permesso per accedere all’album fotografico per utilizzare la funzione di scansione del codice QR";
+"AA0550" = "APP necessita della tua autorizzazione per accedere all'album per salvare il codice QR del dispositivo nell'album di sistema.";
+"AA0551" = "APP necessita della tua autorizzazione per utilizzare la fotocamera per la funzione di scansione del codice QR.";
+"AA0552" = "APP necessita della tua autorizzazione per accedere ai dispositivi Bluetooth.";
+"AA0553" = "APP necessita della tua autorizzazione per utilizzare il microfono per la funzione interfono.";
+"AA0554" = "APP necessita della tua autorizzazione per accedere alla rete locale per la connessione del dispositivo.";
+"AA0555" = "APP necessita della tua autorizzazione per la funzione di notifica push per ricevere notifiche dal dispositivo.";
 "AA0556" = "ID dispositivo:";
 "AA0557" = "Nessun accesso alla rete locale. Si prega di abilitare nelle impostazioni.";
 "AA0558" = "Creazione del codice QR fallita.";
@@ -603,13 +603,13 @@
 "AA0607" = "Per una diagnosi precisa";
 "AA0608" = "Almeno 10 caratteri";
 "AA0609" = "Accedi a più";
-"AA0610" = "Reoqoo può accedere solo a parte delle foto dell'album. Si consiglia di consentire l'accesso a 'tutte le foto'. Tocca per impostare.";
-"AA0611" = "reoqoo non ha accesso all'album, clicca per impostare";
+"AA0610" = "APP può accedere solo a parte delle foto dell'album. Si consiglia di consentire l'accesso a 'tutte le foto'. Tocca per impostare.";
+"AA0611" = "APP non ha accesso all'album, clicca per impostare";
 "AA0612" = "Descrivi dettagliatamente i tuoi suggerimenti o problemi riscontrati";
 "AA0613" = "Impostazioni di notifica push";
 "AA0614" = "Impostazioni delle autorizzazioni di sistema";
 "AA0615" = "Notifica di push messaggi";
-"AA0616" = "Una volta attivato, riceverai tempestivamente le ultime notizie dell'app reoqoo";
+"AA0616" = "Una volta attivato, riceverai tempestivamente le ultime notizie dell'app APP";
 "AA0617" = "Autorizzare";
 "AA0618" = "Attivato";
 "AA0619" = "Posizione";
@@ -626,7 +626,7 @@
 "AA0630" = "Se attivato, consente la riproduzione video in piccola finestra e le notifiche di campanello di monitoraggio";
 "AA0631" = "Interfaccia popup in background";
 "AA0632" = "Se attivato, riceverete notifiche dal campanello di assistenza";
-"AA0633" = "Per offrirti un'esperienza utente migliore, reoqoo richiederà le seguenti autorizzazioni di sistema in determinate situazioni.";
+"AA0633" = "Per offrirti un'esperienza utente migliore, APP richiederà le seguenti autorizzazioni di sistema in determinate situazioni.";
 "AA0634" = "Autorizzato";
 "AA0635" = "Non autorizzato";
 "AA0636" = "Rete locale";
@@ -657,5 +657,29 @@
 "AA0663" = "Si prega di scaricare l'app \"Xiaotun Cloud\" per continuare a utilizzare";
 "AA0664" = "Non Ricordare di Nuovo";
 "AA0665" = "Informazioni su";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Inserisci l'account";
+"AA0670" = "Accordo Utente e Politica sulla Privacy";
+"AA0671" = "Benvenuto su Xiaotun! Xiaotun è sviluppato e gestito da reoqoo IoT Technology Co., Ltd. (di seguito denominato \"noi\"). Puoi usare Xiaotun per gestire e utilizzare telecamere intelligenti.";
+"AA0672" = "Prima di utilizzare Xiaotun, si prega di leggere e comprendere appieno i \"%@\" e \"%@\" per comprendere i nostri servizi e come raccogliamo e trattiamo le vostre informazioni personali durante il servizio.";
+"AA0673" = "Se accetti il contratto sopra menzionato, fai clic su \"Accetto\" per iniziare a usare Xiaotun.";
+"AA0674" = "I minori devono leggere il testo dell'accordo sopra menzionato accompagnati da un tutore e utilizzare Xiaotun con il consenso e alla presenza del tutore.";
+"AA0675" = "Puoi gestire le tue informazioni personali nella pagina 'Io'. Proteggeremo le tue informazioni personali secondo gli standard di tecnologia di sicurezza del settore.";
+"AA0676" = "Durante l'uso, potremmo richiedere le seguenti autorizzazioni: Bluetooth, Posizione, Fotocamera, Libreria foto, Archiviazione, Microfono, Informazioni sul dispositivo, Rete locale, Calendario, Notifiche. Puoi sempre accedere alla gestione delle autorizzazioni per modificare le impostazioni delle autorizzazioni.";
+"AA0677" = "Gentile utente, per proteggere meglio i suoi diritti personali, abbiamo aggiornato il %@ in conformità con le ultime leggi e regolamenti e le nostre pratiche commerciali. Le inviamo quindi questo avviso.\nLa preghiamo di leggerlo attentamente prima dell'uso. Cliccando sul pulsante di accettazione, lei indica di aver letto e compreso i termini aggiornati e accetta di essere vincolato dalla politica aggiornata. Tratteremo le sue informazioni personali e le forniremo servizi in base alla sua autorizzazione e consenso.\n\nSe ha domande, contatti:\nE-mail: %@";
+"AA0678" = "Benvenuto in reoqoo! reoqoo è sviluppato e gestito da reoqoo IoT Technology Co., Ltd. (di seguito denominata \"noi\"). Puoi utilizzare e gestire telecamere intelligenti tramite reoqoo.";
+"AA0679" = "Prima di utilizzare reoqoo, si prega di leggere e comprendere appieno 《%@》 e 《%@》 in modo da comprendere i nostri servizi e come raccogliamo e trattiamo le tue informazioni personali durante il servizio.";
+"AA0680" = "Se accetti il contratto sopra menzionato, fai clic su \"Accetto\" per iniziare a usare reoqoo.";
+"AA0681" = "I minori devono leggere il testo del contratto sopra menzionato accompagnati da un tutore, e usare reoqoo con il consenso e l'accompagnamento di un tutore.";
+"AA0682" = "Non accettare e uscire dall'app";
+"AA0683" = "Promemoria Aggiornamento Accordo";
+"AA0684" = "Accordo Utente Fotocamera";
+"AA0685" = "Benvenuto all'uso di %@! %@ è sviluppato e gestito da %@ (di seguito denominato \"noi\"). Puoi utilizzare e gestire telecamere intelligenti tramite %@. \nPrima di utilizzare %@, leggi attentamente e comprendi appieno %@%@, in modo da comprendere i nostri servizi, nonché la raccolta e il trattamento delle tue informazioni personali durante il servizio. \nSe accetti il testo dell'accordo sopra menzionato, fai clic su \"Accetto\" per iniziare a utilizzare %@. \nI minori devono leggere il testo dell'accordo sopra menzionato accompagnati da un tutore, e utilizzare %@ con il consenso e l'accompagnamento del tutore. Proteggeremo le tue informazioni personali secondo gli standard di sicurezza tecnologica del settore.";
+"AA0686" = "Si prega di inserire il numero di cellulare o l’indirizzo email";
+"AA0687" = "Si prega di inserire il numero di cellulare o l’indirizzo email";
+"AA0688" = "Inserisci l'account %@ per condividere il dispositivo";
+"AA0689" = "Provate le seguenti operazioni e riprovate:\n1. Premete e tenete premuto il pulsante di reset per ripristinare il dispositivo;\n2. Verificate se il dispositivo è collegato all'alimentazione elettrica;\n3. Verificate se l'antenna del dispositivo è allentata;\n4. Assicuratevi che la comunicazione del segnale 4G attuale sia normale.";
+"AA0690" = "La fotocamera è troppo bassa, si prega di aggiornare in uno stato di elettricità ~";
+"AA0691" = "Utilizzando una rete non-WLAN, la riproduzione può comportare costi di dati";
+"AA0692" = "Visto %@";
+"AA0693" = "L'app vuole usare la tua memoria";
