--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ja.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ja.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "強";
 "AA0030" = "パスワードが一致しません";
 "AA0031" = "パスワードの取得";
-"AA0032" = "reoqooアカウントを入力してください";
+"AA0032" = "アカウントを入力してください";
 "AA0033" = "アカウントが存在しません";
 "AA0034" = "认証コードを入力してください";
 "AA0035" = "認証コードがに送信されました";
@@ -62,16 +62,16 @@
 "AA0062" = "デバイス本体にあるQRコードをスキャンしてデバイスを追加します";
 "AA0063" = "ライト";
 "AA0064" = "アルバム";
-"AA0065" = "reoqooはあなたのカメラを使いたいです";
+"AA0065" = "APPはあなたのカメラを使いたいです";
 "AA0066" = "あなたはデバイスを接続してバインドするためにQRコードをスキャンする必要があります。 それは、カメラを开くことが许可されていますか？";
 "AA0067" = "拒否";
 "AA0068" = "カメラの権限がありません。設定で有効にしてください";
-"AA0069" = "reoqooはあなたの位置情報を使用したい";
+"AA0069" = "APPはあなたの位置情報を使用したい";
 "AA0070" = "成功した机器を追加するには、无线LANの情报を取得するための位置サービスの使用を许可する必要があります。位置情报サービスをオンにしてください";
 "AA0071" = "位置づけの権限がありません。設定で有効にしてください";
-"AA0072" = "reoqooにアルバムの権限を与えますか";
+"AA0072" = "APPにアルバムの権限を与えますか";
 "AA0073" = "写真を见て送る必要があります。 アルバムを开くことはできますか？";
-"AA0074" = "reoqooにBluetoothの権限を与えますか";
+"AA0074" = "APPにBluetoothの権限を与えますか";
 "AA0075" = "スマートデバイスの追加中にWIFIに接続するためにBluetooth権限が必要ですが、許可しますか。";
 "AA0076" = "Bluetooth権限がないため、設定で有効にしてください";
 "AA0077" = "上記の案内に従って操作しましたか。";
@@ -146,7 +146,7 @@
 "AA0146" = "ゲストX人まで追加できます。もし他人にシェアしてほしい场合は、先ず一部のゲストを削除してください！";
 "AA0147" = "シェア管理";
 "AA0148" = "共有するreoqooアカウントを入力";
-"AA0149" = "reoqooアカウントを入力してください";
+"AA0149" = "アカウントを入力してください";
 "AA0150" = "最近の共有内容";
 "AA0151" = "直対面シェアリング";
 "AA0152" = "シェア";
@@ -155,7 +155,7 @@
 "AA0155" = "既にこの友達に共有しました";
 "AA0156" = "投稿しました";
 "AA0157" = "有効期限満了日";
-"AA0158" = "reoqooアプリで上のQRコードをスキャンしてデバイスを共有します";
+"AA0158" = "APPアプリで上のQRコードをスキャンしてデバイスを共有します";
 "AA0159" = "共有先の友達";
 "AA0160" = "QRコードを取得できません。クリックして再読込みしてください";
 "AA0161" = "%@はあなたとデバイスを共有しました";
@@ -224,7 +224,7 @@
 "AA0224" = "reoqooについて";
 "AA0225" = "メッセージセンター";
 "AA0226" = "操作完了しました";
-"AA0227" = "Youkanto APPの通知許可をオンにして、最新ニュースを時間内に取得します";
+"AA0227" = "%@ APPの通知許可をオンにして、最新ニュースを時間内に取得します";
 "AA0228" = "情报はこれだけです";
 "AA0229" = "なしスクリーンないか、またはビデオ";
 "AA0230" = "选択";
@@ -545,13 +545,13 @@
 "AA0546" = "カメラです";
 "AA0547" = "しゃしん";
 "AA0548" = "ビデオです";
-"AA0549" = "QRコードのスキャン機能を利用するには、reoqooはアルバムへのアクセス権限が必要です";
-"AA0550" = "デバイスのQRコードをシステムのアルバムに保存するには、reoqooはアルバムへのアクセス権限が必要です";
-"AA0551" = "QRコードのスキャン機能を利用するには、reoqooはカメラへのアクセス権限が必要です";
-"AA0552" = "Bluetooth機器にアクセスするには、reoqooはBluetoothへのアクセス権限が必要です";
-"AA0553" = "双方向通話機能を利用するには、reoqooはマイクへのアクセス権限が必要です";
-"AA0554" = "デバイスの接続を行なうには、reoqooはローカルネットワークへのアクセス権限が必要です";
-"AA0555" = "デバイスのプッシュ通知を受信するには、reoqooはプッシュ機能の権限が必要です";
+"AA0549" = "QRコードのスキャン機能を利用するには、APPはアルバムへのアクセス権限が必要です";
+"AA0550" = "デバイスのQRコードをシステムのアルバムに保存するには、APPはアルバムへのアクセス権限が必要です";
+"AA0551" = "QRコードのスキャン機能を利用するには、APPはカメラへのアクセス権限が必要です";
+"AA0552" = "Bluetooth機器にアクセスするには、APPはBluetoothへのアクセス権限が必要です";
+"AA0553" = "双方向通話機能を利用するには、APPはマイクへのアクセス権限が必要です";
+"AA0554" = "デバイスの接続を行なうには、APPはローカルネットワークへのアクセス権限が必要です";
+"AA0555" = "デバイスのプッシュ通知を受信するには、APPはプッシュ機能の権限が必要です";
 "AA0556" = "デバイスID：";
 "AA0557" = "ローカルネットワークへのアクセス権限がないため、設定で許可してください";
 "AA0558" = "デバイスのQRコードの生成に失敗しました";
@@ -606,13 +606,13 @@
 "AA0607" = "問題の特定に役立ちます";
 "AA0608" = "最低限10文字が必要です";
 "AA0609" = "詳細へ";
-"AA0610" = "reoqooはアルバムの写真を一部しか利用できません。「全ての写真」を対象にすることをおすすめします。クリックして設定へ遷移します";
-"AA0611" = "reoqooはアルバムにアクセスできません。クリックして設定へ遷移します";
+"AA0610" = "APPはアルバムの写真を一部しか利用できません。「全ての写真」を対象にすることをおすすめします。クリックして設定へ遷移します";
+"AA0611" = "APPはアルバムにアクセスできません。クリックして設定へ遷移します";
 "AA0612" = "ご意見やご感想、問題点などを詳しく説明していただくようお願いします";
 "AA0613" = "プッシュ通知を設定";
 "AA0614" = "システム権限を設定";
 "AA0615" = "プッシュ通知";
-"AA0616" = "オンにすると、reoqooアプリからのメッセージをいち早く入手できます";
+"AA0616" = "オンにすると、APPアプリからのメッセージをいち早く入手できます";
 "AA0617" = "権限を許可";
 "AA0618" = "オン";
 "AA0619" = "位置情報";
@@ -629,7 +629,7 @@
 "AA0630" = "オンにすると、監視映像の小窓表示機能と見守りベルのフローティング機能を利用できます";
 "AA0631" = "バックグラウンドのポップアップウィンドウ";
 "AA0632" = "オンにすると、見守りベルの通知をいち早く確認できます";
-"AA0633" = "reoqooは、ユーザー体験の向上に努めており、一部の場面において以下のシステム権限の許可を求めることがあります";
+"AA0633" = "APPは、ユーザー体験の向上に努めており、一部の場面において以下のシステム権限の許可を求めることがあります";
 "AA0634" = "権限を許可した";
 "AA0635" = "権限を許可していない";
 "AA0636" = "ローカルネットワーク";
@@ -660,5 +660,29 @@
 "AA0663" = "引き続きご利用いただくには、\"Xiaotun Cloud\"アプリをダウンロードしてください";
 "AA0664" = "再び通知しない";
 "AA0665" = "について";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "アカウントを入力してください";
+"AA0670" = "利用規約とプライバシーポリシー";
+"AA0671" = "Xiaotunへようこそ！Xiaotunはreoqoo IoT Technology Co., Ltd.（以下「私たち」と呼びます）によって開発・運営されています。Xiaotunを使ってスマートカメラの使用と管理ができます。";
+"AA0672" = "Xiaotunをご利用になる前に、\"%@\"と\"%@\"をよくお読みいただき、当社のサービスと、サービスの過程でお客様の個人情報を収集・処理する方法を理解してください。";
+"AA0673" = "前述の契約に同意される場合は、「同意」をクリックしてXiaotunの使用を開始してください。";
+"AA0674" = "未成年者は、保護者の同伴のもとで前述の契約テキストを読み、保護者の同意を得てその同伴のもとでXiaotunを使用する必要があります。";
+"AA0675" = "'私'のページで個人情報を管理できます。私たちは業界のセキュリティ技術基準に従ってあなたの個人情報を保護します。";
+"AA0676" = "使用中に以下の権限をリクエストする場合があります：Bluetooth、位置情報、カメラ、フォトライブラリ、ストレージ、マイク、デバイス情報、ローカルネットワーク、カレンダー、通知。いつでも権限管理にアクセスして権限設定を調整できます。";
+"AA0677" = "ユーザーの皆様、個人の権利をよりよく保護するため、最新の法律と規制、および当社のビジネス慣行に基づいて、%@を更新しました。ここにその通知をお送りします。\n使用前に必ずお読みください。同意ボタンをクリックすることで、更新された利用規約を十分に読み、理解し、更新されたポリシーに同意したことを示します。私たちは、あなたの許可と同意に基づいて個人情報を処理し、サービスを提供します。\n\nご質問がある場合は、次の連絡先までご連絡ください:\nメール: %@";
+"AA0678" = "reoqooをご利用いただきありがとうございます！ reoqooは、reoqoo IoT Technology Co., Ltd.（以下「私たち」）によって開発および運営されています。 reoqooを通じてスマートカメラを使用および管理できます。";
+"AA0679" = "reoqooをご利用になる前に、《%@》と《%@》をよくお読みいただき、完全に理解して、当社のサービスと、サービス中に個人情報を収集および処理する方法を理解してください。";
+"AA0680" = "前述の契約に同意される場合は、「同意」をクリックしてreoqooの使用を開始してください。";
+"AA0681" = "未成年者は、前述の契約文を保護者と一緒に読み、保護者の同意を得て、保護者と一緒にreoqooを使用する必要があります。";
+"AA0682" = "同意せずにアプリを終了";
+"AA0683" = "規約更新リマインダー";
+"AA0684" = "カメラ利用規約";
+"AA0685" = "%@の使用へようこそ！ %@は%@（以下「私たち」）によって開発・運営されています。 %@を通じてスマートカメラを使用および管理することができます。\n%@を使用する前に、%@%@をよく読んで十分に理解し、私たちのサービスとサービス過程で収集・処理されるあなたの個人情報について理解してください。\n前述の契約内容に同意する場合は、「同意する」をクリックして%@の使用を開始してください。\n未成年者は保護者同伴で前述の契約内容を読み、保護者の同意を得て保護者と一緒に%@を使用する必要があります。 私たちは業界のセキュリティ技術基準に従ってあなたの個人情報を保護します。";
+"AA0686" = "スマートフォンの电话番号またはメールアドレスを入力してください";
+"AA0687" = "スマートフォンの电话番号またはメールアドレスを入力してください";
+"AA0688" = "共有する %@ アカウントを入力";
+"AA0689" = "以下の操作を試してから再試行してください：\n1. リセットボタンを長押ししてデバイスをリセットします；\n2. デバイスが電源に接続されているか確認してください；\n3. デバイスのアンテナが緩んでいないか確認してください；\n4. 現在の4G信号通信が正常であることを確認してください。";
+"AA0690" = "カメラが少なすぎる、電力の状態でアップグレードしてください〜";
+"AA0691" = "WLANネットワークを使っていませんので、再生するとデータ通信料金が発生します";
+"AA0692" = "検知 %@";
+"AA0693" = "アプリがストレージ情報を使用したい";
