--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ms.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ms.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Kuat";
 "AA0030" = "Dua kali lebih beratur";
 "AA0031" = "Pulih kata laluan";
-"AA0032" = "Sila masukkan akaun reoqoo";
+"AA0032" = "Sila masukkan akaun";
 "AA0033" = "Pertimbangan ini mendapati";
 "AA0034" = "Masukkan kod pengesahan";
 "AA0035" = "Kod pengesahan telah dihantar ke";
@@ -62,16 +62,16 @@
 "AA0062" = "Imbas kod QR pada badan peranti untuk menambah peranti";
 "AA0063" = "Lampu suluh";
 "AA0064" = "Album";
-"AA0065" = "reoqoo mahu menggunakan kamera anda";
+"AA0065" = "APP mahu menggunakan kamera anda";
 "AA0066" = "Anda perlu mengimbas kod QR untuk menyambung dan mengikat peranti. Adakah ia dibenarkan untuk membuka kamera?";
 "AA0067" = "Menolak";
 "AA0068" = "Tanpa izin kamera, sila aktifkan dalam Tetapan";
-"AA0069" = "reoqoo mahu menggunakan maklumat lokasi anda";
+"AA0069" = "APP mahu menggunakan maklumat lokasi anda";
 "AA0070" = "Untuk berjaya menambah peralatan, anda perlu membenarkan penggunaan Perkhidmatan Lokasi untuk mendapatkan maklumat Wi-Fi.Sila hidupkan Perkhidmatan Lokasi.";
 "AA0071" = "Kebenaran kedudukan belum dihidupkan, sila hidupkannya dalam Tetapan";
-"AA0072" = "Adakah anda mahu membenarkan reoqoo menggunakan maklumat album anda";
+"AA0072" = "Adakah anda mahu membenarkan APP menggunakan maklumat album anda";
 "AA0073" = "Perlu melihat dan menghantar gambar. Adakah dibenarkan membuka album?";
-"AA0074" = "Adakah anda mahu membenarkan reoqoo menggunakan maklumat Bluetooth anda";
+"AA0074" = "Adakah anda mahu membenarkan APP menggunakan maklumat Bluetooth anda";
 "AA0075" = "Kebenaran Bluetooth diperlukan untuk membantu peranti pintar menyambung ke Wi-Fi semasa proses penambahan. Adakah ini dibenarkan?";
 "AA0076" = "Tiada kebenaran Bluetooth, sila hidupkan dalam Tetapan";
 "AA0077" = "Adakah anda telah mengendalikan peralatan mengikut garis panduan di atas?";
@@ -146,7 +146,7 @@
 "AA0146" = "Hanya menambah sehingga X pelawat,  jika anda mahu terus berkongsi kepada orang lain, sila memadamkan beberapa pengunjung dulu!";
 "AA0147" = "Pengurusan Kongsi";
 "AA0148" = "Masukkan akaun reoqoo yang perlu dikongsi";
-"AA0149" = "Sila masukkan akaun reoqoo";
+"AA0149" = "Sila masukkan akaun";
 "AA0150" = "Perkongsian terbaru";
 "AA0151" = "Bersemuka Kongsi";
 "AA0152" = "Kongsi";
@@ -155,7 +155,7 @@
 "AA0155" = "Sudah berkongsi dengan rakan ini";
 "AA0156" = "Berkongsi berjaya";
 "AA0157" = "Sah ke";
-"AA0158" = "Imbas kod QR di atas dengan menggunakan APP reoqoo untuk berkongsi peranti";
+"AA0158" = "Imbas kod QR di atas dengan menggunakan APP untuk berkongsi peranti";
 "AA0159" = "Rakan yang telah berkongsi";
 "AA0160" = "Gagal mendapatkan kod QR, klik untuk menyegarkan semula";
 "AA0161" = "%@ berkongsi peranti dengan anda";
@@ -545,13 +545,13 @@
 "AA0546" = "Kamera";
 "AA0547" = "Foto";
 "AA0548" = "Video";
-"AA0549" = "reoqoo memerlukan kebenaran anda untuk mengakses album untuk menggunakan ciri pengimbasan kod QR";
-"AA0550" = "reoqoo memerlukan kebenaran anda untuk mengakses album untuk menyimpan kod QR peranti ke album sistem";
-"AA0551" = "reoqoo memerlukan kebenaran anda untuk mengakses kamera untuk menggunakan ciri pengimbasan kod QR";
-"AA0552" = "reoqoo memerlukan kebenaran anda untuk mengakses Bluetooth untuk mengakses peranti Bluetooth";
-"AA0553" = "reoqoo memerlukan kebenaran anda untuk mengakses mikrofon untuk menggunakan ciri interkom";
-"AA0554" = "reoqoo memerlukan kebenaran anda untuk mengakses rangkaian tempatan untuk sambungan peranti";
-"AA0555" = "reoqoo memerlukan anda memberikan kebenaran untuk pemberitahuan hantaran untuk menerima pemberitahuan hantaran peranti";
+"AA0549" = "APP memerlukan kebenaran anda untuk mengakses album untuk menggunakan ciri pengimbasan kod QR";
+"AA0550" = "APP memerlukan kebenaran anda untuk mengakses album untuk menyimpan kod QR peranti ke album sistem";
+"AA0551" = "APP memerlukan kebenaran anda untuk mengakses kamera untuk menggunakan ciri pengimbasan kod QR";
+"AA0552" = "APP memerlukan kebenaran anda untuk mengakses Bluetooth untuk mengakses peranti Bluetooth";
+"AA0553" = "APP memerlukan kebenaran anda untuk mengakses mikrofon untuk menggunakan ciri interkom";
+"AA0554" = "APP memerlukan kebenaran anda untuk mengakses rangkaian tempatan untuk sambungan peranti";
+"AA0555" = "APP memerlukan anda memberikan kebenaran untuk pemberitahuan hantaran untuk menerima pemberitahuan hantaran peranti";
 "AA0556" = "ID peranti:";
 "AA0557" = "Anda tidak mempunyai kebenaran akses peranti rangkaian tempatan, sila hidupkannya dalam Tetapan";
 "AA0558" = "Gagal mencipta kod QR peranti";
@@ -606,13 +606,13 @@
 "AA0607" = "Mudah untuk meletakkan kedudukan yang tepat";
 "AA0608" = "Minimum 10 patah perkataan";
 "AA0609" = "Lawati lagi";
-"AA0610" = "reoqoo hanya boleh mengakses beberapa foto dalam album, disyorkan untuk membenarkan akses kepada `semua foto`, klik untuk tetepkan";
-"AA0611" = "reoqoo tidak mempunyai kebenaran akses album, klik untuk tetapkan";
+"AA0610" = "APP hanya boleh mengakses beberapa foto dalam album, disyorkan untuk membenarkan akses kepada `semua foto`, klik untuk tetepkan";
+"AA0611" = "APP tidak mempunyai kebenaran akses album, klik untuk tetapkan";
 "AA0612" = "Sila terangkan cadangan atau masalah anda yang dihadapi secara terperinci";
 "AA0613" = "Tetapan tolak mesej";
 "AA0614" = "Tetapan kebenaran sistem";
 "AA0615" = "Pemberitahuan tolak mesej";
-"AA0616" = "Selepas hidupkannya, anda boleh dapatkan berita terkini daripada reoqoo APP tepat pada masanya";
+"AA0616" = "Selepas hidupkannya, anda boleh dapatkan berita terkini daripada APP tepat pada masanya";
 "AA0617" = "Pergi membenarkan";
 "AA0618" = "Diaktifkan";
 "AA0619" = "Lokasi";
@@ -629,7 +629,7 @@
 "AA0630" = "Selepas menghidupkannya, anda boleh menggunakan fungsi main balik tetingkap kecil video pemantauan dan loceng penjagaan terapung";
 "AA0631" = "Antara muka timbul dari latar belakang";
 "AA0632" = "Selepas menghidupkannya, anda boleh menerima pemberitahuan tepat pada masanya daripada loceng penjagaan";
-"AA0633" = "Untuk memberikan anda pengalaman pengguna yang lebih baik, reoqoo akan memohon kebenaran sistem mudah alih berikut dalam senario tertentu";
+"AA0633" = "Untuk memberikan anda pengalaman pengguna yang lebih baik, APP akan memohon kebenaran sistem mudah alih berikut dalam senario tertentu";
 "AA0634" = "Dibenarkan";
 "AA0635" = "Tanpa kebenaran";
 "AA0636" = "Rangkaian tempatan";
@@ -660,5 +660,29 @@
 "AA0663" = "Sila muat turun aplikasi \"Xiaotun Cloud\" untuk terus menggunakan";
 "AA0664" = "Jangan Ingatkan Lagi";
 "AA0665" = "Mengenai";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Sila masukkan akaun";
+"AA0670" = "Perjanjian Pengguna dan Dasar Privasi";
+"AA0671" = "Selamat datang ke Xiaotun! Xiaotun dibangunkan dan dikendalikan oleh reoqoo IoT Technology Co., Ltd. (selepas ini dirujuk sebagai \"kami\"). Anda boleh menggunakan Xiaotun untuk mengurus dan menggunakan kamera pintar.";
+"AA0672" = "Sebelum menggunakan Xiaotun, sila baca dan fahami sepenuhnya \"%@\" dan \"%@\" untuk memahami perkhidmatan kami dan bagaimana kami mengumpul dan memproses maklumat peribadi anda semasa perkhidmatan.";
+"AA0673" = "Jika anda bersetuju dengan perjanjian yang disebutkan di atas, sila klik \"Setuju\" untuk mula menggunakan Xiaotun.";
+"AA0674" = "Kanak-kanak di bawah umur perlu membaca teks perjanjian yang disebutkan di atas dengan ditemani oleh penjaga dan menggunakan Xiaotun dengan persetujuan dan kehadiran penjaga.";
+"AA0675" = "Anda boleh mengurus maklumat peribadi anda di halaman 'Saya'. Kami akan melindungi maklumat peribadi anda mengikut piawaian teknologi keselamatan industri.";
+"AA0676" = "Semasa penggunaan, kami juga boleh meminta kebenaran berikut: Bluetooth, Lokasi, Kamera, Pustaka Foto, Penyimpanan, Mikrofon, Maklumat Peranti, Rangkaian Tempatan, Kalendar, Pemberitahuan. Anda sentiasa boleh pergi ke pengurusan kebenaran untuk menyesuaikan tetapan kebenaran.";
+"AA0677" = "Pengguna yang dihormati, untuk melindungi hak peribadi anda dengan lebih baik, kami telah mengemas kini %@ mengikut undang-undang dan peraturan terkini serta amalan perniagaan kami. Oleh itu, kami menghantar pemberitahuan ini kepada anda.\nSila baca dengan teliti sebelum menggunakan. Dengan mengklik butang setuju, anda menunjukkan bahawa anda telah membaca dan memahami terma yang dikemas kini dan bersetuju untuk terikat dengan dasar yang dikemas kini. Kami akan memproses maklumat peribadi anda dan memberikan perkhidmatan berdasarkan kebenaran dan persetujuan anda.\n\nJika anda mempunyai soalan, sila hubungi kami:\nE-mel: %@";
+"AA0678" = "Selamat datang ke reoqoo! reoqoo dibangunkan dan dikendalikan oleh reoqoo IoT Technology Co., Ltd. (selepas ini dirujuk sebagai \"kami\"). Anda boleh menggunakan dan menguruskan kamera pintar melalui reoqoo.";
+"AA0679" = "Sebelum menggunakan reoqoo, sila baca dan fahami sepenuhnya 《%@》 dan 《%@》 supaya anda dapat memahami perkhidmatan kami dan bagaimana kami mengumpul dan memproses maklumat peribadi anda semasa perkhidmatan.";
+"AA0680" = "Jika anda bersetuju dengan perjanjian yang disebutkan di atas, sila klik \"Setuju\" untuk mula menggunakan reoqoo.";
+"AA0681" = "Kanak-kanak di bawah umur mesti membaca teks perjanjian yang disebutkan di atas dengan ditemani oleh penjaga, dan menggunakan reoqoo dengan persetujuan dan ditemani oleh penjaga.";
+"AA0682" = "Tidak Setuju dan Keluar Apl";
+"AA0683" = "Peringatan Kemas Kini Perjanjian";
+"AA0684" = "Perjanjian Pengguna Kamera";
+"AA0685" = "Selamat datang menggunakan %@! %@ dibangunkan dan dikendalikan oleh %@ (selepas ini dirujuk sebagai \"kami\"). Anda boleh menggunakan dan menguruskan kamera pintar melalui %@. \nSebelum menggunakan %@, sila baca dan fahami sepenuhnya %@%@, supaya anda dapat memahami perkhidmatan kami, serta pengumpulan dan pemprosesan maklumat peribadi anda semasa perkhidmatan. \nJika anda bersetuju dengan teks perjanjian yang disebutkan di atas, sila klik \"Setuju\" untuk mula menggunakan %@. \nKanak-kanak di bawah umur perlu membaca teks perjanjian yang disebutkan di atas ditemani oleh penjaga, dan menggunakan %@ dengan persetujuan dan ditemani oleh penjaga. Kami akan melindungi maklumat peribadi anda mengikut piawaian teknologi keselamatan industri.";
+"AA0686" = "Masukkan nombor telefon atau alamat e-mel";
+"AA0687" = "Masukkan nombor telefon atau alamat e-mel";
+"AA0688" = "Masukkan akaun %@ yang perlu dikongsi";
+"AA0689" = "Sila cuba operasi berikut dan cuba lagi:\n1. Tekan dan tahan butang reset untuk menetapkan semula peranti;\n2. Sila periksa sama ada peranti disambungkan ke bekalan kuasa;\n3. Sila periksa sama ada antena peranti longgar;\n4. Pastikan komunikasi isyarat 4G semasa adalah normal.";
+"AA0690" = "Kamera terlalu rendah, sila naik taraf dalam keadaan elektrik ~";
+"AA0691" = "Rangkaian bukan WLAN sedang digunakan. Main akan dikenakan kos data";
+"AA0692" = "Dikesan %@";
+"AA0693" = "Aplikasi ingin menggunakan storan anda";
