--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/nl.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/nl.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Sterk";
 "AA0030" = "Wachtwoorden zijn niet gelijk";
 "AA0031" = "Wachtwoord opvragen";
-"AA0032" = "Vul reoqoo ID";
+"AA0032" = "Vul ID";
 "AA0033" = "Account bestaat niet";
 "AA0034" = "Voer verificatiecode in";
 "AA0035" = "De verificatiecode is verzonden naar";
@@ -61,16 +61,16 @@
 "AA0062" = "Scan de QR-code op het apparaat om toe te voegen";
 "AA0063" = "Zaklamp";
 "AA0064" = "Fotoalbum";
-"AA0065" = "reoqoo wil uw camera gebruiken";
+"AA0065" = "APP wil uw camera gebruiken";
 "AA0066" = "U moet de QR-code scannen om verbinding te maken en het apparaat te binden. Is het toegestaan om de camera te openen?";
 "AA0067" = "Afwijzen";
 "AA0068" = "Geen cameratoestemming, schakel in de Instellingen in";
-"AA0069" = "reoqoo wil uw locatiegegevens gebruiken";
+"AA0069" = "APP wil uw locatiegegevens gebruiken";
 "AA0070" = "Om succesvol toegevoegd apparatuur, moet u toestaan bdat het gebruik van de Location Services voor het verkrijgen van Wi-Fi informatie.Schakel op Location Services.";
 "AA0071" = "Geen locatie-rechten, schakel dit in instellingen in";
-"AA0072" = "reoqoo wil toegang tot je fotoalbum-informatie";
+"AA0072" = "APP wil toegang tot je fotoalbum-informatie";
 "AA0073" = "Noodzaak om de foto te bekijken en te verzenden. Is het toegestaan om het album te openen?";
-"AA0074" = "reoqoo wil je Bluetooth-informatie gebruiken";
+"AA0074" = "APP wil je Bluetooth-informatie gebruiken";
 "AA0075" = "Bluetooth-machtigingen vereist om slimme apparaten te helpen verbinding maken met Wi-Fi tijdens het toevoegen. Toestaan?";
 "AA0076" = "Geen Bluetooth-rechten, schakel dit in instellingen in";
 "AA0077" = "Heeft u het apparaat volgens bovenstaande instructies ingesteld?";
@@ -145,7 +145,7 @@
 "AA0146" = "Er kunnen maximaal X bezoekers worden toegevoegd, verwijder een aantal bezoekers als je wilt blijven delen met anderen.";
 "AA0147" = "Beheer delen";
 "AA0148" = "Voer het reoqoo-account in om het apparaat te delen";
-"AA0149" = "Voer alstublieft het reoqoo-account in";
+"AA0149" = "Vul ID";
 "AA0150" = "Recent gedeeld";
 "AA0151" = "Face-to-face delen";
 "AA0152" = "Delen";
@@ -154,7 +154,7 @@
 "AA0155" = "Al gedeeld met deze vriend";
 "AA0156" = "Het delen is gelukt";
 "AA0157" = "Geldig tot";
-"AA0158" = "Scan de bovenstaande QR-code met de reoqoo-app om het apparaat te delen";
+"AA0158" = "Scan de bovenstaande QR-code met de app om het apparaat te delen";
 "AA0159" = "Reeds gedeelde vrienden";
 "AA0160" = "QR-code ophalen mislukt, klik om te vernieuwen";
 "AA0161" = "%@ heeft een apparaat met je gedeeld";
@@ -223,7 +223,7 @@
 "AA0224" = "Over reoqoo";
 "AA0225" = "Notificatie centrum";
 "AA0226" = "Handeling gelukt";
-"AA0227" = "Schakel de meldingstoestemming van Youkanto APP in om het laatste nieuws op tijd te ontvangen";
+"AA0227" = "Schakel de meldingstoestemming van %@ APP in om het laatste nieuws op tijd te ontvangen";
 "AA0228" = "Geen nieuwe beirchten meer";
 "AA0229" = "Geen screenshot of video";
 "AA0230" = "Kiezen";
@@ -538,17 +538,17 @@
 "AA0542" = "Download mislukt, controleer de netwerkverbinding van het apparaat en probeer het opnieuw";
 "AA0543" = "Update mislukt, start het apparaat opnieuw op en probeer het opnieuw";
 "AA0544" = "Aan het bijwerken...";
-"AA0545" = "Ik heb de Reoqoo Gebruikersovereenkomst en Privacybeleid gelezen en ga akkoord";
+"AA0545" = "Ik heb de Gebruikersovereenkomst en Privacybeleid gelezen en ga akkoord";
 "AA0546" = "camera";
 "AA0547" = "Foto's";
 "AA0548" = "video";
-"AA0549" = "Reoqoo heeft uw toestemming nodig om toegang te krijgen tot het fotoalbum om de QR-code-scanfunctie te gebruiken";
-"AA0550" = "reoqoo heeft uw toestemming nodig om toegang tot het album te krijgen om de QR-code van het apparaat op te slaan in het systeemalbum.";
-"AA0551" = "reoqoo heeft uw toestemming nodig om de camera te gebruiken voor de QR-code scanfunctie.";
-"AA0552" = "reoqoo heeft uw toestemming nodig om toegang te krijgen tot Bluetooth-apparaten.";
-"AA0553" = "reoqoo heeft uw toestemming nodig om de microfoon te gebruiken voor de intercomfunctie.";
-"AA0554" = "reoqoo heeft uw toestemming nodig om toegang te krijgen tot het lokale netwerk voor apparaatverbinding.";
-"AA0555" = "reoqoo heeft uw toestemming nodig voor de push-functie om meldingen van het apparaat te ontvangen.";
+"AA0549" = "APP heeft uw toestemming nodig om toegang te krijgen tot het fotoalbum om de QR-code-scanfunctie te gebruiken";
+"AA0550" = "APP heeft uw toestemming nodig om toegang tot het album te krijgen om de QR-code van het apparaat op te slaan in het systeemalbum.";
+"AA0551" = "APP heeft uw toestemming nodig om de camera te gebruiken voor de QR-code scanfunctie.";
+"AA0552" = "APP heeft uw toestemming nodig om toegang te krijgen tot Bluetooth-apparaten.";
+"AA0553" = "APP heeft uw toestemming nodig om de microfoon te gebruiken voor de intercomfunctie.";
+"AA0554" = "APP heeft uw toestemming nodig om toegang te krijgen tot het lokale netwerk voor apparaatverbinding.";
+"AA0555" = "APP heeft uw toestemming nodig voor de push-functie om meldingen van het apparaat te ontvangen.";
 "AA0556" = "Apparaat-ID:";
 "AA0557" = "Geen toegang tot lokaal netwerk. Schakel in in de instellingen.";
 "AA0558" = "QR-code maken mislukt.";
@@ -603,13 +603,13 @@
 "AA0607" = "Voor exacte probleemopsporing";
 "AA0608" = "Minimaal 10 tekens";
 "AA0609" = "Meer bekijken";
-"AA0610" = "Reoqoo kan alleen toegang krijgen tot enkele foto's. We raden aan om toegang tot 'alle foto's' toe te staan. Klik om in te stellen.";
-"AA0611" = "reoqoo heeft geen toegang tot het album, tik om in te stellen";
+"AA0610" = "APP kan alleen toegang krijgen tot enkele foto's. We raden aan om toegang tot 'alle foto's' toe te staan. Klik om in te stellen.";
+"AA0611" = "APP heeft geen toegang tot het album, tik om in te stellen";
 "AA0612" = "Beschrijf alstublieft gedetailleerd uw suggesties of problemen";
 "AA0613" = "Instellingen voor pushmeldingen";
 "AA0614" = "Instellingen voor systeemrechten";
 "AA0615" = "Melding van pushberichten";
-"AA0616" = "Als deze functie is ingeschakeld, ontvang je tijdig het laatste nieuws van de reoqoo APP";
+"AA0616" = "Als deze functie is ingeschakeld, ontvang je tijdig het laatste nieuws van de APP";
 "AA0617" = "Autoriseren";
 "AA0618" = "Ingeschakeld";
 "AA0619" = "Locatie";
@@ -626,7 +626,7 @@
 "AA0630" = "Bij inschakeling kan de minivenster videoweergave en bewakingbelmelding worden gebruikt";
 "AA0631" = "Achtergrond pop-up interface";
 "AA0632" = "Bij inschakeling kunt u meldingen van de zorgbel ontvangen";
-"AA0633" = "Om u een betere gebruikerservaring te bieden, vraagt reoqoo in bepaalde situaties de volgende systeemrechten.";
+"AA0633" = "Om u een betere gebruikerservaring te bieden, vraagt APP in bepaalde situaties de volgende systeemrechten.";
 "AA0634" = "Toegestaan";
 "AA0635" = "Niet toegestaan";
 "AA0636" = "Lokaal netwerk";
@@ -657,5 +657,29 @@
 "AA0663" = "Download de \"Xiaotun Cloud\"-app om verder te gebruiken";
 "AA0664" = "Niet opnieuw herinneren";
 "AA0665" = "Over";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Voer het account in";
+"AA0670" = "Gebruikersovereenkomst en Privacybeleid";
+"AA0671" = "Welkom bij Xiaotun! Xiaotun is ontwikkeld en wordt beheerd door reoqoo IoT Technology Co., Ltd. (hierna te noemen \"ons\"). U kunt Xiaotun gebruiken om slimme camera's te beheren en te gebruiken.";
+"AA0672" = "Voordat u Xiaotun gebruikt, leest u de \"%@\" en \"%@\" aandachtig en begrijpt u deze volledig om onze diensten te begrijpen en hoe wij uw persoonlijke informatie verzamelen en verwerken tijdens de dienst.";
+"AA0673" = "Als u akkoord gaat met de bovenstaande overeenkomst, klik dan op \"Akkoord\" om Xiaotun te gaan gebruiken.";
+"AA0674" = "Minderjarigen moeten de tekst van de bovengenoemde overeenkomst lezen onder begeleiding van een voogd en Xiaotun gebruiken met toestemming en in aanwezigheid van de voogd.";
+"AA0675" = "U kunt uw persoonlijke gegevens beheren op de 'Ik' pagina. Wij zullen uw persoonlijke gegevens beschermen volgens de beveiligingstechnologiestandaarden van de industrie.";
+"AA0676" = "Tijdens het gebruik kunnen we ook de volgende toestemmingen aanvragen: Bluetooth, Locatie, Camera, Fotobibliotheek, Opslag, Microfoon, Apparaatinformatie, Lokaal netwerk, Kalender, Meldingen. U kunt altijd naar de toestemmingsbeheer gaan om de toestemmingsinstellingen aan te passen.";
+"AA0677" = "Beste gebruiker, om uw persoonlijke rechten beter te beschermen, hebben we %@ bijgewerkt in overeenstemming met de nieuwste wetten en regelgeving en onze bedrijfspraktijken. Daarom sturen we u deze melding.\nLees het aandachtig voordat u het gebruikt. Door op de knop Akkoord te klikken, geeft u aan dat u de bijgewerkte voorwaarden heeft gelezen en begrepen en ermee akkoord gaat dat u gebonden bent aan het bijgewerkte beleid. We zullen uw persoonlijke gegevens verwerken en u diensten verlenen op basis van uw toestemming en goedkeuring.\n\nAls u vragen heeft, neem dan contact met ons op:\nE-mail: %@";
+"AA0678" = "Welkom bij reoqoo! reoqoo wordt ontwikkeld en beheerd door reoqoo IoT Technology Co., Ltd. (hierna \"wij\" genoemd). U kunt slimme camera's gebruiken en beheren via reoqoo.";
+"AA0679" = "Voordat u reoqoo gebruikt, leest u de 《%@》 en 《%@》 zorgvuldig en begrijpt u ze volledig, zodat u onze diensten kunt begrijpen en hoe we uw persoonlijke gegevens tijdens de dienst verzamelen en verwerken.";
+"AA0680" = "Als u akkoord gaat met de bovenstaande overeenkomst, klik dan op \"Akkoord\" om reoqoo te gaan gebruiken.";
+"AA0681" = "Minderjarigen moeten de bovenstaande overeenkomststekst lezen onder begeleiding van een voogd, en reoqoo gebruiken met toestemming en onder begeleiding van een voogd.";
+"AA0682" = "Niet akkoord en app afsluiten";
+"AA0683" = "Herinnering aan Update Overeenkomst";
+"AA0684" = "Camera Gebruikersovereenkomst";
+"AA0685" = "Welkom bij het gebruik van %@! %@ is ontwikkeld en wordt beheerd door %@ (hierna aangeduid als \"wij\"). U kunt via %@ slimme camera's gebruiken en beheren. \nVoordat u %@ gebruikt, leest u %@%@ aandachtig en begrijpt u deze volledig, zodat u onze diensten begrijpt, evenals de verzameling en verwerking van uw persoonlijke gegevens tijdens de dienst. \nAls u akkoord gaat met de bovenstaande overeenkomsttekst, klik dan op \"Akkoord\" om %@ te gaan gebruiken. \nMinderjarigen moeten de bovenstaande overeenkomsttekst lezen onder begeleiding van een voogd, en %@ gebruiken met toestemming en onder begeleiding van de voogd. Wij beschermen uw persoonlijke gegevens volgens de industriestandaarden voor technologische beveiliging.";
+"AA0686" = "Voer een telefoonnummer of e-mailadres in";
+"AA0687" = "Voer een telefoonnummer of e-mailadres in";
+"AA0688" = "Voer het %@-account in om het apparaat te delen";
+"AA0689" = "Probeer de volgende handelingen en probeer het opnieuw:\n1. Houd de resetknop ingedrukt om het apparaat te resetten;\n2. Controleer of het apparaat is aangesloten op de stroomvoorziening;\n3. Controleer of de antenne van het apparaat loszit;\n4. Zorg ervoor dat de huidige 4G-signaalcommunicatie normaal is.";
+"AA0690" = "De camera is te laag, een upgrade in een staat van elektriciteit ~";
+"AA0691" = "Gebruik van niet-WLAN-netwerk, afspelen kan datakosten opleveren";
+"AA0692" = "Gezien %@";
+"AA0693" = "App wil uw opslag gebruiken";
