--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pl.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pl.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Mocny";
 "AA0030" = "Nieprawidłowe hasło";
 "AA0031" = "Odzyskaj hasło";
-"AA0032" = "Proszę wpisać identyfikator reoqoo";
+"AA0032" = "Proszę wpisać identyfikator";
 "AA0033" = "Konto nie istnieje";
 "AA0034" = "Podaj kod weryfikacyjny";
 "AA0035" = "Kod weryfikacyjny został wysłany do";
@@ -61,16 +61,16 @@
 "AA0062" = "Zeskanuj kod QR na urządzeniu, aby dodać";
 "AA0063" = "Latarka";
 "AA0064" = "Album ze zdjęciami";
-"AA0065" = "reoqoo chce skorzystać z aparatu";
+"AA0065" = "APP chce skorzystać z aparatu";
 "AA0066" = "Musisz zeskanować kod QR, aby połączyć i związać urządzenie. Czy wolno otwierać kamerę?";
 "AA0067" = "Odrzuć";
 "AA0068" = "Brak uprawnień do aparatu, włącz w Ustawieniach";
-"AA0069" = "reoqoo chce użyć informacji o Twojej lokalizacji";
+"AA0069" = "APP chce użyć informacji o Twojej lokalizacji";
 "AA0070" = "Aby pomyślnie dodany sprzęt, trzeba umożliwić korzystanie z usług lokalizacyjnych na uzyskanie informacji Wi-Fi.Proszę włączyć usługi lokalizacyjne.";
 "AA0071" = "Brak uprawnień do lokalizacji, proszę aktywować w ustawieniach";
-"AA0072" = "Czy reoqoo chciałby uzyskać dostęp do twoich zdjęć?";
+"AA0072" = "Czy APP chciałby uzyskać dostęp do twoich zdjęć?";
 "AA0073" = "Musisz wyświetlić i wysłać zdjęcie. Czy wolno otwierać album?";
-"AA0074" = "Czy reoqoo chciałby używać twoich informacji Bluetooth?";
+"AA0074" = "Czy APP chciałby używać twoich informacji Bluetooth?";
 "AA0075" = "Wymagana jest zgoda Bluetooth, aby pomóc urządzeniom inteligentnym w połączeniu z Wi-Fi podczas dodawania. Pozwolić?";
 "AA0076" = "Brak uprawnień Bluetooth, proszę aktywować w ustawieniach";
 "AA0077" = "Czy skonfigurowałeś urządzenie zgodnie z powyższą instrukcją?";
@@ -145,7 +145,7 @@
 "AA0146" = "Możesz dodać co najwyżej X osób, proszę usuń kilka, jeśli chcesz dalej dzielić się z innymi.";
 "AA0147" = "Zarządzanie udostępnieniem";
 "AA0148" = "Wpisz konto reoqoo do udostępnienia urządzenia";
-"AA0149" = "Proszę wprowadzić konto reoqoo";
+"AA0149" = "Proszę wpisać identyfikator";
 "AA0150" = "Ostatnio udostępnione";
 "AA0151" = "Współdzielenie twarzą w twarz";
 "AA0152" = "Udostępnienie";
@@ -154,7 +154,7 @@
 "AA0155" = "Już udostępniono temu znajomemu";
 "AA0156" = "Udostępnione";
 "AA0157" = "Ważne do";
-"AA0158" = "Zeskanuj powyższy kod QR za pomocą aplikacji reoqoo, aby udostępnić urządzenie";
+"AA0158" = "Zeskanuj powyższy kod QR za pomocą aplikacji APP, aby udostępnić urządzenie";
 "AA0159" = "Znajomi już udostępnieni";
 "AA0160" = "Nie udało się pobrać kodu QR, kliknij, aby odświeżyć";
 "AA0161" = "%@ udostępnił Ci urządzenie";
@@ -223,7 +223,7 @@
 "AA0224" = "O reoqoo";
 "AA0225" = "Centrum powiadomień";
 "AA0226" = "Operacja wykonana";
-"AA0227" = "Włącz uprawnienia do powiadomień w aplikacji Youkanto, aby otrzymywać najnowsze wiadomości na czas";
+"AA0227" = "Włącz uprawnienia do powiadomień w aplikacji %@, aby otrzymywać najnowsze wiadomości na czas";
 "AA0228" = "Brak więcej wiadomości";
 "AA0229" = "Brak ekranu lub wideo";
 "AA0230" = "Wybierz";
@@ -538,17 +538,17 @@
 "AA0542" = "Pobieranie nie powiodło się, sprawdź połączenie sieciowe urządzenia i spróbuj ponownie";
 "AA0543" = "Aktualizacja nie powiodła się, uruchom ponownie urządzenie i spróbuj ponownie";
 "AA0544" = "Aktualizowanie...";
-"AA0545" = "Przeczytałem umowę użytkownika i politykę prywatności Reoqoo i zgadzam się z nimi";
+"AA0545" = "Przeczytałem umowę użytkownika i politykę prywatności i zgadzam się z nimi";
 "AA0546" = "kamera";
 "AA0547" = "fotka";
 "AA0548" = "Wideo";
-"AA0549" = "Reoqoo potrzebuje Twojej zgody na dostęp do albumu, aby używać funkcji skanowania kodu QR";
-"AA0550" = "reoqoo wymaga Twojej zgody na dostęp do albumu, aby zapisać kod QR urządzenia w albumie systemowym.";
-"AA0551" = "reoqoo wymaga Twojej zgody na użycie kamery w funkcji skanowania kodu QR.";
-"AA0552" = "reoqoo wymaga Twojej zgody na dostęp do urządzeń Bluetooth.";
-"AA0553" = "reoqoo wymaga Twojej zgody na dostęp do mikrofonu w funkcji domofonu.";
-"AA0554" = "reoqoo wymaga Twojej zgody na dostęp do sieci lokalnej w celu połączenia urządzenia.";
-"AA0555" = "reoqoo wymaga Twojej zgody na użycie funkcji powiadomień push w celu otrzymywania powiadomień z urządzenia.";
+"AA0549" = "APP potrzebuje Twojej zgody na dostęp do albumu, aby używać funkcji skanowania kodu QR";
+"AA0550" = "APP wymaga Twojej zgody na dostęp do albumu, aby zapisać kod QR urządzenia w albumie systemowym.";
+"AA0551" = "APP wymaga Twojej zgody na użycie kamery w funkcji skanowania kodu QR.";
+"AA0552" = "APP wymaga Twojej zgody na dostęp do urządzeń Bluetooth.";
+"AA0553" = "APP wymaga Twojej zgody na dostęp do mikrofonu w funkcji domofonu.";
+"AA0554" = "APP wymaga Twojej zgody na dostęp do sieci lokalnej w celu połączenia urządzenia.";
+"AA0555" = "APP wymaga Twojej zgody na użycie funkcji powiadomień push w celu otrzymywania powiadomień z urządzenia.";
 "AA0556" = "ID urządzenia:";
 "AA0557" = "Brak dostępu do sieci lokalnej. Proszę włączyć w ustawieniach.";
 "AA0558" = "Nie udało się utworzyć kodu QR.";
@@ -603,13 +603,13 @@
 "AA0607" = "Dla dokładnego rozwiązania problemów";
 "AA0608" = "Co najmniej 10 znaków";
 "AA0609" = "Zobacz więcej";
-"AA0610" = "Reoqoo może uzyskać dostęp tylko do niektórych zdjęć. Zaleca się zezwolenie na dostęp do 'wszystkich zdjęć'. Kliknij, aby ustawić.";
-"AA0611" = "reoqoo nie ma dostępu do albumu, kliknij, aby ustawić";
+"AA0610" = "APP może uzyskać dostęp tylko do niektórych zdjęć. Zaleca się zezwolenie na dostęp do 'wszystkich zdjęć'. Kliknij, aby ustawić.";
+"AA0611" = "APP nie ma dostępu do albumu, kliknij, aby ustawić";
 "AA0612" = "Proszę szczegółowo opisać swoje sugestie lub napotkane problemy";
 "AA0613" = "Ustawienia powiadomień push";
 "AA0614" = "Ustawienia uprawnień systemowych";
 "AA0615" = "Powiadomienia o wiadomościach push";
-"AA0616" = "Po włączeniu szybko otrzymasz najnowsze wiadomości z aplikacji reoqoo";
+"AA0616" = "Po włączeniu szybko otrzymasz najnowsze wiadomości z aplikacji APP";
 "AA0617" = "Autoryzować";
 "AA0618" = "Aktywowany";
 "AA0619" = "Lokalizacja";
@@ -626,7 +626,7 @@
 "AA0630" = "Po włączeniu można używać funkcji małego okna wideo oraz powiadomień o dzwonku monitorującym";
 "AA0631" = "Popup interfejs w tle";
 "AA0632" = "Po włączeniu można otrzymywać powiadomienia o dzwonku monitorującym";
-"AA0633" = "Aby zapewnić lepsze doświadczenie użytkownika, reoqoo w niektórych sytuacjach poprosi o następujące uprawnienia systemowe.";
+"AA0633" = "Aby zapewnić lepsze doświadczenie użytkownika, APP w niektórych sytuacjach poprosi o następujące uprawnienia systemowe.";
 "AA0634" = "Zatwierdzono";
 "AA0635" = "Nie zatwierdzone";
 "AA0636" = "Sieć lokalna";
@@ -657,5 +657,29 @@
 "AA0663" = "Proszę pobrać aplikację \"Xiaotun Cloud\", aby kontynuować korzystanie";
 "AA0664" = "Nie Przypominaj Ponownie";
 "AA0665" = "O";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Wprowadź konto";
+"AA0670" = "Umowa Użytkownika i Polityka Prywatności";
+"AA0671" = "Witamy w Xiaotun! Xiaotun jest opracowywany i zarządzany przez reoqoo IoT Technology Co., Ltd. (zwany dalej \"nami\"). Możesz używać Xiaotun do zarządzania i korzystania z inteligentnych kamer.";
+"AA0672" = "Przed użyciem Xiaotun prosimy o przeczytanie i pełne zrozumienie \"%@\" i \"%@\", aby zrozumieć nasze usługi oraz jak zbieramy i przetwarzamy Twoje dane osobowe podczas świadczenia usługi.";
+"AA0673" = "Jeśli zgadzasz się z powyższą umową, kliknij „Zgadzam się”, aby rozpocząć korzystanie z Xiaotun.";
+"AA0674" = "Nieletni muszą przeczytać tekst ww. umowy w obecności opiekuna i korzystać z Xiaotun za jego zgodą i w jego obecności.";
+"AA0675" = "Możesz zarządzać swoimi danymi osobowymi na stronie 'Ja'. Będziemy chronić Twoje dane osobowe zgodnie z branżowymi standardami technologii bezpieczeństwa.";
+"AA0676" = "Podczas korzystania możemy również prosić o następujące uprawnienia: Bluetooth, Lokalizacja, Aparat, Biblioteka zdjęć, Przechowywanie, Mikrofon, Informacje o urządzeniu, Sieć lokalna, Kalendarz, Powiadomienia. Zawsze możesz przejść do zarządzania uprawnieniami, aby dostosować ustawienia uprawnień.";
+"AA0677" = "Szanowny użytkowniku, aby lepiej chronić Twoje prawa osobiste, zaktualizowaliśmy %@ zgodnie z najnowszymi przepisami i naszymi praktykami biznesowymi. Wysyłamy Ci to powiadomienie.\nProsimy o uważne przeczytanie przed użyciem. Klikając przycisk zgody, potwierdzasz, że przeczytałeś i zrozumiałeś zaktualizowane warunki oraz zgadzasz się być związany zaktualizowaną polityką. Będziemy przetwarzać Twoje dane osobowe i świadczyć usługi na podstawie Twojej zgody i autoryzacji.\n\nJeśli masz pytania, skontaktuj się z nami:\nE-mail: %@";
+"AA0678" = "Witamy w reoqoo! reoqoo jest opracowywane i obsługiwane przez reoqoo IoT Technology Co., Ltd. (zwane dalej „nami”). Możesz używać smart kamery i zarządzać nią za pośrednictwem reoqoo.";
+"AA0679" = "Przed użyciem reoqoo, przeczytaj i w pełni zrozum 《%@》 i 《%@》, abyś mógł zrozumieć nasze usługi i sposób, w jaki zbieramy i przetwarzamy Twoje dane osobowe podczas świadczenia usługi.";
+"AA0680" = "Jeśli zgadzasz się z powyższą umową, kliknij „Zgadzam się”, aby rozpocząć korzystanie z reoqoo.";
+"AA0681" = "Nieletni muszą przeczytać powyższą treść umowy w obecności opiekuna i korzystać z reoqoo za zgodą i w obecności opiekuna.";
+"AA0682" = "Nie zgadzam się i wyjdź z aplikacji";
+"AA0683" = "Przypomnienie o Aktualizacji Umowy";
+"AA0684" = "Umowa użytkownika kamery";
+"AA0685" = "Witamy w korzystaniu z %@! %@ jest rozwijane i zarządzane przez %@ (dalej określane jako \"my\"). Możesz używać i zarządzać inteligentnymi kamerami przez %@. \nPrzed użyciem %@, proszę uważnie przeczytać i w pełni zrozumieć %@%@, abyś mógł zrozumieć nasze usługi, a także zbieranie i przetwarzanie Twoich danych osobowych podczas świadczenia usług. \nJeśli zgadzasz się z powyższym tekstem umowy, kliknij \"Zgadzam się\", aby rozpocząć korzystanie z %@. \nNieletni muszą przeczytać powyższy tekst umowy w towarzystwie opiekuna i korzystać z %@ za zgodą i w towarzystwie opiekuna. Będziemy chronić Twoje dane osobowe zgodnie z branżowymi standardami bezpieczeństwa technologicznego.";
+"AA0686" = "Podaj numer telefonu lub e-mail adres";
+"AA0687" = "Podaj numer telefonu lub e-mail adres";
+"AA0688" = "Wpisz konto %@ do udostępnienia urządzenia";
+"AA0689" = "Spróbuj wykonać następujące czynności i spróbuj ponownie:\n1. Naciśnij i przytrzymaj przycisk resetowania, aby zresetować urządzenie;\n2. Sprawdź, czy urządzenie jest podłączone do zasilania;\n3. Sprawdź, czy antena urządzenia nie jest poluzowana;\n4. Upewnij się, że bieżąca komunikacja sygnału 4G działa normalnie.";
+"AA0690" = "Kamera jest zbyt niska, proszę uaktualnić w stanie energii elektrycznej ~";
+"AA0691" = "Korzystanie z sieci innej niż WLAN, odtwarzanie może generować koszty danych";
+"AA0692" = "Zobaczony %@";
+"AA0693" = "Aplikacja chce korzystać z Twojej pamięci";
