--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pt.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pt.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Forte";
 "AA0030" = "As senhas não conferem";
 "AA0031" = "Recuperação de senha";
-"AA0032" = "Digite o ID reoqoo";
+"AA0032" = "Digite o ID";
 "AA0033" = "Esta conta não existe";
 "AA0034" = "Código de verificação";
 "AA0035" = "O código de verificação já foi enviado para";
@@ -40,7 +40,7 @@
 "AA0040" = "O código de verificação foi enviado";
 "AA0041" = "Casa";
 "AA0042" = "Monitoramento";
-"AA0043" = "Meu reoqoo";
+"AA0043" = "Meu";
 "AA0044" = "Termo de Acordo do Usuário";
 "AA0045" = "Resumo do acordo de serviço do usuário e política de privacidade";
 "AA0046" = "Seja bem-vindo a usar reoqoo! reoqoo é uma plataforma de áudio e vídeo on-line pequisada e desenvolvida e operada pela reoqoo IoT Technology Co., Ltd.(Doravante denominado \"nós\"), usaremos a Política de Privacidade e o  Acordo de Usuário para ajudá-lo a entender a situação como coletamos, usamos, armazenamos e compartilhamos informações pessoais e seus direitos relacionados. \n Para fornecer vídeo ao vivo, reprodução de vídeo, assinatura de coleção, interação com a comunidade e outros serviços, precisamos coletar suas informações pessoais, como gravações de vídeo, imagens de vídeo, informações de dispositivo, registros de operação, etc; \n Você pode acessar, corrigir, excluir suas informações pessoais e gerenciar sua autorização no Centro Pessoal; \n Utilizaremos tecnologias de segurança líderes do setor para proteger suas informações pessoais.\n Você pode entender os detalhes lendo a versão completa de %@ e %@.\n Se você concordar, clique em \"Concordo\" para aceitar os nossos serviços.";
@@ -61,16 +61,16 @@
 "AA0062" = "Escanear QR code no dispositivo para adicionar";
 "AA0063" = "Lanterna";
 "AA0064" = "Álbum";
-"AA0065" = "reoqoo deseja usar sua câmera";
+"AA0065" = "APP deseja usar sua câmera";
 "AA0066" = "É necessário digitalizar o código QR para conectar e ligar o dispositivo. Você permite acessar a câmera?";
 "AA0067" = "Rejeitar";
 "AA0068" = "Sem permissão de câmera, ative nas Configurações";
-"AA0069" = "reoqoo deseja usar suas informações de localização";
+"AA0069" = "APP deseja usar suas informações de localização";
 "AA0070" = "Para adicionar equipamentos com sucesso, é necessário permitir o uso dos Serviços de Localização para obter informações sobre o Wi-Fi. Por favor ative os Serviços de Localização.";
 "AA0071" = "Sem permissão de localização, ative-a nas configurações";
-"AA0072" = "reoqoo deseja acessar suas informações de álbum";
+"AA0072" = "APP deseja acessar suas informações de álbum";
 "AA0073" = "Precisamos ver e enviar a fotos. Você permite acessar o armazenamento?";
-"AA0074" = "reoqoo deseja usar suas informações de Bluetooth";
+"AA0074" = "APP deseja usar suas informações de Bluetooth";
 "AA0075" = "Permissão de Bluetooth necessária para ajudar dispositivos inteligentes a se conectar ao Wi-Fi durante a adição. Permitir?";
 "AA0076" = "Sem permissão de Bluetooth, ative-a nas configurações";
 "AA0077" = "Configurou o dispositivo de acordo com as instruções acima?";
@@ -145,7 +145,7 @@
 "AA0146" = "É possível adicionar no máximo X visitantes. Exclua alguns se quiser continuar compartilhando com outras pessoas.";
 "AA0147" = "Gestão de compartilhamento";
 "AA0148" = "Digite a conta reoqoo para compartilhar o dispositivo";
-"AA0149" = "Por favor, insira a conta reoqoo";
+"AA0149" = "Digite o ID";
 "AA0150" = "Compartilhado recentemente";
 "AA0151" = "Compartilhamento face a face";
 "AA0152" = "Compartilhar";
@@ -154,7 +154,7 @@
 "AA0155" = "Já compartilhado com este amigo";
 "AA0156" = "Compartilhado com sucesso";
 "AA0157" = "Válido até";
-"AA0158" = "Escaneie o QR code acima com o APP reoqoo para compartilhar o dispositivo";
+"AA0158" = "Escaneie o QR code acima com o APP para compartilhar o dispositivo";
 "AA0159" = "Amigos compartilhados";
 "AA0160" = "Falha ao obter o QR code, clique para atualizar";
 "AA0161" = "%@ compartilhou um equipamento com você";
@@ -223,7 +223,7 @@
 "AA0224" = "Sobre reoqoo";
 "AA0225" = "Centro de Notificação";
 "AA0226" = "Operação bem sucedida";
-"AA0227" = "Ativar a permissão de notificação do APP reoqoo para obter as últimas notícias a tempo";
+"AA0227" = "Ativar a permissão de notificação do APP %@ para obter as últimas notícias a tempo";
 "AA0228" = "Não há mais mensagens";
 "AA0229" = "Nenhuma captura de tela ou vídeo";
 "AA0230" = "Selecionar";
@@ -538,17 +538,17 @@
 "AA0542" = "Falha no download, verifique a conexão de rede do dispositivo e tente novamente";
 "AA0543" = "Falha na atualização, reinicie o dispositivo e tente novamente";
 "AA0544" = "A atualizar...";
-"AA0545" = "Li e concordo com o Acordo de Utilizador e a Política de Privacidade da Reoqoo";
+"AA0545" = "Li e concordo com o Acordo de Utilizador e a Política de Privacidade da";
 "AA0546" = "câmara";
 "AA0547" = "fotografia";
 "AA0548" = "vídeo";
-"AA0549" = "A Reoqoo precisa da sua autorização para acessar o álbum de fotos para usar a função de leitura de QR code";
-"AA0550" = "reoqoo necessita da sua permissão para acessar o álbum a fim de salvar o código QR do dispositivo no álbum do sistema.";
-"AA0551" = "reoqoo necessita da sua permissão para usar a câmera na função de escaneamento de código QR.";
-"AA0552" = "reoqoo necessita da sua permissão para acessar dispositivos Bluetooth.";
-"AA0553" = "reoqoo necessita da sua permissão para usar o microfone na função de intercomunicação.";
-"AA0554" = "reoqoo necessita da sua permissão para acessar a rede local para conectar dispositivos.";
-"AA0555" = "reoqoo necessita da sua permissão para a função de notificação por push a fim de receber notificações do dispositivo.";
+"AA0549" = "A APP precisa da sua autorização para acessar o álbum de fotos para usar a função de leitura de QR code";
+"AA0550" = "APP necessita da sua permissão para acessar o álbum a fim de salvar o código QR do dispositivo no álbum do sistema.";
+"AA0551" = "APP necessita da sua permissão para usar a câmera na função de escaneamento de código QR.";
+"AA0552" = "APP necessita da sua permissão para acessar dispositivos Bluetooth.";
+"AA0553" = "APP necessita da sua permissão para usar o microfone na função de intercomunicação.";
+"AA0554" = "APP necessita da sua permissão para acessar a rede local para conectar dispositivos.";
+"AA0555" = "APP necessita da sua permissão para a função de notificação por push a fim de receber notificações do dispositivo.";
 "AA0556" = "ID do dispositivo:";
 "AA0557" = "Sem acesso à rede local. Por favor, ative-a nas configurações.";
 "AA0558" = "Falha ao criar o código QR.";
@@ -603,13 +603,13 @@
 "AA0607" = "Para localização precisa de problemas";
 "AA0608" = "Pelo menos 10 palavras";
 "AA0609" = "Acessar mais";
-"AA0610" = "Reoqoo só pode acessar parte das fotos do álbum. Recomenda-se permitir acesso a 'todas as fotos'. Clique para configurar.";
-"AA0611" = "reoqoo não tem acesso ao álbum, clique para configurar";
+"AA0610" = "APP só pode acessar parte das fotos do álbum. Recomenda-se permitir acesso a 'todas as fotos'. Clique para configurar.";
+"AA0611" = "APP não tem acesso ao álbum, clique para configurar";
 "AA0612" = "Descreva em detalhes suas sugestões ou problemas encontrados";
 "AA0613" = "Configurações de notificação push";
 "AA0614" = "Configurações de permissões do sistema";
 "AA0615" = "Notificação de mensagem push";
-"AA0616" = "Ao ativar, você receberá oportunamente as últimas notícias do aplicativo reoqoo";
+"AA0616" = "Ao ativar, você receberá oportunamente as últimas notícias do aplicativo APP";
 "AA0617" = "Autorizar";
 "AA0618" = "Ativado";
 "AA0619" = "Localização";
@@ -626,7 +626,7 @@
 "AA0630" = "Ao ativar, pode usar o reprodução de vídeo em pequena janela e notificações de sino de monitoramento";
 "AA0631" = "Interface em janela pop-up em segundo plano";
 "AA0632" = "Ao ativar, você pode receber notificações do sino de monitoramento";
-"AA0633" = "Para oferecer uma melhor experiência ao usuário, a reoqoo solicitará as seguintes permissões do sistema em determinadas situações.";
+"AA0633" = "Para oferecer uma melhor experiência ao usuário, a APP solicitará as seguintes permissões do sistema em determinadas situações.";
 "AA0634" = "Autorizado";
 "AA0635" = "Não autorizado";
 "AA0636" = "Rede local";
@@ -657,5 +657,29 @@
 "AA0663" = "Por favor, baixe o aplicativo \"Xiaotun Cloud\" para continuar usando";
 "AA0664" = "Não Lembrar Novamente";
 "AA0665" = "Sobre";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Por favor, insira a conta";
+"AA0670" = "Termos de Uso e Política de Privacidade";
+"AA0671" = "Bem-vindo ao Xiaotun! Xiaotun é desenvolvido e operado por reoqoo IoT Technology Co., Ltd. (doravante denominado \"nós\"). Você pode usar Xiaotun para gerenciar e usar câmeras inteligentes.";
+"AA0672" = "Antes de usar o Xiaotun, leia e compreenda plenamente o \"%@\" e o \"%@\" para entender nossos serviços e como coletamos e processamos suas informações pessoais durante o serviço.";
+"AA0673" = "Se você concordar com o acordo mencionado, clique em \"Concordar\" para começar a usar o Xiaotun.";
+"AA0674" = "Os menores de idade devem ler o texto do acordo mencionado acima acompanhados de um responsável e usar Xiaotun com o consentimento e na presença do responsável.";
+"AA0675" = "Você pode gerenciar suas informações pessoais na página 'Eu'. Protegeremos suas informações pessoais de acordo com os padrões de tecnologia de segurança da indústria.";
+"AA0676" = "Durante o uso, podemos solicitar as seguintes permissões: Bluetooth, Localização, Câmera, Biblioteca de fotos, Armazenamento, Microfone, Informações do dispositivo, Rede local, Calendário, Notificações. Você pode sempre acessar o gerenciamento de permissões para ajustar as configurações de permissão.";
+"AA0677" = "Caro usuário, para melhor proteger seus direitos pessoais, atualizamos o %@ de acordo com as leis e regulamentos mais recentes e nossas práticas comerciais. Portanto, enviamos este aviso.\nPor favor, leia-o atentamente antes de usar. Ao clicar no botão de concordar, você indica que leu e entendeu os termos atualizados e concorda em estar vinculado à política atualizada. Processaremos suas informações pessoais e forneceremos serviços com base em sua autorização e consentimento.\n\nSe tiver alguma dúvida, entre em contato conosco:\nE-mail: %@";
+"AA0678" = "Bem-vindo ao uso do reoqoo! O reoqoo é desenvolvido e operado pela reoqoo IoT Technology Co., Ltd. (doravante denominada \"nós\"). Você pode usar e gerenciar câmeras inteligentes através do reoqoo.";
+"AA0679" = "Antes de usar o reoqoo, leia e compreenda plenamente o 《%@》 e o 《%@》 para que você possa entender nossos serviços e como coletamos e processamos suas informações pessoais durante o serviço.";
+"AA0680" = "Se você concordar com o acordo mencionado, clique em \"Concordar\" para começar a usar o reoqoo.";
+"AA0681" = "Menores de idade devem ler o texto do acordo mencionado acima acompanhados por um responsável, e usar o reoqoo com o consentimento e acompanhamento de um responsável.";
+"AA0682" = "Discordar e Sair do App";
+"AA0683" = "Lembrete de Atualização do Acordo";
+"AA0684" = "Acordo de Usuário da Câmera";
+"AA0685" = "Bem-vindo ao uso de %@! %@ é desenvolvido e operado por %@ (doravante referido como \"nós\"). Você pode usar e gerenciar câmeras inteligentes através de %@. \nAntes de usar %@, leia e compreenda plenamente %@%@, para que você possa entender nossos serviços, bem como a coleta e o processamento de suas informações pessoais durante o serviço. \nSe você concordar com o texto do acordo mencionado anteriormente, clique em \"Concordar\" para começar a usar %@. \nMenores de idade precisam ler o texto do acordo mencionado anteriormente acompanhados de um tutor, e usar %@ com o consentimento e acompanhamento do tutor. Protegeremos suas informações pessoais de acordo com os padrões de segurança tecnológica da indústria.";
+"AA0686" = "Digite um número de celular ou e-mail";
+"AA0687" = "Digite um número de celular ou e-mail";
+"AA0688" = "Digite a conta %@ para compartilhar o dispositivo";
+"AA0689" = "Por favor, tente as seguintes operações e tente novamente:\n1. Pressione e segure o botão de reset para resetar o dispositivo;\n2. Por favor, verifique se o dispositivo está conectado à fonte de alimentação;\n3. Por favor, verifique se a antena do dispositivo está solta;\n4. Por favor, certifique-se de que a comunicação do sinal 4G atual esteja normal.";
+"AA0690" = "A câmera é muito baixa, por favor, atualize em um estado de eletricidade ~";
+"AA0691" = "Usando uma rede não-WLAN, a reprodução pode gerar custos de dados";
+"AA0692" = "Visto %@";
+"AA0693" = "O app deseja acessar seu armazenamento.";
