--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ru.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ru.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Сильный";
 "AA0030" = "Два пароля не совпадают, введите еще раз";
 "AA0031" = "Получить пароль";
-"AA0032" = "Пожалуйста, введите reoqoo ID";
+"AA0032" = "Пожалуйста, введите ID";
 "AA0033" = "Аккаунт не существует";
 "AA0034" = "Введите код подтверждения";
 "AA0035" = "Код проверки был отправлен на";
@@ -61,16 +61,16 @@
 "AA0062" = "Сканируйте QR-код на устройстве, чтобы добавить";
 "AA0063" = "Фонарь";
 "AA0064" = "Фотоальбом";
-"AA0065" = "reoqoo хочет использовать вашу камеру";
+"AA0065" = "APP хочет использовать вашу камеру";
 "AA0066" = "Вам необходимо отсканировать QR-код для подключения и привязки устройства. Разрешено ли открывать камеру?";
 "AA0067" = "Отказ";
 "AA0068" = "Нет разрешения камеры, пожалуйста, включите в настройках";
-"AA0069" = "reoqoo хочет использовать информацию о вашем местоположении";
+"AA0069" = "APP хочет использовать информацию о вашем местоположении";
 "AA0070" = "Для успешного добавления оборудования, необходимо разрешить использование служб определения местоположения для получения информации Wi-Fi.Пожалуйста, включите Location Services.";
 "AA0071" = "Нет разрешения на доступ к местоположению, включите его в настройках";
-"AA0072" = "reoqoo хочет получить доступ к вашим фотографиям";
+"AA0072" = "APP хочет получить доступ к вашим фотографиям";
 "AA0073" = "Нужно просмотреть и отправить картинку. Разрешено ли открывать альбом?";
-"AA0074" = "reoqoo хочет использовать ваши данные Bluetooth";
+"AA0074" = "APP хочет использовать ваши данные Bluetooth";
 "AA0075" = "Требуется разрешение Bluetooth для подключения умных устройств к Wi-Fi при добавлении. Разрешить?";
 "AA0076" = "Нет разрешения Bluetooth, пожалуйста, включите его в настройках";
 "AA0077" = "Установили устройство согласно инструкциям?";
@@ -145,7 +145,7 @@
 "AA0146" = "X посетителей максимум могут быть добавлены, пожалуйста, удалите, если вы хотите продолжить совместное использование с другими.";
 "AA0147" = "Управление распределением";
 "AA0148" = "Введите учетную запись reoqoo для общего доступа";
-"AA0149" = "Пожалуйста, введите учетную запись reoqoo";
+"AA0149" = "Пожалуйста, введите ID";
 "AA0150" = "Недавно поделились";
 "AA0151" = "поделиться лицом к лицу";
 "AA0152" = "Поделиться";
@@ -154,7 +154,7 @@
 "AA0155" = "Уже поделились с этим другом";
 "AA0156" = "Удалось поделиться";
 "AA0157" = "Действительно до";
-"AA0158" = "Сканируйте QR-код с помощью приложения reoqoo для общего доступа";
+"AA0158" = "Сканируйте QR-код с помощью приложения APP для общего доступа";
 "AA0159" = "Уже общие друзья";
 "AA0160" = "Сбой в получении QR-кода, нажмите для обновления";
 "AA0161" = "%@ поделился с вами устройством";
@@ -539,17 +539,17 @@
 "AA0542" = "Ошибка загрузки, проверьте сетевое соединение устройства и попробуйте снова";
 "AA0543" = "Ошибка обновления, перезагрузите устройство и попробуйте снова";
 "AA0544" = "Обновляется...";
-"AA0545" = "Я прочитал(-а) и согласен(-на) с Пользовательским соглашением и Политикой конфиденциальности Reoqoo";
+"AA0545" = "Я прочитал(-а) и согласен(-на) с Пользовательским соглашением и Политикой конфиденциальности";
 "AA0546" = "камер";
 "AA0547" = "фотограф";
 "AA0548" = "виде";
-"AA0549" = "Reoqoo требуется ваше разрешение на доступ к альбому для использования функции сканирования QR-кода";
-"AA0550" = "reoqoo требует вашего разрешения на доступ к альбому для сохранения QR-кода устройства в системный альбом.";
-"AA0551" = "reoqoo требует вашего разрешения на использование камеры для сканирования QR-кодов.";
-"AA0552" = "reoqoo требует вашего разрешения на доступ к Bluetooth-устройствам.";
-"AA0553" = "reoqoo требует вашего разрешения на использование микрофона для функции интеркома.";
-"AA0554" = "reoqoo требует вашего разрешения на доступ к локальной сети для подключения устройства.";
-"AA0555" = "reoqoo требует вашего разрешения на функцию push-уведомлений для получения уведомлений от устройства.";
+"AA0549" = "APP требуется ваше разрешение на доступ к альбому для использования функции сканирования QR-кода";
+"AA0550" = "APP требует вашего разрешения на доступ к альбому для сохранения QR-кода устройства в системный альбом.";
+"AA0551" = "APP требует вашего разрешения на использование камеры для сканирования QR-кодов.";
+"AA0552" = "APP требует вашего разрешения на доступ к Bluetooth-устройствам.";
+"AA0553" = "APP требует вашего разрешения на использование микрофона для функции интеркома.";
+"AA0554" = "APP требует вашего разрешения на доступ к локальной сети для подключения устройства.";
+"AA0555" = "APP требует вашего разрешения на функцию push-уведомлений для получения уведомлений от устройства.";
 "AA0556" = "ID устройства:";
 "AA0557" = "Нет доступа к локальной сети. Пожалуйста, активируйте в настройках.";
 "AA0558" = "Ошибка создания QR-кода.";
@@ -604,13 +604,13 @@
 "AA0607" = "Для точного определения проблем";
 "AA0608" = "Минимум 10 символов";
 "AA0609" = "Доступ к большему";
-"AA0610" = "Reoqoo может получить доступ только к части фотографий. Рекомендуется разрешить доступ ко 'всем фотографиям'. Нажмите, чтобы настроить.";
-"AA0611" = "reoqoo нет доступа к альбому, нажмите, чтобы настроить";
+"AA0610" = "APP может получить доступ только к части фотографий. Рекомендуется разрешить доступ ко 'всем фотографиям'. Нажмите, чтобы настроить.";
+"AA0611" = "APP нет доступа к альбому, нажмите, чтобы настроить";
 "AA0612" = "Пожалуйста, подробно опишите ваши предложения или возникшие проблемы";
 "AA0613" = "Настройки push-уведомлений";
 "AA0614" = "Настройки системных разрешений";
 "AA0615" = "Уведомление о push-сообщениях";
-"AA0616" = "После включения вы будете своевременно получать последние новости reoqoo APP";
+"AA0616" = "После включения вы будете своевременно получать последние новости APP";
 "AA0617" = "Авторизовать";
 "AA0618" = "Включено";
 "AA0619" = "Местоположение";
@@ -627,7 +627,7 @@
 "AA0630" = "После включения можно использовать функции небольшого окна видео и уведомления охранного звонка";
 "AA0631" = "Фоновое всплывающее окно";
 "AA0632" = "После включения можно будет получать уведомления о звонке охранного колокольчика";
-"AA0633" = "Чтобы предоставить вам лучший пользовательский опыт, reoqoo в определённых ситуациях запрашивает следующие системные разрешения.";
+"AA0633" = "Чтобы предоставить вам лучший пользовательский опыт, APP в определённых ситуациях запрашивает следующие системные разрешения.";
 "AA0634" = "Разрешено";
 "AA0635" = "Не разрешено";
 "AA0636" = "Локальная сеть";
@@ -658,5 +658,29 @@
 "AA0663" = "Пожалуйста, скачайте приложение \"Xiaotun Cloud\", чтобы продолжить использование";
 "AA0664" = "Не напоминать снова";
 "AA0665" = "О";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Пожалуйста, введите аккаунт";
+"AA0670" = "Пользовательское соглашение и Политика конфиденциальности";
+"AA0671" = "Добро пожаловать в Xiaotun! Xiaotun разработан и управляется reoqoo IoT Technology Co., Ltd. (далее именуемый \"нами\"). Вы можете использовать Xiaotun для управления и использования умных камер.";
+"AA0672" = "Перед использованием Xiaotun, пожалуйста, внимательно прочитайте и полностью поймите \"%@\" и \"%@\", чтобы понять наши услуги и как мы собираем и обрабатываем вашу личную информацию в процессе обслуживания.";
+"AA0673" = "Если вы согласны с вышеупомянутым соглашением, нажмите «Согласен», чтобы начать использовать Xiaotun.";
+"AA0674" = "Несовершеннолетние должны прочитать текст упомянутого выше соглашения в присутствии опекуна и использовать Xiaotun с его согласия и в его присутствии.";
+"AA0675" = "Вы можете управлять своей личной информацией на странице 'Я'. Мы будем защищать вашу личную информацию в соответствии с отраслевыми стандартами безопасности.";
+"AA0676" = "В процессе использования мы также можем запросить следующие разрешения: Bluetooth, Местоположение, Камера, Фототека, Хранилище, Микрофон, Информация об устройстве, Локальная сеть, Календарь, Уведомления. Вы всегда можете перейти в управление разрешениями, чтобы настроить параметры разрешений.";
+"AA0677" = "Уважаемый пользователь, чтобы лучше защитить ваши личные права, мы обновили %@ в соответствии с последними законами и правилами, а также нашими бизнес-практиками. Поэтому мы отправляем вам это уведомление.\nПожалуйста, внимательно прочитайте его перед использованием. Нажимая кнопку согласия, вы подтверждаете, что прочитали и поняли обновленные условия и соглашаетесь с обновленной политикой. Мы будем обрабатывать ваши личные данные и предоставлять услуги на основе вашего разрешения и согласия.\n\nЕсли у вас есть вопросы, свяжитесь с нами:\nЭлектронная почта: %@";
+"AA0678" = "Добро пожаловать в reoqoo! reoqoo разработан и управляется компанией reoqoo IoT Technology Co., Ltd. (далее именуемой «мы»). Вы можете использовать и управлять умными камерами через reoqoo.";
+"AA0679" = "Перед использованием reoqoo, пожалуйста, внимательно прочитайте и полностью поймите 《%@》 и 《%@》, чтобы вы могли понять наши услуги и как мы собираем и обрабатываем вашу личную информацию в процессе обслуживания.";
+"AA0680" = "Если вы согласны с вышеупомянутым соглашением, нажмите «Согласен», чтобы начать использовать reoqoo.";
+"AA0681" = "Несовершеннолетние должны прочитать вышеупомянутый текст соглашения в присутствии опекуна и использовать reoqoo с согласия и в присутствии опекуна.";
+"AA0682" = "Не согласен и выйти из приложения";
+"AA0683" = "Напоминание об обновлении соглашения";
+"AA0684" = "Соглашение пользователя камеры";
+"AA0685" = "Добро пожаловать в использование %@! %@ разработана и управляется %@ (далее именуемая \"мы\"). Вы можете использовать и управлять интеллектуальными камерами через %@. \nПеред использованием %@, пожалуйста, внимательно прочитайте и полностью поймите %@%@, чтобы вы могли понять наши услуги, а также сбор и обработку вашей личной информации в процессе обслуживания. \nЕсли вы согласны с вышеупомянутым текстом соглашения, нажмите \"Согласен\", чтобы начать использовать %@. \nНесовершеннолетние должны прочитать вышеупомянутый текст соглашения в сопровождении опекуна и использовать %@ с согласия и в сопровождении опекуна. Мы будем защищать вашу личную информацию в соответствии с отраслевыми стандартами технологической безопасности.";
+"AA0686" = "Войдите по номеру телефона или адресу электронной почты";
+"AA0687" = "Войдите по номеру телефона или адресу электронной почты";
+"AA0688" = "Введите учетную запись %@ для общего доступа";
+"AA0689" = "Пожалуйста, попробуйте следующие действия и повторите попытку:\n1. Нажмите и удерживайте кнопку сброса, чтобы сбросить устройство;\n2. Пожалуйста, проверьте, подключено ли устройство к источнику питания;\n3. Пожалуйста, проверьте, не ослаблена ли антенна устройства;\n4. Пожалуйста, убедитесь, что текущая связь по сигналу 4G работает нормально.";
+"AA0690" = "Камера слишком низкая, пожалуйста, обновите в состоянии электричества ~";
+"AA0691" = "Используется не-WLAN сеть, воспроизведение может потребовать платы за трафик";
+"AA0692" = "увидел %@";
+"AA0693" = "Приложение хочет использовать ваше хранилище";
