--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/sk.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/sk.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "silný";
 "AA0030" = "Hesla nie sú konzistentné";
 "AA0031" = "Načítať heslo";
-"AA0032" = "Prosím, zadajte reoqoo ID";
+"AA0032" = "Prosím, zadajte ID";
 "AA0033" = "Účet neexistuje";
 "AA0034" = "Zadajte overovací kód";
 "AA0035" = "Overovací kód bol zaslaný";
@@ -62,16 +62,16 @@
 "AA0062" = "Prehľadať QR kód tela zariadenia a pridať zariadenie";
 "AA0063" = "svetlo";
 "AA0064" = "Fotoalbum";
-"AA0065" = "Program reoqoo chce použiť váš fotoaparát";
+"AA0065" = "Program APP chce použiť váš fotoaparát";
 "AA0066" = "Musíte skenovať kód QR na pripojenie a viazanie zariadenia. Je povolené otvoriť fotoaparát?";
 "AA0067" = "Odmietnuť";
 "AA0068" = "Žiadne povolenie na kameru, prosím, spustite ho v Settings";
-"AA0069" = "Program reoqoo chce použiť informácie o vašej polohe";
+"AA0069" = "Program APP chce použiť informácie o vašej polohe";
 "AA0070" = "Ak chcete úspešne pridaný zariadenie, je potrebné umožniť využívanie služby určovania polohy pre získavanie informácií o Wi-Fi.Prosím, zapnite služby určovania polohy.";
 "AA0071" = "Žiadne povolenie na umiestnenie, prosím, spustite ho v nastaveniach";
-"AA0072" = "Dovoľujete reoqoo používať informácie o vašom albume?";
+"AA0072" = "Dovoľujete APP používať informácie o vašom albume?";
 "AA0073" = "Potreba zobraziť a odoslať obrázok. Je povolené otvoriť album?";
-"AA0074" = "Dovoľujete reoqoo používať vaše informácie o Bluetoothe?";
+"AA0074" = "Dovoľujete APP používať vaše informácie o Bluetoothe?";
 "AA0075" = "Povolenie Bluetooth sa vyžaduje na pomoc inteligentným zariadeniam spojiť sa s Wi-Fi počas procesu pridania. Je to povolené?";
 "AA0076" = "Žiadne povolenie Bluetooth, prosím, spustite ho v nastaveniach";
 "AA0077" = "Sledovali ste vyššie uvedené usmernenia na prevádzku zariadenia?";
@@ -146,7 +146,7 @@
 "AA0146" = "Maximálny možný počet návštevníkov je X, ak chcete pokračovať v zdieľaní s ďalšími, odstráňte niektorých súčasných návštevníkov.";
 "AA0147" = "Správa zdieľaní";
 "AA0148" = "Zadajte účet reoqoo na zdieľanie zariadenia s";
-"AA0149" = "Zadajte prosím účt reoqoo";
+"AA0149" = "Prosím, zadajte ID";
 "AA0150" = "Nedávno zdieľané";
 "AA0151" = "Zdieľanie tvárou v tvár";
 "AA0152" = "Zdieľať";
@@ -155,7 +155,7 @@
 "AA0155" = "Bol zdieľaný s týmto priateľom";
 "AA0156" = "Zdieľanie prebehlo úspešne";
 "AA0157" = "Dátum uplynutia platnosti";
-"AA0158" = "Použite aplikáciu reoqoo na skenovanie QR kódu vyššie a zdieľanie zariadenia";
+"AA0158" = "Použite aplikáciu APP na skenovanie QR kódu vyššie a zdieľanie zariadenia";
 "AA0159" = "Priatelia už zdieľaní";
 "AA0160" = "Akvizícia QR kódu zlyhala, kliknite na obnovenie";
 "AA0161" = "%@ s vami zdieľal zariadenie";
@@ -224,7 +224,7 @@
 "AA0224" = "O reoqoo";
 "AA0225" = "Centrum oznámení";
 "AA0226" = "Operácia bola úspešná";
-"AA0227" = "Ak chcete dostávať najnovšie správy včas, zapnite si povolenie na upozornenia v aplikácii Youkanto";
+"AA0227" = "Ak chcete dostávať najnovšie správy včas, zapnite si povolenie na upozornenia v aplikácii %@";
 "AA0228" = "Žiadne ďalšie správy";
 "AA0229" = "Žiadny snímku alebo videozáznam";
 "AA0230" = "Vybrať";
@@ -353,7 +353,7 @@
 "AA0353" = "%@ Upgrade zlyhalo. Prosím skús znova neskôr";
 "AA0354" = "%@ Download failed. Please try again later";
 "AA0355" = "%@ Upgrade zlyhalo. Prosím opätovne spustite zariadenie alebo vložte pamäťovú kartu, aby ste sa opäť pokúsili";
-"AA0356" = "@ Download failed. Please check the device network and try again";
+"AA0356" = "%@ Download failed. Please check the device network and try again";
 "AA0357" = "%@ Upgrade zlyhalo. Prosím opätovne spustite zariadenie a pokúste sa znovu";
 "AA0358" = "%@ Upgrading";
 "AA0359" = "Nájdené viaceré účty, prosím vyberte";
@@ -545,13 +545,13 @@
 "AA0546" = "fotoaparát";
 "AA0547" = "fotka";
 "AA0548" = "Video";
-"AA0549" = "reoqoo si vyžaduje vaše povolenie udeliť prístup k albumu na použitie funkcie skenovania kódov QR";
-"AA0550" = "reoqoo vyžaduje vaše povolenie povoliť používanie albumu s cieľom uložiť kód QR zariadenia do systémového albumu";
-"AA0551" = "reoqoo vyžaduje vaše povolenie povoliť používanie kamery na použitie funkcie skenovania kódu QR";
-"AA0552" = "reoqoo vyžaduje vaše povolenie na povolenie používania Bluetoothu s cieľom prístupu k zariadeniam Bluetooth";
-"AA0553" = "reoqoo vyžaduje vaše povolenie povoliť používanie mikrofónu na použitie funkcie interkomu";
-"AA0554" = "reoqoo vyžaduje vaše povolenie na povolenie miestneho prístupu k sieti pre pripojenia zariadení";
-"AA0555" = "reoqoo si vyžaduje vaše povolenie na povolenie tlakovej funkcie s cieľom získať oznámenia o tlaku zariadenia";
+"AA0549" = "APP si vyžaduje vaše povolenie udeliť prístup k albumu na použitie funkcie skenovania kódov QR";
+"AA0550" = "APP vyžaduje vaše povolenie povoliť používanie albumu s cieľom uložiť kód QR zariadenia do systémového albumu";
+"AA0551" = "APP vyžaduje vaše povolenie povoliť používanie kamery na použitie funkcie skenovania kódu QR";
+"AA0552" = "APP vyžaduje vaše povolenie na povolenie používania Bluetoothu s cieľom prístupu k zariadeniam Bluetooth";
+"AA0553" = "APP vyžaduje vaše povolenie povoliť používanie mikrofónu na použitie funkcie interkomu";
+"AA0554" = "APP vyžaduje vaše povolenie na povolenie miestneho prístupu k sieti pre pripojenia zariadení";
+"AA0555" = "APP si vyžaduje vaše povolenie na povolenie tlakovej funkcie s cieľom získať oznámenia o tlaku zariadenia";
 "AA0556" = "ID zariadenia:";
 "AA0557" = "Žiadne povolenie na prístup k miestnemu LAN zariadeniu, prosím, spustite ho v nastaveniach";
 "AA0558" = "Nepodarilo sa vytvoriť QR kód zariadenia";
@@ -606,13 +606,13 @@
 "AA0607" = "Ľahké presne lokalizovať problémy";
 "AA0608" = "Aspoň 10 slov";
 "AA0609" = "Viac návštev";
-"AA0610" = "reoqoo môže prístup len k niektorým fotám v albume. Odporúča sa umožniť prístup k 'všetkým fotám'. Kliknite, aby ste ho nastavili.";
-"AA0611" = "reoqoo nemá prístup k albumu, kliknite na nastavenie";
+"AA0610" = "APP môže prístup len k niektorým fotám v albume. Odporúča sa umožniť prístup k 'všetkým fotám'. Kliknite, aby ste ho nastavili.";
+"AA0611" = "APP nemá prístup k albumu, kliknite na nastavenie";
 "AA0612" = "Uveďte podrobný opis vašich návrhov alebo problémov, s ktorými sa stretnete.";
 "AA0613" = "Nastavenia tlaku správy";
 "AA0614" = "Nastavenia systémových povolení";
 "AA0615" = "Oznámenie o tlačení správy";
-"AA0616" = "Po aktivácii môžete bezodkladne dostať posledné aktualizácie aplikácie reoqoo";
+"AA0616" = "Po aktivácii môžete bezodkladne dostať posledné aktualizácie aplikácie APP";
 "AA0617" = "Choď povoliť";
 "AA0618" = "Otvorené";
 "AA0619" = "poloha";
@@ -629,7 +629,7 @@
 "AA0630" = "Po aktivácii sa môže použiť malá funkcia spätného zobrazovania okna monitorovacieho videa a suspendovaného monitorovacieho zvonku.";
 "AA0631" = "Pop up interface in the background";
 "AA0632" = "Po aktivácii môžete dostať včasné oznámenia od zvonku opatrovateľa";
-"AA0633" = "Aby ste získali lepšie skúsenosti s užívateľom, reoqoo bude od vás požiadať o nasledujúce povolenia mobilného systému v špecifických scenároch:";
+"AA0633" = "Aby ste získali lepšie skúsenosti s užívateľom, APP bude od vás požiadať o nasledujúce povolenia mobilného systému v špecifických scenároch:";
 "AA0634" = "Povolené";
 "AA0635" = "Neoprávnené";
 "AA0636" = "Lokálna sieť";
@@ -660,5 +660,29 @@
 "AA0663" = "Stiahnite si aplikáciu \"Xiaotun Cloud\", aby ste mohli pokračovať v používaní";
 "AA0664" = "Nepripomínať Znova";
 "AA0665" = "O";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Zadajte účet";
+"AA0670" = "Užívateľská zmluva a Zásady ochrany osobných údajov";
+"AA0671" = "Vitajte v Xiaotun! Xiaotun je vyvíjaný a prevádzkovaný spoločnosťou reoqoo IoT Technology Co., Ltd. (ďalej len \"my\"). Môžete použiť Xiaotun na správu a používanie inteligentných kamier.";
+"AA0672" = "Pred použitím Xiaotun si prečítajte a plne pochopte \"%@\" a \"%@\", aby ste pochopili naše služby a ako zhromažďujeme a spracúvame vaše osobné údaje počas poskytovania služby.";
+"AA0673" = "Ak súhlasíte s vyššie uvedenou zmluvou, kliknite na \"Súhlasím\", aby ste mohli začať používať Xiaotun.";
+"AA0674" = "Neplnoletí musia prečítať text vyššie uvedenej zmluvy v sprievode zákonného zástupcu a používať Xiaotun s jeho súhlasom a v jeho prítomnosti.";
+"AA0675" = "Svoje osobné údaje môžete spravovať na stránke 'Ja'. Budeme chrániť vaše osobné údaje v súlade s priemyselnými normami bezpečnostnej technológie.";
+"AA0676" = "Počas používania môžeme tiež požiadať o nasledujúce povolenia: Bluetooth, Poloha, Kamera, Fotoknižnica, Úložisko, Mikrofón, Informácie o zariadení, Lokálna sieť, Kalendár, Oznámenia. Nastavenia povolení môžete kedykoľvek upraviť v správe povolení.";
+"AA0677" = "Vážený používateľ, aby sme lepšie chránili vaše osobné práva, aktualizovali sme %@ v súlade s najnovšími zákonmi a predpismi a našimi obchodnými praktikami. Preto vám zasielame toto oznámenie.\nPred použitím si ho prosím pozorne prečítajte. Kliknutím na tlačidlo Súhlasíte vyjadrujete, že ste si prečítali a pochopili aktualizované podmienky a súhlasíte s aktualizovanou politikou. Budeme spracovávať vaše osobné údaje a poskytovať vám služby na základe vášho poverenia a súhlasu.\n\nAk máte nejaké otázky, kontaktujte nás:\nE-mail: %@";
+"AA0678" = "Vitajte v reoqoo! reoqoo je vyvíjané a prevádzkované spoločnosťou reoqoo IoT Technology Co., Ltd. (ďalej len „my“). Môžete používať a spravovať inteligentné kamery prostredníctvom reoqoo.";
+"AA0679" = "Pred použitím reoqoo si prečítajte a úplne pochopte 《%@》 a 《%@》, aby ste pochopili naše služby a ako zhromažďujeme a spracúvame vaše osobné údaje počas služby.";
+"AA0680" = "Ak súhlasíte s vyššie uvedenou zmluvou, kliknite na \"Súhlasím\", aby ste mohli začať používať reoqoo.";
+"AA0681" = "Neplnoletí musia prečítať vyššie uvedený text zmluvy v sprievode zákonného zástupcu a používať reoqoo so súhlasom a v sprievode zákonného zástupcu.";
+"AA0682" = "Nesúhlasiť a ukončiť aplikáciu";
+"AA0683" = "Pripomienka Aktualizácie Dohody";
+"AA0684" = "Dohoda používateľa kamery";
+"AA0685" = "Vitajte pri používaní %@! %@ je vyvíjané a prevádzkované spoločnosťou %@ (ďalej len \"my\"). Môžete používať a spravovať inteligentné kamery prostredníctvom %@. \nPred použitím %@ si prosím pozorne prečítajte a plne pochopte %@%@, aby ste pochopili naše služby, ako aj zber a spracovanie vašich osobných údajov počas poskytovania služieb. \nAk súhlasíte s vyššie uvedeným textom zmluvy, kliknite na \"Súhlasím\", aby ste začali používať %@. \nNeplnoletí musia prečítať vyššie uvedený text zmluvy v sprievode zákonného zástupcu a používať %@ so súhlasom a v sprievode zákonného zástupcu. Vaše osobné údaje budeme chrániť v súlade s priemyselnými štandardmi technologickej bezpečnosti.";
+"AA0686" = "Zadajte telefónne číslo alebo e-mailovú adresu";
+"AA0687" = "Zadajte telefónne číslo alebo e-mailovú adresu";
+"AA0688" = "Zadajte účet %@ na zdieľanie zariadenia s";
+"AA0689" = "Vyskúšajte nasledujúce operácie a skúste to znova:\n1. Stlačte a podržte tlačítko reset, aby ste zariadenie resetovali;\n2. Skontrolujte, či je zariadenie pripojené k napájaniu;\n3. Skontrolujte, či je anténa zariadenia uvoľnená;\n4. Uistite sa, že aktuálna komunikácia 4G signálu je normálna.";
+"AA0690" = "Fotoaparát je príliš nízka, upgrade v stave elektriny ~";
+"AA0691" = "Využívaním siete, ktorá nie je WLAN, sa spätná prevádzková daň zaplatí";
+"AA0692" = "Pozri%@";
+"AA0693" = "Aplikácia chce použiť vaše úložisko";
