--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/th.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/th.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "แข็งแรง";
 "AA0030" = "นำเข้ารหัสผ่าน ๒ ครั้งไม่เป็นเอกฉันท์";
 "AA0031" = "กู้คืนรหัสผ่าน";
-"AA0032" = "กรุณากรอกหมายเลขบัญชี reoqoo";
+"AA0032" = "กรุณากรอกหมายเลขบัญชี";
 "AA0033" = "บัญชีไม่ดำรงอยู่";
 "AA0034" = "กรุณานำเข้ารหัสยืนยัน";
 "AA0035" = "รหัสยืนยันถูกส่งไปที่";
@@ -62,16 +62,16 @@
 "AA0062" = "สแกนรหัส QR ตัวอุปกรณ์เพิ่มอุปกรณ์";
 "AA0063" = "ไฟฉาย";
 "AA0064" = "อัลบั้ม";
-"AA0065" = "reoqoo ต้องการใช้กล้องของคุณ";
+"AA0065" = "APP ต้องการใช้กล้องของคุณ";
 "AA0066" = "คุณจำเป็นต้องสแกนรหัส QR เพื่อเชื่อมต่อและผูกอุปกรณ์ อนุญาตให้เปิดกล้องได้หรือไม่?";
 "AA0067" = "ปฏิเสธ";
 "AA0068" = "ไม่อนุญาตให้ใช้กล้องโปรดเปิดใช้งานในการตั้งค่า";
-"AA0069" = "reoqoo ต้องการใช้ข้อมูลตำแหน่งของคุณ";
+"AA0069" = "APP ต้องการใช้ข้อมูลตำแหน่งของคุณ";
 "AA0070" = "อุปกรณ์เพื่อเพิ่มเรียบร้อยแล้วคุณจะต้องอนุญาตให้มีการใช้บริการสถานที่สำหรับการรับข้อมูลอินเตอร์เน็ตไร้สาย.โปรดเปิดบริการตำแหน่ง";
 "AA0071" = "ไม่อนุญาตให้วางตําแหน่ง โปรดเปิดในการตั้งค่า";
-"AA0072" = "คุณอนุญาตให้ reoqoo ใช้ข้อมูลอัลบั้มรูปภาพของคุณหรือไม่";
+"AA0072" = "คุณอนุญาตให้ APP ใช้ข้อมูลอัลบั้มรูปภาพของคุณหรือไม่";
 "AA0073" = "จำเป็นที่จะต้องดูและส่งภาพ มันได้รับอนุญาตให้เปิดอัลบั้ม?";
-"AA0074" = "คุณอนุญาตให้ reoqoo ใช้ข้อมูลบลูทู ธ ของคุณหรือไม่";
+"AA0074" = "คุณอนุญาตให้ APP ใช้ข้อมูลบลูทู ธ ของคุณหรือไม่";
 "AA0075" = "ต้องได้รับอนุญาตจากบลูทู ธ เพื่อช่วยให้อุปกรณ์อัจฉริยะเชื่อมต่อกับ Wi-Fi ในระหว่างกระบวนการเพิ่มเติม อนุญาตหรือไม่?";
 "AA0076" = "ไม่อนุญาตให้ใช้บลูทู ธ โปรดเปิดใช้งานในการตั้งค่า";
 "AA0077" = "คุณได้ใช้งานอุปกรณ์ตามแนวทางข้างต้นหรือไม่?";
@@ -146,7 +146,7 @@
 "AA0146" = "เพิ่มผู้ที่มาเยี่ยมได้มากสุดคือXคน  หากต้องการแชร์ให้คนอื่นๆต่อไป กรุณาลบผู้ที่มาเยี่ยมบางคนก่อน";
 "AA0147" = "จัดการแชร์";
 "AA0148" = "ป้อนบัญชี reoqoo ของอุปกรณ์ที่จะแบ่งปัน";
-"AA0149" = "กรุณากรอกหมายเลขบัญชี reoqoo";
+"AA0149" = "กรุณากรอกหมายเลขบัญชี";
 "AA0150" = "แบ่งปันล่าสุด";
 "AA0151" = "การแบ่งปันหน้าต่อหน้า";
 "AA0152" = "แชร์";
@@ -155,7 +155,7 @@
 "AA0155" = "ได้แบ่งปันกับเพื่อนคนนี้";
 "AA0156" = "แบ่งสุขที่สำเร็จ";
 "AA0157" = "หมดอายุจนถึง";
-"AA0158" = "ใช้ reoqoo APP เพื่อสแกนรหัส QR ด้านบนอุปกรณ์แบ่งปัน";
+"AA0158" = "ใช้ APP เพื่อสแกนรหัส QR ด้านบนอุปกรณ์แบ่งปัน";
 "AA0159" = "เพื่อนที่ได้แบ่งปัน";
 "AA0160" = "ไม่สามารถรับรหัส QR โปรดคลิกรีเฟรช";
 "AA0161" = "%@ แบ่งปันอุปกรณ์กับคุณ";
@@ -224,7 +224,7 @@
 "AA0224" = "เกี่ยวกับ reoqoo";
 "AA0225" = "ศูนย์ข้อความ";
 "AA0226" = "กระทำที่ประสบความสําเร็จ";
-"AA0227" = "มีสิทธิ์เปิดการแจ้งเตือน APP ของ reoqooและรับข่าวสารล่าสุดได้ทันท่วงที";
+"AA0227" = "มีสิทธิ์เปิดการแจ้งเตือน APP ของ %@และรับข่าวสารล่าสุดได้ทันท่วงที";
 "AA0228" = "ไม่มีข่าวอื่น ๆ";
 "AA0229" = "ไม่มีภาพหน้าจอหรือวิดีโอ";
 "AA0230" = "การเลือก";
@@ -545,13 +545,13 @@
 "AA0546" = "กล้อง";
 "AA0547" = "ภาพถ่าย";
 "AA0548" = "วิดีโอ";
-"AA0549" = "reoqoo ต้องได้รับอนุญาตจากคุณในการอนุญาตการใช้อัลบั้มรูป เพื่อใช้ฟังก์ชันการสแกนรหัส QR";
-"AA0550" = "reoqoo ต้องได้รับอนุญาตจากคุณในการอนุญาตการใช้อัลบั้มรูป เพื่อบันทึกรหัส QR ของอุปกรณ์ลงในอัลบั้มรูปภาพของระบบ";
-"AA0551" = "reoqoo ต้องได้รับอนุญาตจากคุณในการอนุญาตการใช้กล้องถ่ายรูป เพื่อใช้ฟังก์ชันการสแกนรหัส QR";
-"AA0552" = "reoqoo ต้องได้รับอนุญาตจากคุณในการอนุญาตการใช้บลูทู ธ  เพื่อเข้าถึงอุปกรณ์บลูทู ธ";
-"AA0553" = "reoqoo ต้องได้รับอนุญาตจากคุณในการอนุญาตไมโครโฟน  เพื่อใช้ฟังก์ชั่นไมโครโฟน";
-"AA0554" = "reoqoo ต้องได้รับอนุญาตจากคุณในการอนุญาตการเข้าถึงเครือข่ายท้องถิ่น  เพื่อการเชื่อต่ออุปกรณ์";
-"AA0555" = "reoqoo ต้องได้รับอนุญาตจากคุณในการอนุญาตฟังก์ชั่นพุช  เพื่อรับอุปกรณ์ฟังก์ชั่นพุช";
+"AA0549" = "APP ต้องได้รับอนุญาตจากคุณในการอนุญาตการใช้อัลบั้มรูป เพื่อใช้ฟังก์ชันการสแกนรหัส QR";
+"AA0550" = "APP ต้องได้รับอนุญาตจากคุณในการอนุญาตการใช้อัลบั้มรูป เพื่อบันทึกรหัส QR ของอุปกรณ์ลงในอัลบั้มรูปภาพของระบบ";
+"AA0551" = "APP ต้องได้รับอนุญาตจากคุณในการอนุญาตการใช้กล้องถ่ายรูป เพื่อใช้ฟังก์ชันการสแกนรหัส QR";
+"AA0552" = "APP ต้องได้รับอนุญาตจากคุณในการอนุญาตการใช้บลูทู ธ  เพื่อเข้าถึงอุปกรณ์บลูทู ธ";
+"AA0553" = "APP ต้องได้รับอนุญาตจากคุณในการอนุญาตไมโครโฟน  เพื่อใช้ฟังก์ชั่นไมโครโฟน";
+"AA0554" = "APP ต้องได้รับอนุญาตจากคุณในการอนุญาตการเข้าถึงเครือข่ายท้องถิ่น  เพื่อการเชื่อต่ออุปกรณ์";
+"AA0555" = "APP ต้องได้รับอนุญาตจากคุณในการอนุญาตฟังก์ชั่นพุช  เพื่อรับอุปกรณ์ฟังก์ชั่นพุช";
 "AA0556" = "IDอุปกรณ์:";
 "AA0557" = "ไม่มีสิทธิ์เข้าถึงสําหรับอุปกรณ์ LAN ในพื้นที่ โปรดเปิดใช้งานในการตั้งค่า";
 "AA0558" = "สร้างรหัส QR ของอุปกรณ์ไม่สําเร็จ";
@@ -606,13 +606,13 @@
 "AA0607" = "ซึ่งสะดวกสําหรับการวางตําแหน่งที่แม่นยํา";
 "AA0608" = "อย่างน้อย 10 คํา";
 "AA0609" = "เยี่ยมชมเพิ่มเติม";
-"AA0610" = "reoqoo สามารถเข้าถึงรูปภาพบางรูปในอัลบั้มเท่านั้น ขอแนะนําให้อนุญาตให้เข้าถึง`รูปภาพทั้งหมด` คลิกเพื่อตั้งค่า";
-"AA0611" = "reoqoo ไม่สามารถเข้าถึงอัลบั้มรูปภาพได้ คลิกเพื่อตั้งค่า";
+"AA0610" = "APP สามารถเข้าถึงรูปภาพบางรูปในอัลบั้มเท่านั้น ขอแนะนําให้อนุญาตให้เข้าถึง`รูปภาพทั้งหมด` คลิกเพื่อตั้งค่า";
+"AA0611" = "APP ไม่สามารถเข้าถึงอัลบั้มรูปภาพได้ คลิกเพื่อตั้งค่า";
 "AA0612" = "โปรดอธิบายข้อเสนอแนะหรือปัญหาของคุณโดยละเอียด";
 "AA0613" = "การตั้งค่าพุชข้อความ";
 "AA0614" = "การตั้งค่าสิทธิ์ของระบบ";
 "AA0615" = "การแจ้งเตือนแบบพุชข้อความ";
-"AA0616" = "คุณสามารถรับข่าวสารล่าสุดของ reoqoo APP ได้ทันเวลาหลังจากเปิด";
+"AA0616" = "คุณสามารถรับข่าวสารล่าสุดของ APP ได้ทันเวลาหลังจากเปิด";
 "AA0617" = "มอบอํานาจ";
 "AA0618" = "เปิดแล้ว";
 "AA0619" = "สถานที่";
@@ -629,7 +629,7 @@
 "AA0630" = "หลังจากเปิดเครื่องแล้ว คุณสามารถใช้ฟังก์ชันการเล่นหน้าต่างขนาดเล็กของวิดีโอตรวจสอบและกระดิ่งพยาบาลเพื่อลอยได้";
 "AA0631" = "อินเทอร์เฟซป๊อปอัปพื้นหลัง";
 "AA0632" = "หลังจากเปิดแล้วคุณจะได้รับการแจ้งเตือนของกระดิ่งพยาบาลได้ทันเวลา";
-"AA0633" = "เพื่อให้คุณได้รับประสบการณ์การใช้งานที่ดียิ่งขึ้น reoqoo จะนําไปใช้กับคุณสําหรับการอนุญาตระบบโทรศัพท์มือถือต่อไปนี้ในสถานการณ์เฉพาะ";
+"AA0633" = "เพื่อให้คุณได้รับประสบการณ์การใช้งานที่ดียิ่งขึ้น APP จะนําไปใช้กับคุณสําหรับการอนุญาตระบบโทรศัพท์มือถือต่อไปนี้ในสถานการณ์เฉพาะ";
 "AA0634" = "อนุญาต";
 "AA0635" = "ไม่ได้รับอนุญาต";
 "AA0636" = "เครือข่ายท้องถิ่น";
@@ -660,5 +660,29 @@
 "AA0663" = "โปรดดาวน์โหลดแอป \"Xiaotun Cloud\" เพื่อใช้งานต่อไป";
 "AA0664" = "ไม่เตือนอีก";
 "AA0665" = "เกี่ยวกับ";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "กรุณาใส่บัญชีผู้ใช้";
+"AA0670" = "ข้อตกลงผู้ใช้และนโยบายความเป็นส่วนตัว";
+"AA0671" = "ยินดีต้อนรับสู่ Xiaotun! Xiaotun พัฒนาและดำเนินการโดย reoqoo IoT Technology Co., Ltd. (ต่อไปนี้เรียกว่า \"เรา\") คุณสามารถใช้ Xiaotun เพื่อจัดการและใช้กล้องอัจฉริยะ";
+"AA0672" = "ก่อนการใช้ Xiaotun กรุณาอ่านและทำความเข้าใจ \"%@\" และ \"%@\" เพื่อทำความเข้าใจบริการของเราและวิธีการที่เรารวบรวมและประมวลผลข้อมูลส่วนบุคคลของคุณระหว่างการให้บริการ";
+"AA0673" = "หากคุณเห็นด้วยกับข้อตกลงที่กล่าวมาข้างต้น โปรดคลิก \"ยอมรับ\" เพื่อเริ่มใช้ Xiaotun";
+"AA0674" = "ผู้เยาว์ต้องอ่านข้อความสัญญาดังกล่าวข้างต้นโดยมีผู้ปกครอง陪同 และใช้ Xiaotun หลังจากได้รับความยินยอมและในขณะที่มีผู้ปกครองอยู่ด้วย";
+"AA0675" = "คุณสามารถจัดการข้อมูลส่วนบุคคลของคุณในหน้า 'ฉัน' เราจะปกป้องข้อมูลส่วนบุคคลของคุณตามมาตรฐานเทคโนโลยีความปลอดภัยของอุตสาหกรรม";
+"AA0676" = "ระหว่างการใช้งาน เราอาจขอสิทธิ์ต่อไปนี้: บลูทูธ, ตำแหน่งที่ตั้ง, กล้อง, ห้องสมุดรูปภาพ, ที่เก็บข้อมูล, ไมโครโฟน, ข้อมูลอุปกรณ์, เครือข่ายท้องถิ่น, ปฏิทิน, การแจ้งเตือน คุณสามารถไปที่การจัดการสิทธิ์เพื่อปรับการตั้งค่าสิทธิ์ได้ตลอดเวลา";
+"AA0677" = "เรียนผู้ใช้ เพื่อปกป้องสิทธิส่วนบุคคลของคุณได้ดียิ่งขึ้น เราได้อัปเดต %@ ตามกฎหมายและระเบียบข้อบังคับล่าสุดและแนวปฏิบัติทางธุรกิจของเรา ดังนั้นเราจึงส่งประกาศนี้ให้คุณ\nกรุณาอ่านอย่างละเอียดก่อนใช้ การคลิกปุ่มยอมรับแสดงว่าคุณได้อ่านและเข้าใจข้อกำหนดที่อัปเดตแล้วและยินยอมที่จะผูกพันกับนโยบายที่อัปเดต เราจะประมวลผลข้อมูลส่วนบุคคลของคุณและให้บริการตามการอนุญาตและความยินยอมของคุณ\n\nหากมีข้อสงสัยโปรดติดต่อเรา:\nอีเมล: %@";
+"AA0678" = "ยินดีต้อนรับสู่ reoqoo! reoqoo ได้รับการพัฒนาและดำเนินการโดย reoqoo IoT Technology Co., Ltd. (ต่อไปนี้เรียกว่า \"เรา\"). คุณสามารถใช้และจัดการกล้องอัจฉริยะผ่าน reoqoo";
+"AA0679" = "ก่อนที่จะใช้ reoqoo โปรดอ่านและเข้าใจ 《%@》 และ 《%@》 อย่างถี่ถ้วน เพื่อให้คุณเข้าใจบริการของเราและวิธีการที่เรารวบรวมและประมวลผลข้อมูลส่วนบุคคลของคุณในระหว่างการให้บริการ";
+"AA0680" = "หากคุณเห็นด้วยกับข้อตกลงที่กล่าวมาข้างต้น โปรดคลิก \"ยอมรับ\" เพื่อเริ่มใช้ reoqoo";
+"AA0681" = "ผู้เยาว์ต้องอ่านข้อตกลงที่กล่าวมาข้างต้นพร้อมกับผู้ปกครอง และใช้ reoqoo ด้วยความยินยอมและร่วมกับผู้ปกครอง";
+"AA0682" = "ไม่ยอมรับและออกจากแอป";
+"AA0683" = "การแจ้งเตือนการอัปเดตข้อตกลง";
+"AA0684" = "ข้อตกลงผู้ใช้กล้อง";
+"AA0685" = "ยินดีต้อนรับสู่การใช้ %@! %@ ได้รับการพัฒนาและดำเนินการโดย %@ (ต่อไปนี้จะเรียกว่า \"เรา\") คุณสามารถใช้และจัดการกล้องอัจฉริยะผ่าน %@. \nก่อนใช้ %@ โปรดอ่านและเข้าใจ %@%@ อย่างละเอียด เพื่อให้คุณเข้าใจบริการของเรา รวมถึงการรวบรวมและประมวลผลข้อมูลส่วนบุคคลของคุณในระหว่างการให้บริการ \nหากคุณยอมรับข้อความข้อตกลงดังกล่าวข้างต้น โปรดคลิก \"ยอมรับ\" เพื่อเริ่มใช้ %@. \nผู้เยาว์จำเป็นต้องอ่านข้อความข้อตกลงดังกล่าวข้างต้นโดยมีผู้ปกครองร่วม และใช้ %@ ด้วยความยินยอมและการร่วมกันของผู้ปกครอง เราจะปกป้องข้อมูลส่วนบุคคลของคุณตามมาตรฐานเทคโนโลยีความปลอดภัยของอุตสาหกรรม.";
+"AA0686" = "กรุณานำเข้าหมายเลขโทรศัพท์ หรืออิเมล์";
+"AA0687" = "กรุณานำเข้าหมายเลขโทรศัพท์ หรืออิเมล์";
+"AA0688" = "ป้อนบัญชี %@ ของอุปกรณ์ที่จะแบ่งปัน";
+"AA0689" = "โปรดลองขั้นตอนต่อไปนี้และลองอีกครั้ง \n1. กดปุ่มรีเซ็ตค้างไว้เพื่อรีเซ็ตอุปกรณ์ \n2. โปรดตรวจสอบว่าอุปกรณ์เชื่อมต่อกับแหล่งจ่ายไฟหรือไม่ \n3. โปรดตรวจสอบว่าอุปกรณ์เสาอากาศหลวมหรือไม่ \n4. โปรดตรวจสอบให้แน่ใจว่าการสื่อสารสัญญาณ 4G ปัจจุบันเป็นปกติ";
+"AA0690" = "กล้องต่ำเกินไปโปรดอัพเกรดในสถานะของไฟฟ้า ~";
+"AA0691" = "คุณกําลังใช้เครือข่ายที่ไม่ใช่ WLAN และจะมีค่าใช้จ่ายการจราจรสําหรับการเล่น";
+"AA0692" = "เห็น %@";
+"AA0693" = "แอปต้องการใช้ข้อมูลการจัดเก็บของคุณ";
