--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/tr.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/tr.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Güçlü";
 "AA0030" = "Girdikleriniz uyuşmuyor";
 "AA0031" = "Parola Al";
-"AA0032" = "reoqoo kimliğini girin";
+"AA0032" = "kimliğini girin";
 "AA0033" = "Böyle bir hesap bulunamadı";
 "AA0034" = "Lütfen doğrulama kodunu giriniz";
 "AA0035" = "Doğrulama kodu şuraya gönderildi:";
@@ -61,16 +61,16 @@
 "AA0062" = "Cihazda QR kodu tarayın ve ekleyin";
 "AA0063" = "Fener";
 "AA0064" = "Fotoğraf albümü";
-"AA0065" = "reoqoo kameranızı kullanmak istiyor";
+"AA0065" = "APP kameranızı kullanmak istiyor";
 "AA0066" = "Cihazı bağlamak ve bağlamak için QR kodunu taramanız gerekir. o kamerayı açmak için izin verilir?";
 "AA0067" = "Reddet";
 "AA0068" = "Kamera izni yok, lütfen Ayarlarda etkinleştirin";
-"AA0069" = "reoqoo konum bilgilerinizi kullanmak istiyor";
+"AA0069" = "APP konum bilgilerinizi kullanmak istiyor";
 "AA0070" = "Başarıyla ekipman eklendi için, Wi-Fi bilgi almak için Konum Hizmetlerinin kullanımına izin gerekiyor.Konum Hizmetleri'ni açın.";
 "AA0071" = "Konum izni yok, lütfen ayarlardan etkinleştirin";
-"AA0072" = "reoqoo, albüm bilgilerinize erişmek istiyor";
+"AA0072" = "APP, albüm bilgilerinize erişmek istiyor";
 "AA0073" = "Resmi görüntülemeniz ve göndermeniz gerekir. Albüm açılmasına izin verildi mi?";
-"AA0074" = "reoqoo, Bluetooth bilgilerinizden yararlanmak istiyor";
+"AA0074" = "APP, Bluetooth bilgilerinizden yararlanmak istiyor";
 "AA0075" = "Akıllı cihazların ekleme sırasında Wi-Fi'ye bağlanmasına yardımcı olmak için Bluetooth izni gerekiyor. İzin verilsin mi?";
 "AA0076" = "Bluetooth izni yok, lütfen ayarlardan etkinleştirin";
 "AA0077" = "Cihazı yukarıdaki talimatlara göre ayarladınız mı?";
@@ -145,7 +145,7 @@
 "AA0146" = "Yalnızca X tane ziyaretçi ekleyebilirsiniz, başkalarına paylaşmak istiyorsanız lütfen önce bazı ziyaretçileri siliniz!";
 "AA0147" = "Paylaşımı yönetin";
 "AA0148" = "Cihazı paylaşmak için reoqoo hesabını girin";
-"AA0149" = "Lütfen reoqoo hesabını giriniz";
+"AA0149" = "kimliğini girin";
 "AA0150" = "Son paylaşılan";
 "AA0151" = "Yüz yüze paylaşma";
 "AA0152" = "Paylaş";
@@ -154,7 +154,7 @@
 "AA0155" = "Zaten bu arkadaşla paylaşıldı";
 "AA0156" = "Başarıyla paylaşıldı";
 "AA0157" = "Geçerli olduğu tarih";
-"AA0158" = "Cihazı paylaşmak için yukarıdaki QR kodu reoqoo uygulaması ile tarayın";
+"AA0158" = "Cihazı paylaşmak için yukarıdaki QR kodu APP uygulaması ile tarayın";
 "AA0159" = "Zaten paylaşılan arkadaşlar";
 "AA0160" = "QR kodu alınamadı, güncellemek için tıklayın";
 "AA0161" = "%@ sizinle bir cihaz paylaştı";
@@ -223,7 +223,7 @@
 "AA0224" = "Reoqoo Hakkında";
 "AA0225" = "Mesaj Merkezi";
 "AA0226" = "Başarılı operasyon";
-"AA0227" = "En son haberleri zamanında almak için Youkanto APP'nin bildirim iznini açın";
+"AA0227" = "En son haberleri zamanında almak için %@ APP'nin bildirim iznini açın";
 "AA0228" = "Başka mesaj yok";
 "AA0229" = "Ekran görüntüsü veya video yok";
 "AA0230" = "Seç";
@@ -538,17 +538,17 @@
 "AA0542" = "İndirme başarısız oldu, cihazın ağ bağlantısını kontrol edin ve tekrar deneyin";
 "AA0543" = "Yükseltme başarısız oldu, lütfen cihazı yeniden başlatın ve tekrar deneyin";
 "AA0544" = "Güncelleniyor...";
-"AA0545" = "Reoqoo Kullanıcı Sözleşmesi ve Gizlilik Politikasını okudum ve kabul ediyorum";
+"AA0545" = "Kullanıcı Sözleşmesi ve Gizlilik Politikasını okudum ve kabul ediyorum";
 "AA0546" = "kamera";
 "AA0547" = "fotoğraf";
 "AA0548" = "Video";
-"AA0549" = "Reoqoo, QR kod tarama özelliğini kullanmak için albüm erişimine izin vermenizi gerekiyor";
-"AA0550" = "reoqoo, cihaz QR kodunu sistem albümüne kaydetmek için albüm erişim izni gerektirir.";
-"AA0551" = "reoqoo, kare kod tarama özelliği için kamera izni gerektirir.";
-"AA0552" = "reoqoo, Bluetooth cihazlarına erişmek için izniniz gereklidir.";
-"AA0553" = "reoqoo, intercom özelliğini kullanmak için mikrofon izni gerektirir.";
-"AA0554" = "reoqoo, cihaz bağlantısı için yerel ağa erişim izni gerektirir.";
-"AA0555" = "reoqoo, cihazdan gelen bildirimleri almak için push bildirim izni gerektirir.";
+"AA0549" = "APP, QR kod tarama özelliğini kullanmak için albüm erişimine izin vermenizi gerekiyor";
+"AA0550" = "APP, cihaz QR kodunu sistem albümüne kaydetmek için albüm erişim izni gerektirir.";
+"AA0551" = "APP, kare kod tarama özelliği için kamera izni gerektirir.";
+"AA0552" = "APP, Bluetooth cihazlarına erişmek için izniniz gereklidir.";
+"AA0553" = "APP, intercom özelliğini kullanmak için mikrofon izni gerektirir.";
+"AA0554" = "APP, cihaz bağlantısı için yerel ağa erişim izni gerektirir.";
+"AA0555" = "APP, cihazdan gelen bildirimleri almak için push bildirim izni gerektirir.";
 "AA0556" = "Cihaz Kimliği:";
 "AA0557" = "Yerel ağ erişimi yok. Lütfen ayarlardan açın.";
 "AA0558" = "QR Kod oluşturma başarısız oldu.";
@@ -603,13 +603,13 @@
 "AA0607" = "Sorunların doğru tespiti için";
 "AA0608" = "En az 10 karakter";
 "AA0609" = "Daha fazlasına eriş";
-"AA0610" = "Reoqoo yalnızca bazı fotoğraflara erişebilir. 'Tüm fotoğraflara' erişime izin vermek önerilir. Ayarlamak için tıklayın.";
-"AA0611" = "reoqoo'nun albüme erişimi yok, ayarlamak için dokunun";
+"AA0610" = "APP yalnızca bazı fotoğraflara erişebilir. 'Tüm fotoğraflara' erişime izin vermek önerilir. Ayarlamak için tıklayın.";
+"AA0611" = "APP'nun albüme erişimi yok, ayarlamak için dokunun";
 "AA0612" = "Lütfen önerilerinizi veya karşılaştığınız sorunları ayrıntılı olarak açıklayın";
 "AA0613" = "Mesaj bildirim ayarları";
 "AA0614" = "Sistem izin ayarları";
 "AA0615" = "Mesaj bildirim bildirimi";
-"AA0616" = "Açıldığında, reoqoo Uygulamasının en son haberlerini zamanında alabilirsiniz";
+"AA0616" = "Açıldığında, APP Uygulamasının en son haberlerini zamanında alabilirsiniz";
 "AA0617" = "Yetkilendir";
 "AA0618" = "Açık";
 "AA0619" = "Yer";
@@ -626,7 +626,7 @@
 "AA0630" = "Açıldıktan sonra küçük pencerede video oynatma ve gözlem zili bildirim fonksiyonlarını kullanabilirsiniz";
 "AA0631" = "Arka plan açılır pencere arayüzü";
 "AA0632" = "Açıldıktan sonra gözlem zili bildirimlerini alabilirsiniz";
-"AA0633" = "Daha iyi bir kullanıcı deneyimi sunmak için, reoqoo belirli durumlarda aşağıdaki sistem izinlerini talep eder.";
+"AA0633" = "Daha iyi bir kullanıcı deneyimi sunmak için, APP belirli durumlarda aşağıdaki sistem izinlerini talep eder.";
 "AA0634" = "İzin Verildi";
 "AA0635" = "İzin Verilmedi";
 "AA0636" = "Yerel Ağ";
@@ -657,5 +657,29 @@
 "AA0663" = "Kullanmaya devam etmek için lütfen \"Xiaotun Cloud\" uygulamasını indirin";
 "AA0664" = "Tekrar Hatırlatma";
 "AA0665" = "Hakkında";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Lütfen hesap girin";
+"AA0670" = "Kullanıcı Sözleşmesi ve Gizlilik Politikası";
+"AA0671" = "Xiaotun'a hoş geldiniz! Xiaotun, reoqoo IoT Technology Co., Ltd. (bundan sonra \"biz\" olarak anılacaktır) tarafından geliştirilmiş ve işletilmektedir. Xiaotun ile akıllı kameraları kullanabilir ve yönetebilirsiniz.";
+"AA0672" = "Xiaotun kullanmadan önce, lütfen \"%@\" ve \"%@\" dikkatlice okuyun ve tam olarak anlayın, böylece hizmetlerimizi ve hizmet sırasında kişisel bilgilerinizi nasıl topladığımızı ve işlediğimizi anlayın.";
+"AA0673" = "Yukarıda bahsedilen anlaşmayı kabul ediyorsanız, Xiaotun'yu kullanmaya başlamak için \"Kabul Et\"i tıklayın.";
+"AA0674" = "Reşit olmayanlar, yukarıda belirtilen sözleşme metnini bir veli eşliğinde okumalı ve velinin onayı ve varlığı ile Xiaotun kullanmalıdır.";
+"AA0675" = "Kişisel bilgilerinizi 'Ben' sayfasında yönetebilirsiniz. Kişisel bilgilerinizi endüstri güvenlik teknolojisi standartlarına göre koruyacağız.";
+"AA0676" = "Kullanım sırasında aşağıdaki izinleri de isteyebiliriz: Bluetooth, Konum, Kamera, Fotoğraf Kitaplığı, Depolama, Mikrofon, Cihaz Bilgisi, Yerel Ağ, Takvim, Bildirimler. İzin ayarlarını düzenlemek için her zaman izin yönetimine gidebilirsiniz.";
+"AA0677" = "Sayın Kullanıcı, kişisel haklarınızı daha iyi korumak için en son yasa ve düzenlemeler ile iş uygulamalarımıza uygun olarak %@ güncellenmiştir. Bu nedenle size bu bildirimi gönderiyoruz.\nLütfen kullanmadan önce dikkatlice okuyun. Kabul et düğmesine tıklayarak, güncellenen şartları okuyup anladığınızı ve güncellenen politikayı kabul ettiğinizi belirtirsiniz. Yetkilendirmeniz ve onayınız doğrultusunda kişisel bilgilerinizi işleyeceğiz ve size hizmet sağlayacağız.\n\nSorularınız varsa lütfen bizimle iletişime geçin:\nE-posta: %@";
+"AA0678" = "reoqoo'ya hoş geldiniz! reoqoo, reoqoo IoT Technology Co., Ltd. (bundan sonra \"biz\" olarak anılacaktır) tarafından geliştirilmiş ve işletilmektedir. Akıllı kameraları reoqoo aracılığıyla kullanabilir ve yönetebilirsiniz.";
+"AA0679" = "reoqoo'yu kullanmadan önce, 《%@》 ve 《%@》'yi okuyun ve tam olarak anlayın, böylece hizmetlerimizi ve hizmet sırasında kişisel bilgilerinizi nasıl topladığımızı ve işlediğimizi anlayabilirsiniz.";
+"AA0680" = "Yukarıda bahsedilen anlaşmayı kabul ediyorsanız, reoqoo'yu kullanmaya başlamak için \"Kabul Et\"i tıklayın.";
+"AA0681" = "Reşit olmayanlar, yukarıda bahsedilen anlaşma metnini bir veli eşliğinde okumalı ve bir velinin onayı ve eşliğinde reoqoo'yu kullanmalıdır.";
+"AA0682" = "Kabul Etme ve Uygulamadan Çık";
+"AA0683" = "Sözleşme Güncelleme Hatırlatması";
+"AA0684" = "Kamera Kullanıcı Sözleşmesi";
+"AA0685" = "%@ kullanımına hoş geldiniz! %@, %@ (bundan sonra \"biz\" olarak anılacaktır) tarafından geliştirilmiştir ve işletilmektedir. %@ üzerinden akıllı kameraları kullanabilir ve yönetebilirsiniz. \n%@'ı kullanmadan önce lütfen %@%@'ı dikkatlice okuyun ve tam olarak anlayın, böylece hizmetlerimizi ve hizmet sürecinde kişisel bilgilerinizin toplanması ve işlenmesi hakkında bilgi sahibi olabilirsiniz. \nYukarıda belirtilen sözleşme metnini kabul ediyorsanız, \"Kabul Ediyorum\" seçeneğine tıklayarak %@'ı kullanmaya başlayın. \nReşit olmayanlar, yukarıda belirtilen sözleşme metnini bir veli eşliğinde okumalı ve velinin onayı ve eşliğinde %@'ı kullanmalıdır. Kişisel bilgilerinizi endüstri güvenlik teknolojisi standartlarına göre koruyacağız.";
+"AA0686" = "Lütfen telefon numaranızı veya e-posta adresinizi girin";
+"AA0687" = "Lütfen telefon numaranızı veya e-posta adresinizi girin";
+"AA0688" = "Cihazı paylaşmak için %@ hesabını girin";
+"AA0689" = "Lütfen aşağıdaki işlemleri deneyin ve tekrar deneyin:\n1. Cihazı sıfırlamak için sıfırlama düğmesine basılı tutun;\n2. Lütfen cihazın güç kaynağına bağlı olup olmadığını kontrol edin;\n3. Lütfen cihaz anteninin gevşek olup olmadığını kontrol edin;\n4. Lütfen mevcut 4G sinyal iletişiminin normal olduğundan emin olun.";
+"AA0690" = "Kamera çok düşük, lütfen bir elektrik halinde yükseltin ~";
+"AA0691" = "Wi-Fi dışı bir ağ kullanıyor, oynatmak veri maliyeti oluşturabilir";
+"AA0692" = "Görüldü %@";
+"AA0693" = "Uygulama depolama bilgilerinizi kullanmak istiyor";
