--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/vi.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/vi.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "Mạnh";
 "AA0030" = "Hai lần đăng nhập không đồng nhất";
 "AA0031" = "Lấy lại mật khẩu";
-"AA0032" = "Vui lòng nhập tài khoản reoqoo của bạn";
+"AA0032" = "Vui lòng nhập tài khoản của bạn";
 "AA0033" = "Tài khoản không tồn tại";
 "AA0034" = "Vui lòng nhập mã xác nhận";
 "AA0035" = "Mã xác minh đã được gửi đến";
@@ -62,16 +62,16 @@
 "AA0062" = "Quét mã QR trên thân thiết bị để thêm thiết bị";
 "AA0063" = "Đèn pin";
 "AA0064" = "Album ảnh";
-"AA0065" = "reoqoo muốn sử dụng máy ảnh của bạn";
+"AA0065" = "APP muốn sử dụng máy ảnh của bạn";
 "AA0066" = "Bạn cần quét mã QR để kết nối và ràng buộc các thiết bị. Có được phép mở camera không?";
 "AA0067" = "Từ chối";
 "AA0068" = "Không có quyền đối với máy ảnh, vui lòng bật trong Cài đặt";
-"AA0069" = "reoqoo muốn sử dụng thông tin vị trí của bạn";
+"AA0069" = "APP muốn sử dụng thông tin vị trí của bạn";
 "AA0070" = "Để thiết bị thêm thành công, bạn cần cho phép việc sử dụng các dịch vụ Location để nhận thông tin Wi-Fi. Hãy bật Location Services";
 "AA0071" = "Không có quyền định vị, vui lòng bật quyền trong Cài đặt";
-"AA0072" = "Có cho phép reoqoo sử dụng thông tin album của bạn";
+"AA0072" = "Có cho phép APP sử dụng thông tin album của bạn";
 "AA0073" = "Cần xem và gửi hình. Có được phép mở album không?";
-"AA0074" = "Có cho phép reoqoo sử dụng thông tin Bluetooth của bạn";
+"AA0074" = "Có cho phép APP sử dụng thông tin Bluetooth của bạn";
 "AA0075" = "Cần có quyền Bluetooth để giúp các thiết bị thông minh kết nối với Wi-Fi trong quá trình thêm. Có cho phép?";
 "AA0076" = "Không có quyền Bluetooth, vui lòng bật quyền trong Cài đặt";
 "AA0077" = "Bạn có thao tác thiết bị theo hướng dẫn trên chưa?";
@@ -146,7 +146,7 @@
 "AA0146" = "Chỉ có thể chia sẻ cho tối đa %@ người, nếu muốn tiếp tục chia sẻ cho người khác, xin hãy xóa bớt một số khách!";
 "AA0147" = "Chia sẻ quản lý";
 "AA0148" = "Nhập tài khoản reoqoo bạn muốn chia sẻ thiết bị";
-"AA0149" = "Vui lòng nhập tài khoản reoqoo của bạn";
+"AA0149" = "Vui lòng nhập tài khoản của bạn";
 "AA0150" = "Chia sẻ gần đây";
 "AA0151" = "Chia sẻ ngay";
 "AA0152" = "Chia sẻ";
@@ -155,7 +155,7 @@
 "AA0155" = "Đã chia sẻ với người bạn này";
 "AA0156" = "Chia sẻ thành công";
 "AA0157" = "Có hiệu lực đến";
-"AA0158" = "Sử dụng APP reoqoo để quét mã QR ở trên để chia sẻ thiết bị";
+"AA0158" = "Sử dụng APP để quét mã QR ở trên để chia sẻ thiết bị";
 "AA0159" = "Những người bạn đã chia sẻ";
 "AA0160" = "Không lấy được mã QR, nhấn vào để làm mới";
 "AA0161" = "%@ đã chia sẻ một thiết bị cho bạn";
@@ -224,7 +224,7 @@
 "AA0224" = "Về reoqoo";
 "AA0225" = "Trung tâm Tin nhắn";
 "AA0226" = "Thao tác thành công";
-"AA0227" = "Bật quyền thông báo của Ứng dụng reoqoo để nhận tin tức mới nhất kịp thời";
+"AA0227" = "Bật quyền thông báo của Ứng dụng %@ để nhận tin tức mới nhất kịp thời";
 "AA0228" = "Không có thông tin";
 "AA0229" = "Bạn không có ảnh chụp màn hình hoặc video";
 "AA0230" = "Lựa chọn";
@@ -545,13 +545,13 @@
 "AA0546" = "Máy ảnh";
 "AA0547" = "Bức ảnh";
 "AA0548" = "Video";
-"AA0549" = "reoqoo cần bạn cấp quyền truy cập Album để sử dụng tính năng quét mã QR";
-"AA0550" = "reoqoo cần bạn cấp quyền sử dụng Album để lưu mã QR của thiết bị vào Album hệ thống";
-"AA0551" = "reoqoo cần bạn cấp quyền sử dụng Camera để sử dụng tính năng quét mã QR";
-"AA0552" = "reoqoo cần bạn cấp quyền sử dụng Bluetooth để truy cập các thiết bị Bluetooth";
-"AA0553" = "reoqoo cần bạn cấp quyền sử dụng Micrô để sử dụng tính năng liên lạc nội bộ";
-"AA0554" = "reoqoo cần bạn cấp quyền truy cập mạng cục bộ để kết nối thiết bị";
-"AA0555" = "reoqoo cần bạn cấp quyền tính năng đẩy để chấp nhận thông báo đẩy của thiết bị";
+"AA0549" = "APP cần bạn cấp quyền truy cập Album để sử dụng tính năng quét mã QR";
+"AA0550" = "APP cần bạn cấp quyền sử dụng Album để lưu mã QR của thiết bị vào Album hệ thống";
+"AA0551" = "APP cần bạn cấp quyền sử dụng Camera để sử dụng tính năng quét mã QR";
+"AA0552" = "APP cần bạn cấp quyền sử dụng Bluetooth để truy cập các thiết bị Bluetooth";
+"AA0553" = "APP cần bạn cấp quyền sử dụng Micrô để sử dụng tính năng liên lạc nội bộ";
+"AA0554" = "APP cần bạn cấp quyền truy cập mạng cục bộ để kết nối thiết bị";
+"AA0555" = "APP cần bạn cấp quyền tính năng đẩy để chấp nhận thông báo đẩy của thiết bị";
 "AA0556" = "ID thiết bị:";
 "AA0557" = "Không có quyền truy cập thiết bị mạng LAN cục bộ, vui lòng bật trong Cài đặt";
 "AA0558" = "Không thể tạo mã QR của thiết bị";
@@ -606,13 +606,13 @@
 "AA0607" = "Để tiện xác định vị trí vấn đề chính xác";
 "AA0608" = "Tối thiểu 10 từ";
 "AA0609" = "Truy cập nhiều hơn";
-"AA0610" = "reoqoo chỉ có thể truy cập một số ảnh trong album, nên cho phép truy cập vào `tất cả ảnh`, nhấn vào tới cài đặt";
-"AA0611" = "reoqoo không có quyền truy cập album, nhấn vào để cài đặt";
+"AA0610" = "APP chỉ có thể truy cập một số ảnh trong album, nên cho phép truy cập vào `tất cả ảnh`, nhấn vào tới cài đặt";
+"AA0611" = "APP không có quyền truy cập album, nhấn vào để cài đặt";
 "AA0612" = "Vui lòng mô tả chi tiết đề xuất hoặc vấn đề bạn gặp phải";
 "AA0613" = "Cài đặt đẩy tin nhắn";
 "AA0614" = "Cài đặt quyền hệ thống";
 "AA0615" = "Thông báo đẩy tin nhắn";
-"AA0616" = "Sau khi bật, có thể nhận thông tin mới nhất từ APP reoqoo";
+"AA0616" = "Sau khi bật, có thể nhận thông tin mới nhất từ APP APP";
 "AA0617" = "Đến ủy quyền";
 "AA0618" = "Đã mở";
 "AA0619" = "Vị trí";
@@ -629,7 +629,7 @@
 "AA0630" = "Sau khi bật, có thể dùng tính năng phát lại cửa sổ nhỏ của video giám sát, cửa sổ nổi chuông giám sát";
 "AA0631" = "Giao diện bật lên trong nền";
 "AA0632" = "Sau khi bật, có thể nhận được thông báo về chuông giám sát";
-"AA0633" = "Để cung cấp cho bạn trải nghiệm người dùng tốt hơn, reoqoo sẽ xin bạn cấp quyền hệ thống điện thoại sau trong các trường hợp cụ thể";
+"AA0633" = "Để cung cấp cho bạn trải nghiệm người dùng tốt hơn, APP sẽ xin bạn cấp quyền hệ thống điện thoại sau trong các trường hợp cụ thể";
 "AA0634" = "Đã ủy quyền";
 "AA0635" = "Chưa ủy quyền";
 "AA0636" = "Mạng nội bộ";
@@ -660,5 +660,29 @@
 "AA0663" = "Vui lòng tải xuống ứng dụng \"Xiaotun Cloud\" để tiếp tục sử dụng";
 "AA0664" = "Không nhắc lại";
 "AA0665" = "Về";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "Vui lòng nhập tài khoản";
+"AA0670" = "Thỏa thuận Người dùng và Chính sách Bảo mật";
+"AA0671" = "Chào mừng bạn đến với Xiaotun! Xiaotun được phát triển và vận hành bởi reoqoo IoT Technology Co., Ltd. (sau đây gọi là \"chúng tôi\"). Bạn có thể sử dụng Xiaotun để quản lý và sử dụng camera thông minh.";
+"AA0672" = "Trước khi sử dụng Xiaotun, vui lòng đọc và hiểu đầy đủ \"%@\" và \"%@\" để hiểu về dịch vụ của chúng tôi và cách chúng tôi thu thập và xử lý thông tin cá nhân của bạn trong quá trình dịch vụ.";
+"AA0673" = "Nếu bạn đồng ý với thỏa thuận nêu trên, vui lòng nhấp vào \"Đồng ý\" để bắt đầu sử dụng Xiaotun.";
+"AA0674" = "Người chưa thành niên cần đọc văn bản thỏa thuận nêu trên dưới sự đồng hành của người giám hộ và sử dụng Xiaotun với sự đồng ý và sự hiện diện của người giám hộ.";
+"AA0675" = "Bạn có thể quản lý thông tin cá nhân của mình trên trang 'Tôi'. Chúng tôi sẽ bảo vệ thông tin cá nhân của bạn theo các tiêu chuẩn công nghệ bảo mật của ngành.";
+"AA0676" = "Trong quá trình sử dụng, chúng tôi cũng có thể yêu cầu các quyền sau: Bluetooth, Vị trí, Máy ảnh, Thư viện ảnh, Lưu trữ, Microphone, Thông tin thiết bị, Mạng cục bộ, Lịch, Thông báo. Bạn có thể truy cập quản lý quyền để điều chỉnh cài đặt quyền bất cứ lúc nào.";
+"AA0677" = "Kính gửi người dùng, để bảo vệ tốt hơn quyền lợi cá nhân của bạn, chúng tôi đã cập nhật %@ theo các luật và quy định mới nhất cũng như thực tiễn kinh doanh của chúng tôi. Chúng tôi gửi đến bạn thông báo này.\nVui lòng đọc kỹ trước khi sử dụng. Bằng cách nhấp vào nút đồng ý, bạn cho biết rằng bạn đã đọc và hiểu các điều khoản cập nhật và đồng ý bị ràng buộc bởi chính sách cập nhật. Chúng tôi sẽ xử lý thông tin cá nhân của bạn và cung cấp dịch vụ dựa trên sự ủy quyền và đồng ý của bạn.\n\nNếu bạn có thắc mắc, vui lòng liên hệ với chúng tôi:\nEmail: %@";
+"AA0678" = "Chào mừng bạn đến với reoqoo! reoqoo được phát triển và vận hành bởi reoqoo IoT Technology Co., Ltd. (sau đây gọi là \"chúng tôi\"). Bạn có thể sử dụng và quản lý camera thông minh thông qua reoqoo.";
+"AA0679" = "Trước khi sử dụng reoqoo, vui lòng đọc và hiểu rõ 《%@》 và 《%@》 để bạn có thể hiểu được dịch vụ của chúng tôi và cách chúng tôi thu thập và xử lý thông tin cá nhân của bạn trong quá trình dịch vụ.";
+"AA0680" = "Nếu bạn đồng ý với thỏa thuận nêu trên, vui lòng nhấp vào \"Đồng ý\" để bắt đầu sử dụng reoqoo.";
+"AA0681" = "Người chưa thành niên cần đọc văn bản thỏa thuận nêu trên khi có người giám hộ đi kèm, và sử dụng reoqoo với sự đồng ý và có người giám hộ đi kèm.";
+"AA0682" = "Không đồng ý và thoát ứng dụng";
+"AA0683" = "Nhắc nhở Cập nhật Thỏa thuận";
+"AA0684" = "Thỏa thuận người dùng camera";
+"AA0685" = "Chào mừng bạn sử dụng %@! %@ được phát triển và vận hành bởi %@ (sau đây gọi là \"chúng tôi\"). Bạn có thể sử dụng và quản lý camera thông minh thông qua %@. \nTrước khi sử dụng %@, vui lòng đọc kỹ và hiểu rõ %@%@, để bạn hiểu rõ về dịch vụ của chúng tôi, cũng như việc thu thập và xử lý thông tin cá nhân của bạn trong quá trình sử dụng dịch vụ. \nNếu bạn đồng ý với văn bản thỏa thuận nêu trên, vui lòng nhấp vào \"Đồng ý\" để bắt đầu sử dụng %@. \nNgười chưa thành niên cần đọc văn bản thỏa thuận nêu trên khi có người giám hộ đi kèm, và sử dụng %@ với sự đồng ý và đi kèm của người giám hộ. Chúng tôi sẽ bảo vệ thông tin cá nhân của bạn theo tiêu chuẩn công nghệ an ninh của ngành.";
+"AA0686" = "Vui lòng nhập số điện thoại hoặc hòm thư";
+"AA0687" = "Vui lòng nhập số điện thoại hoặc hòm thư";
+"AA0688" = "Nhập tài khoản %@ bạn muốn chia sẻ thiết bị";
+"AA0689" = "Vui lòng thử các thao tác sau và thử lại:\n1. Nhấn và giữ nút đặt lại để đặt lại thiết bị;\n2. Vui lòng kiểm tra xem thiết bị có được kết nối với nguồn điện hay không;\n3. Vui lòng kiểm tra xem ăng-ten của thiết bị có bị lỏng hay không;\n4. Vui lòng đảm bảo rằng giao tiếp tín hiệu 4G hiện tại là bình thường.";
+"AA0690" = "Máy ảnh quá thấp, vui lòng nâng cấp trong trạng thái điện ~";
+"AA0691" = "Đang sử dụng mạng không phải WLAN. Phát sẽ phải chịu phí lưu lượng";
+"AA0692" = "Nhìn thấy %@";
+"AA0693" = "Ứng dụng muốn sử dụng thông tin lưu trữ của bạn";
