--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hant.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hant.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 "AA0007" = "我已閱讀並同意";
 "AA0008" = "用戶協議";
 "AA0009" = "隱私協議";
+"AA0010" = "同意";
 "AA0011" = "不同意";
 "AA0012" = "請輸入正確的郵箱或手機號";
 "AA0013" = "賬號或密碼錯誤";
@@ -28,7 +29,7 @@
 "AA0029" = "強";
 "AA0030" = "兩次輸入不一致";
 "AA0031" = "找回密碼";
-"AA0032" = "請輸入reoqoo帳號";
+"AA0032" = "請輸入帳號";
 "AA0033" = "帳戶不存在";
 "AA0034" = "請輸入驗證碼";
 "AA0035" = "驗證碼已發送至";
@@ -61,16 +62,16 @@
 "AA0062" = "掃描設備機身二維碼添加設備";
 "AA0063" = "手電筒";
 "AA0064" = "相冊";
-"AA0065" = "reoqoo想使用您的相機";
+"AA0065" = "APP想使用您的相機";
 "AA0066" = "需要掃描二維碼進行連接和綁定設備，是否允許打開相機？";
 "AA0067" = "拒絕";
 "AA0068" = "沒有相機權限，請在設置中開啟";
 "AA0069" = "APP想使用您的定位信息";
 "AA0070" = "需要定位權限來獲取Wi-Fi信息以進行設備添加，請先開啟系統定位";
 "AA0071" = "沒有定位權限，請在設置中開啟";
-"AA0072" = "reoqoo想使用您的相冊信息";
+"AA0072" = "APP想使用您的相冊信息";
 "AA0073" = "需要查看圖片並發送圖片，是否允許打開相冊？";
-"AA0074" = "reoqoo想使用您的藍牙信息";
+"AA0074" = "APP想使用您的藍牙信息";
 "AA0075" = "需要藍牙權限來幫助智能設備在添加過程中連接Wi-Fi，是否允許？";
 "AA0076" = "沒有藍牙權限，請在設置中開啟";
 "AA0077" = "是否已按照上述指引操作設備？";
@@ -145,7 +146,7 @@
 "AA0146" = "最多只能添加%@個訪客，如果要繼續分享給其他人，請先刪除部分訪客!";
 "AA0147" = "共享管理";
 "AA0148" = "輸入要共享設備的reoqoo賬號";
-"AA0149" = "請輸入reoqoo賬號";
+"AA0149" = "請輸入帳號";
 "AA0150" = "最近分享";
 "AA0151" = "面對面分享";
 "AA0152" = "共享";
@@ -223,7 +224,7 @@
 "AA0224" = "關於reoqoo";
 "AA0225" = "消息中心";
 "AA0226" = "操作成功";
-"AA0227" = "開啟reoqoo APP通知權限，及時獲得最新消息";
+"AA0227" = "開啟%@ APP通知權限，及時獲得最新消息";
 "AA0228" = "暫時沒有消息哦";
 "AA0229" = "您還沒有照片或影像哦~";
 "AA0230" = "選擇";
@@ -661,3 +662,28 @@
 "AA0665" = "關於";
 "AA0666" = "小豚當家";
 "AA0669" = "請輸入賬號";
+"AA0670" = "用戶協議和隱私政策";
+"AA0671" = "歡迎您使用小豚當家！小豚當家是由深圳智多豚物聯科技有限公司（以下簡稱“我們”）研發和運營。您可通過小豚當家實現智能攝像頭的使用和管理。";
+"AA0672" = "在您使用小豚當家前，請仔細閱讀並充分理解%@ %@，以便您了解我們的服務，以及在服務過程中收集、處理您個人信息的情況。";
+"AA0673" = "如您同意前述協議文本，請點擊「同意」，開始使用小豚當家。";
+"AA0674" = "未成年人需在監護人陪同下閱讀前述協議文本，並在徵得監護人同意、在其陪同下使用小豚當家。";
+"AA0675" = "您可以在“我的”頁面管理您的個人信息。我們會根據業界安全技術標準保護您的個人信息。";
+"AA0676" = "在您使用過程中，我們可能還向您申請如下權限：藍牙、定位、相機、相冊、存儲、麥克風、設備信息、本地網絡、日曆、通知。您可隨時前往權限管理調整權限授權情況。";
+"AA0677" = "尊敬的用戶，為更好保障您的個人權益，我們依據最新法律法規，結合業務開展情況更新了%@，特向您推送本提示。\n請您在使用前，務必仔細閱讀。如您點擊同意按鈕，即表示您已充分閱讀、理解更新後的條款，並同意受更新後的政策約束。我們將根據您的授權同意處理個人信息並為您提供服務。\n\n如有疑問，可與我們聯繫：\n郵箱：%@";
+"AA0678" = "歡迎您使用reoqoo！reoqoo是由reoqoo IoT Technology Co., Ltd.（以下簡稱「我們」）研發和運營。您可通過reoqoo實現智能攝像頭的使用和管理。";
+"AA0679" = "在您使用reoqoo前，請仔細閱讀並充分理解《%@》《%@》，以便您了解我們的服務，以及在服務過程中收集、處理您個人信息的情況。";
+"AA0680" = "如您同意前述協議文本，請點擊「同意」，開始使用reoqoo。";
+"AA0681" = "未成年人需在監護人陪同下閱讀前述協議文本，並在徵得監護人同意、在其陪同下使用reoqoo。";
+"AA0682" = "不同意並退出APP";
+"AA0683" = "協議更新提醒";
+"AA0684" = "攝像頭用戶協議";
+"AA0685" = "歡迎您使用%@！%@是由%@%@（以下簡稱“我們”）研發和運營。您可通過%@實現智能攝像頭的使用和管理。\n在您使用%@前，請仔細閱讀並充分理解%@%@，以便您了解我們的服務，以及在服務過程中收集、處理您個人信息的情況。\n如您同意前述協議文本，請點擊“同意”，開始使用%@。\n未成年人需在監護人陪同下閱讀前述協議文本，並在徵得監護人同意、在其陪同下使用%@。我們會根據業界安全技術標準保護您的個人信息。";
+"AA0686" = "請輸入您可用於%@帳號注册的郵箱或⼿機號";
+"AA0687" = "請輸入您可用於%@帳號注册的郵箱";
+"AA0688" = "輸入要共享設備的%@賬號";
+"AA0689" = "請嘗試以下操作後重試：\n1.長按復位鍵重置設備；\n2.請檢查設備是否連接電源；\n3.請檢查設備天線是否鬆落；\n4.請確保當前4G信號通信正常。";
+"AA0690" = "攝像機電量過低，請在電量充足的狀態下升級~";
+"AA0691" = "正在使用非WLAN網絡，播放將產生流量費用";
+"AA0692" = "看到 %@";
+"AA0693" = "APP想使用您的儲存資訊";
+"AA0694" = "其他登錄方式";
