--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ko.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ko.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "AA0029" = "강";
 "AA0030" = "두번 입력한 정보가 일치하지 않습니다";
 "AA0031" = "비밀번호 찾기";
-"AA0032" = "reoqoo 아이디를 입력해 주십시오";
+"AA0032" = "아이디를 입력해 주십시오";
 "AA0033" = "가입이 안된 이메일입니다";
 "AA0034" = "인증번호를 입력하세요";
 "AA0035" = "인증번호 발송됨";
@@ -62,16 +62,16 @@
 "AA0062" = "카메라 본체의 QR코드를 스캔하여 추가하기";
 "AA0063" = "손전등";
 "AA0064" = "앨범";
-"AA0065" = "reoqoo의 스마트폰 카메라 사용을 허용하시겠습니까?";
+"AA0065" = "APP의 스마트폰 카메라 사용을 허용하시겠습니까?";
 "AA0066" = "카메라 등록을 위해 QR코드 스캔이 필요합니다. 스마트폰의 카메라 사용을 허용하시겠습니까?";
 "AA0067" = "거부";
 "AA0068" = "기기의 카메라 접근 권한이 없습니다. 설정에서 활성화하세요";
-"AA0069" = "reoqoo의 위치 사용을 허용하시겠습니까?";
+"AA0069" = "APP 의 위치 사용을 허용하시겠습니까?";
 "AA0070" = "카메라 추가 시, 와이파이 정보를 얻기 위해 위치 권한이 필요합니다. 위치 권한을 활성화하세요";
 "AA0071" = "위치 추적 권한이 없습니다. 설정에서 활성화하세요";
-"AA0072" = "reoqoo의 앨범 접근을 허용하시겠습니까?";
+"AA0072" = "APP의 앨범 접근을 허용하시겠습니까?";
 "AA0073" = "사진을 열거나 전송하기 위해 앨범 접근이 필요합니다. 해당 권한을 활성화하세요";
-"AA0074" = "reoqoo의 블루투스 접근을 허용하시겠습니까?";
+"AA0074" = "APP의 블루투스 접근을 허용하시겠습니까?";
 "AA0075" = "카메라 추가 시, 와이파이 연결을 위해 블루투스 권한이 필요합니다. 해당 권한을 허용하시겠습니까?";
 "AA0076" = "블루투스 권한이 없습니다. 설정에서 활성화하세요";
 "AA0077" = "위 설명 내용에 따라 카메라를 조작하셨습니까?";
@@ -146,7 +146,7 @@
 "AA0146" = "최대 %@명까지 공유 가능합니다.";
 "AA0147" = "공유 관리";
 "AA0148" = "카메라를 공유할 reoqoo 계정 입력";
-"AA0149" = "reoqoo 계정을 입력하세요";
+"AA0149" = "아이디를 입력해 주십시오";
 "AA0150" = "최근 공유";
 "AA0151" = "직접 공유";
 "AA0152" = "공유";
@@ -155,7 +155,7 @@
 "AA0155" = "이미 공유한 친구입니다";
 "AA0156" = "공유 성공";
 "AA0157" = "만료시간";
-"AA0158" = "reoqoo APP으로 위의 QR 코드를 스캔하여 카메라 공유";
+"AA0158" = "APP으로 위의 QR 코드를 스캔하여 카메라 공유";
 "AA0159" = "공유한 친구";
 "AA0160" = "QR코드 인식에 실패히였습니다. 새로 고침 버튼을 클릭하세요";
 "AA0161" = "%@님이 카메라를 공유하였습니다";
@@ -219,12 +219,12 @@
 "AA0219" = "펌웨어 업데이트";
 "AA0220" = "설정이 진행 중입니다";
 "AA0221" = "언어";
-"AA0222" = "문제 피드백";
-"AA0223" = "도움과 피드백";
+"AA0222" = "문제점 피드백";
+"AA0223" = "문제점 피드백";
 "AA0224" = "reoqoo 정보";
 "AA0225" = "정보 센터";
 "AA0226" = "설정 성공";
-"AA0227" = "최신 정보를 받을 수 있도록 reoqoo앱에 권한을 허용해 주세";
+"AA0227" = "최신 정보를 받을 수 있도록 %@ 앱에 권한을 허용해 주세";
 "AA0228" = "메시지가 없습니다";
 "AA0229" = "스크린 샷 또는 동영상 없음";
 "AA0230" = "선택";
@@ -238,17 +238,17 @@
 "AA0238" = "이 기록을 삭제하시겠습니까?";
 "AA0239" = "%@건의 기록을 삭제하시겠습니까?";
 "AA0240" = "선택한 내용을 삭제하시겠습니까?";
-"AA0241" = "문제 유형별";
-"AA0242" = "문제 유형 선택";
-"AA0243" = "감시 이상";
-"AA0244" = "경보 기능";
-"AA0245" = "카드 녹화";
-"AA0246" = "클라우드 서비스 녹화";
+"AA0241" = "문제 유형";
+"AA0242" = "문제 유형을 선택해 주세요.";
+"AA0243" = "카메라 연결 / 실시간 영상";
+"AA0244" = "알람기능 관련 문제";
+"AA0245" = "SD 카드 녹화";
+"AA0246" = "클라우드 녹화 관련 문제";
 "AA0247" = "클라우드 서비스";
-"AA0248" = "기타 문제";
+"AA0248" = "기타";
 "AA0249" = "장치 구분";
 "AA0250" = "카메라를 선택하세요";
-"AA0251" = "문제 및 피드백";
+"AA0251" = "문제점 상세 내용";
 "AA0252" = "피드백이나 문제를 자세히 입력해 주세요.";
 "AA0253" = "앱 또는 장치의 로그 정보를 공유함으로써 위치 추적 문제 확인이 가능합니다";
 "AA0254" = "발생 빈도";
@@ -259,15 +259,15 @@
 "AA0259" = "문제가 발생한 시간";
 "AA0260" = "시간 선택";
 "AA0261" = "연락처";
-"AA0262" = "연락 가능한 이메일 주소를 입력하세요";
-"AA0263" = "제출";
+"AA0262" = "연락 가능한 전화번호 또는 이메일을 입력해 주세요.";
+"AA0263" = "보내기";
 "AA0264" = "급한 문제가 있으신 분은 메일로 보내 주시기 바랍니다";
 "AA0265" = "최대 500문까지 입력 가능";
 "AA0266" = "잘못된 전화번호 형식";
 "AA0267" = "잘못된 이메일 형식";
 "AA0268" = "복사 완료";
 "AA0269" = "제출 실패";
-"AA0270" = "제출 완료. 피드백에 감사드립니다";
+"AA0270" = "제출이 완료되었습니다.";
 "AA0271" = "닫기";
 "AA0272" = "시스템 언어 적용";
 "AA0273" = "저장";
@@ -450,7 +450,7 @@
 "AA0451" = "미리 보기(%@)";
 "AA0452" = "최대 %@장의 이미지만 선택할 수 있습니다";
 "AA0453" = "카메라 필름";
-"AA0454" = "카메라를 선택하지 마세요";
+"AA0454" = "장치 선택 안 함";
 "AA0455" = "문의사항과 피드백을 입력해 주세요";
 "AA0456" = "클라우드 서비스 패키지";
 "AA0457" = "월";
@@ -545,13 +545,13 @@
 "AA0546" = "카메라";
 "AA0547" = "사진";
 "AA0548" = "동영상";
-"AA0549" = "reoqoo에서 이미지로 저장된 QR 스캔 기능을 사용하기 위해 앨범 접근을 허용해야 합니다";
-"AA0550" = "reoqoo에서 카메라 QR 코드를 시스템 앨범에 저장하기 위해 앨범 접근을 허용해야 합니다";
-"AA0551" = "reoqoo에서 QR 코드 스캔 기능을 사용하기 위해 카메라 접근을 허용해야 합니다";
-"AA0552" = "reoqoo에서 블루투스 장치에 접근할 수 있도록 블루투스 접근을 허용해야 합니다";
-"AA0553" = "reoqoo에서 통화 기능을 사용할 수 있도록 마이크 접근을 허용해야 합니다";
-"AA0554" = "reoqoo에서 카메라 연결을 위해 로컬 네트워크 접근을 허용해야 합니다";
-"AA0555" = "reoqoo에서 카메라의 Push 알림을 받기 위해 Push 기능을 허용해야 합니다";
+"AA0549" = "APP에서 이미지로 저장된 QR 스캔 기능을 사용하기 위해 앨범 접근을 허용해야 합니다";
+"AA0550" = "APP에서 카메라 QR 코드를 시스템 앨범에 저장하기 위해 앨범 접근을 허용해야 합니다";
+"AA0551" = "APP에서 QR 코드 스캔 기능을 사용하기 위해 카메라 접근을 허용해야 합니다";
+"AA0552" = "APP에서 블루투스 장치에 접근할 수 있도록 블루투스 접근을 허용해야 합니다";
+"AA0553" = "APP에서 통화 기능을 사용할 수 있도록 마이크 접근을 허용해야 합니다";
+"AA0554" = "APP에서 카메라 연결을 위해 로컬 네트워크 접근을 허용해야 합니다";
+"AA0555" = "APP에서 카메라의 Push 알림을 받기 위해 Push 기능을 허용해야 합니다";
 "AA0556" = "카메라 ID:";
 "AA0557" = "로컬 네트워크 접근 권한이 없습니다. 설정에서 활성화하세요";
 "AA0558" = "QR 코드 생성 실패";
@@ -578,7 +578,7 @@
 "AA0579" = "비밀번호를 입력하세요";
 "AA0580" = "전화번호";
 "AA0581" = "이메일";
-"AA0582" = "감지됨 %@";
+"AA0582" = "%@ 감지됨";
 "AA0583" = "듣기 %@";
 "AA0584" = "실행 %@";
 "AA0585" = "낯선 사람";
@@ -596,23 +596,23 @@
 "AA0597" = "복사 완료";
 "AA0598" = "카메라가 꺼져있습니다";
 "AA0599" = "피드백 번호";
-"AA0600" = "여러 건의 사건";
+"AA0600" = "여러 건의 이벤트";
 "AA0601" = "이벤트 보너스";
 "AA0602" = "유효기간 만료";
 "AA0603" = "이벤트가 끝났습니다~";
 "AA0604" = "시스템 알림";
 "AA0605" = "도움과 피드백";
-"AA0606" = "APP 공유/장치 로그";
-"AA0607" = "문제점 파악이 도움이 됩니다";
-"AA0608" = "최소 10글자";
+"AA0606" = "APP 및 장치 Log-data 제공";
+"AA0607" = "(문제 분석을 위해 시스템 데이터 및 로그를 제공합니다.)";
+"AA0608" = "최소 10자 이상";
 "AA0609" = "더보기";
-"AA0610" = "reoqoo는 현재 앨범의 일부 사진만 저장 또는 접근할 수 있습니다, `모든 사진`접근 권한을 허용하세요. 클릭하여 설정하세요";
-"AA0611" = "reoqoo에 앨범 접근 권한이 없습니다. 클릭하여 설정하세요";
-"AA0612" = "당신의 피드백이나 발생한 문제를 구체적으로 설명해주세요";
+"AA0610" = "APP는 현재 앨범의 일부 사진만 저장 또는 접근할 수 있습니다, `모든 사진`접근 권한을 허용하세요. 클릭하여 설정하세요";
+"AA0611" = "APP에 앨범 접근 권한이 없습니다. 클릭하여 설정하세요";
+"AA0612" = "문제 내용을 상세히 설명해 주세요.";
 "AA0613" = "메시지 Push 알림 설정";
 "AA0614" = "시스템 권한 설정";
 "AA0615" = "메시지 Push 알림";
-"AA0616" = "reoqoo APP의 최신 메시지를 즉시 받으실 수 있습니다";
+"AA0616" = "APP의 최신 메시지를 즉시 받으실 수 있습니다";
 "AA0617" = "허용하기";
 "AA0618" = "활성화됨";
 "AA0619" = "위치";
@@ -629,7 +629,7 @@
 "AA0630" = "실시간 및 녹화 영상을 작은 창에서 재생시 필요한 권한입니다";
 "AA0631" = "백그라운드 팝업 화면";
 "AA0632" = "케어벨 알림을 즉시 받을 때, 필요한 권한입니다";
-"AA0633" = "더 좋은 사용 경험을 제공하기 위해, reoqoo는 특정 상황에서 다음과 같은 모바일 시스템 권한 허용을 요청드립니다";
+"AA0633" = "더 좋은 사용 경험을 제공하기 위해, APP는 특정 상황에서 다음과 같은 모바일 시스템 권한 허용을 요청드립니다";
 "AA0634" = "허용됨";
 "AA0635" = "허용 안 됨";
 "AA0636" = "로컬 네트워크";
@@ -660,5 +660,29 @@
 "AA0663" = "계속 사용하려면 \"Xiaotun Cloud\" 앱을 다운로드하십시오";
 "AA0664" = "다시 알리지 않음";
 "AA0665" = "정보";
-"AA0666" = "reoqoo";
+"AA0666" = "XiaoTun";
 "AA0669" = "계정을 입력하세요";
+"AA0670" = "이용약관 및 개인정보 보호정책";
+"AA0671" = "Xiaotun에 오신 것을 환영합니다! Xiaotun은 reoqoo IoT Technology Co., Ltd.(이하 \"우리\")에서 개발 및 운영합니다. Xiaotun을 통해 스마트 카메라를 사용하고 관리할 수 있습니다.";
+"AA0672" = "Xiaotun을(를) 사용하기 전에 \"%@\"와 \"%@\"를 주의 깊게 읽고 충분히 이해하여 당사의 서비스와 서비스 과정에서 귀하의 개인 정보를 수집 및 처리하는 방법을 이해하시기 바랍니다.";
+"AA0673" = "앞서 언급된 계약에 동의하시면 \"동의\"를 클릭하여 Xiaotun를 사용하세요.";
+"AA0674" = "미성년자는 보호자 동반 하에 앞서 언급된 계약 텍스트를 읽고 보호자의 동의와 동반 하에 Xiaotun을 사용해야 합니다.";
+"AA0675" = "'내 정보' 페이지에서 개인 정보를 관리할 수 있습니다. 우리는 업계 보안 기술 표준에 따라 귀하의 개인 정보를 보호합니다.";
+"AA0676" = "사용 중에 다음과 같은 권한을 요청할 수도 있습니다: 블루투스, 위치, 카메라, 사진 라이브러리, 저장소, 마이크, 장치 정보, 로컬 네트워크, 캘린더, 알림. 언제든지 권한 관리로 이동하여 권한 설정을 조정할 수 있습니다.";
+"AA0677" = "안녕하세요, 귀하의 개인 권리를 더 잘 보호하기 위해 최신 법규 및 비즈니스 실무에 따라 %@를 업데이트했습니다. 이에 본 안내를 보내드립니다.\n사용 전 반드시 주의 깊게 읽어보시기 바랍니다. 동의 버튼을 클릭하시면 업데이트된 약관을 충분히 읽고 이해하였으며, 업데이트된 정책에 동의함을 의미합니다. 귀하의 승인 및 동의에 따라 개인 정보를 처리하고 서비스를 제공할 것입니다.\n\n궁금한 점이 있으시면 다음 연락처로 문의해 주세요:\n이메일: %@";
+"AA0678" = "reoqoo를 사용해 주셔서 감사합니다! reoqoo는 reoqoo IoT Technology Co., Ltd.(이하 \"우리\")에서 개발 및 운영합니다. reoqoo를 통해 스마트 카메라를 사용하고 관리할 수 있습니다.";
+"AA0679" = "reoqoo를 사용하기 전에 《%@》 및 《%@》를 주의 깊게 읽고 완전히 이해하여 당사의 서비스와 서비스 과정에서 귀하의 개인 정보를 수집 및 처리하는 방법을 이해하시기 바랍니다.";
+"AA0680" = "앞서 언급된 계약에 동의하시면 \"동의\"를 클릭하여 reoqoo를 사용하세요.";
+"AA0681" = "미성년자는 보호자 동반 하에 앞서 언급된 계약문을 읽고, 보호자의 동의와 동반 하에 reoqoo를 사용해야 합니다.";
+"AA0682" = "동의하지 않고 앱 종료";
+"AA0683" = "약관 업데이트 알림";
+"AA0684" = "카메라 사용자 계약";
+"AA0685" = "%@를 사용해 주셔서 환영합니다! %@는 %@(이하 \"우리\")에서 개발 및 운영합니다. %@를 통해 스마트 카메라를 사용하고 관리할 수 있습니다. \n%@를 사용하기 전에 %@%@를 주의 깊게 읽고 충분히 이해하여 당사의 서비스와 서비스 과정에서 수집 및 처리되는 귀하의 개인 정보에 대해 이해하시기 바랍니다. \n앞서 언급된 계약 내용에 동의하시면 \"동의\"를 클릭하여 %@를 사용하기 시작하십시오. \n미성년자는 보호자 동반 하에 앞서 언급된 계약 내용을 읽고 보호자의 동의를 받아 보호자와 함께 %@를 사용해야 합니다. 당사는 업계 보안 기술 표준에 따라 귀하의 개인 정보를 보호합니다.";
+"AA0686" = "이메일 주소를 입력하세요";
+"AA0687" = "이메일을 입력하세요";
+"AA0688" = "카메라를 공유할 %@ 계정 입력";
+"AA0689" = "다음 작업을 시도한 후 다시 시도하십시오:\n1. 재설정 버튼을 길게 눌러 기기를 재설정하십시오;\n2. 기기가 전원에 연결되어 있는지 확인하십시오;\n3. 기기 안테나가 헐렁한지 확인하십시오;\n4. 현재 4G 신호 통신이 정상인지 확인하십시오.";
+"AA0690" = "카메라가 너무 낮 으면 전기 상태로 업그레이드하십시오 ~";
+"AA0691" = "Wi-Fi가 아닌 모바일 데이터를 사용하고 있으며 재생 시 데이터 요금이 발생할 수 있습니다";
+"AA0692" = "%@ 감지됨";
+"AA0693" = "앱이 저장 정보를 사용하려고 합니다";
