--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hans.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hans.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "AA0001" = "Hello , reoqoo ！";
-"AA0002" = "邮箱/⼿机号";
+"AA0002" = "邮箱/手机号";
 "AA0003" = "密码";
 "AA0004" = "登录";
 "AA0005" = "忘记密码？";
@@ -29,7 +29,7 @@
 "AA0029" = "强";
 "AA0030" = "两次输入不⼀致";
 "AA0031" = "找回密码";
-"AA0032" = "请输入您的reoqoo账号";
+"AA0032" = "请输入您的账号";
 "AA0033" = "账号不存在";
 "AA0034" = "请输入验证码";
 "AA0035" = "验证码已发送⾄";
@@ -62,16 +62,16 @@
 "AA0062" = "扫描设备机身二维码添加设备";
 "AA0063" = "手电筒";
 "AA0064" = "相册";
-"AA0065" = "reoqoo想使用您的相机";
+"AA0065" = "APP想使用您的相机";
 "AA0066" = "需要扫描二维码进行连接和绑定设备，是否允许打开相机？";
 "AA0067" = "拒绝";
 "AA0068" = "没有相机权限，请在设置中开启";
 "AA0069" = "APP想使用您的定位信息";
 "AA0070" = "需要定位权限来获取Wi-Fi信息以进行设备添加，请先开启系统定位";
 "AA0071" = "没有定位权限，请在设置中开启";
-"AA0072" = "reoqoo想使用您的相册信息";
+"AA0072" = "APP想使用您的相册信息";
 "AA0073" = "需要查看图片并发送图片，是否允许打开相册？";
-"AA0074" = "reoqoo想使用您的蓝牙信息";
+"AA0074" = "APP想使用您的蓝牙信息";
 "AA0075" = "需要蓝牙权限来帮助智能设备在添加过程中连接Wi-Fi，是否允许？";
 "AA0076" = "没有蓝牙权限，请在设置中开启";
 "AA0077" = "是否已按照上述指引操作设备？";
@@ -146,7 +146,7 @@
 "AA0146" = "最多只能添加%@个访客，如果要继续分享给其他人，请先删除部分访客!";
 "AA0147" = "共享管理";
 "AA0148" = "输入要共享设备的reoqoo账号";
-"AA0149" = "请输入reoqoo账号";
+"AA0149" = "请输入账号";
 "AA0150" = "最近分享";
 "AA0151" = "面对面分享";
 "AA0152" = "共享";
@@ -224,7 +224,7 @@
 "AA0224" = "关于reoqoo";
 "AA0225" = "消息中心";
 "AA0226" = "操作成功";
-"AA0227" = "开启reoqoo APP通知权限，及时获得最新消息";
+"AA0227" = "开启%@ APP通知权限，及时获得最新消息";
 "AA0228" = "暂时没有消息哦";
 "AA0229" = "您还没有照片或影像哦~";
 "AA0230" = "选择";
@@ -662,3 +662,31 @@
 "AA0665" = "关于";
 "AA0666" = "小豚当家";
 "AA0669" = "请输入账号";
+"AA0670" = "用户协议和隐私政策";
+"AA0671" = "欢迎您使用小豚当家！小豚当家是由深圳智多豚物联技术有限公司（以下简称“我们”）研发和运营。您可通过小豚当家实现智能摄像头的使用和管理。";
+"AA0672" = "在您使用小豚当家前，请仔细阅读并充分理解 %@ %@，以便您了解我们的服务，以及在服务过程中收集、处理您个人信息的情况。";
+"AA0673" = "如您同意前述协议文本，请点击“同意”，开始使用小豚当家。";
+"AA0674" = "未成年人需在监护人陪同下阅读前述协议文本，并在征得监护人同意、在其陪同下使用小豚当家。";
+"AA0675" = "您可以在“我的”页面管理您的个人信息。我们会根据业界安全技术标准保护您的个人信息。";
+"AA0676" = "在您使用过程中，我们可能还向您申请如下权限：蓝牙、定位、相机、相册、存储、麦克风、设备信息、本地网络、日历、通知。您可随时前往权限管理调整权限授权情况。";
+"AA0677" = "尊敬的用户，为更好保障您的个人权益，我们依据最新法律法规，结合业务开展情况更新了%@，特向您推送本提示。\n请您在使用前，务必仔细阅读。如您点击同意按钮，即表示您已充分阅读、理解更新后的条款，并同意受更新后的政策约束。我们将根据您的授权同意处理个人信息并为您提供服务。\n\n如有疑问，可与我们联系：\n邮箱：%@";
+"AA0678" = "欢迎您使用reoqoo！reoqoo是由reoqoo IoT Technology Co., Ltd.（以下简称“我们”）研发和运营。您可通过reoqoo实现智能摄像头的使用和管理。";
+"AA0679" = "在您使用reoqoo前，请仔细阅读并充分理解《%@》《%@》，以便您了解我们的服务，以及在服务过程中收集、处理您个人信息的情况。";
+"AA0680" = "如您同意前述协议文本，请点击“同意”，开始使用reoqoo。";
+"AA0681" = "未成年人需在监护人陪同下阅读前述协议文本，并在征得监护人同意、在其陪同下使用reoqoo。";
+"AA0682" = "不同意并退出APP";
+"AA0683" = "协议更新提醒";
+"AA0684" = "摄像头用户协议";
+"AA0685" = "欢迎您使用%@！%@是由%@%@（以下简称“我们”）研发和运营。您可通过%@实现智能摄像头的使用和管理。\n在您使用%@前，请仔细阅读并充分理解%@%@，以便您了解我们的服务，以及在服务过程中收集、处理您个人信息的情况。\n如您同意前述协议文本，请点击“同意”，开始使用%@。\n未成年人需在监护人陪同下阅读前述协议文本，并在征得监护人同意、在其陪同下使用%@。我们会根据业界安全技术标准保护您的个人信息。";
+"AA0686" = "输入您可用于%@账号注册的邮箱或⼿机号";
+"AA0687" = "输入您可用于%@账号注册的邮箱";
+"AA0688" = "输入要共享设备的%@账号";
+"AA0689" = "请尝试以下操作后重试：\n1.长按复位键重置设备；\n2.请检查设备是否连接电源；\n3.请检查设备天线是否松落；\n4.请确保当前4G信号通信正常。";
+"AA0690" = "摄像机电量过低，请在电量充足的状态下升级~";
+"AA0691" = "正在使用非WLAN网络，播放将产生流量费用";
+"AA0692" = "看到 %@";
+"AA0693" = "APP想使用您的存储信息";
+"AA0694" = "其他登录方式";
+"AA0695" = "一键登录";
+"AA0696" = "其他账号登录/注册";
+"AA0697" = "当前版本暂不支持直接绑定该设备，请下载“智慧生活”APP添加使用。";
